--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,26 +1,19 @@
 ---
-title: 儿童接种疫苗后出现心肌炎等严重副反应
+title: 樱花FM┃局面失控 渥太华宣布进入紧急状态
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014355/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014510/)
 
-##### 翻译：俏如来
-校对: Lish
-剪辑|字幕：向上James
-编辑：守望黎明
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/Nn81iQgMf70SRS_DBaesd9hQ3pn255sTKLTK0c5jmCctLEa9mXsvzjfIz-9Cz15tr68RO9ZL7DgmcRtq7Ch7aeBwfY4QxdrdJa06oi2XkLvhFLYwCNVR0vg-VK2qPHND1fHgWuaC)
+加拿大首都渥太华反对新冠抗疫措施大规模示威活动已延续一周，市长沃森宣布进入紧急状态以控制局势，保障市民及首都安全。他强调，此举反映出，示威活动已对当地居民安全构成“严重危险和威胁”。沃森称，局势有可能“完全失控”，渥太华需要“其它司法手段和政府层面的支持”。
 
-美国疾控中心CDC的官方数据显示，5-11岁儿童注射新冠疫苗之后，出现心脏损伤的风险大幅上升。正常情况下，儿童极少出现心肌炎这类疾病，而新冠病毒又对儿童几乎没有致命危害。所以推行儿童疫苗、将孩子们置于殒患心脏疾病和血栓的巨大风险之下，不仅得不偿失，更是严重的犯罪行为。然而，世界上很多政府却正在冒天下之大不韪，大力强推儿童疫苗。而他们打着的，恰恰是保护少年儿童的旗号。
+此间，千百辆货车继续封锁渥太华市中心的道路，货车司机从上月下旬起在全国范围发动取名为“自由车队”的抗议活动，最初是要求当局取消对从美运货的加拿大卡车司机返回时须提交接种疫苗证明的规定，但现在抗议对象已扩大至特鲁多政府的抗疫政策。警方再度呼吁抗议者离开市中心，并已拘留多人。当局称，对近 100 起案件展开了调查，其中涉及散步仇恨言论。另外，警方已开出数百份罚单，包括危险驾驶和噪音污染。沃森市长称卡车司机“摁喇叭、鸣警笛、放鞭炮，把示威当派对活动”。
 
-视频链接：[Many children before puberty have suffered serious adverse side effects like myocarditis after vaccination](https://twitter.com/vigilantfox/status/1490461534220603392?s=21)
+文字版原文：[局面失控 渥太华宣布进入紧急状态](https://gnews.org/zh-hans/1975657/)
 
-*发布：Mttfly*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
