--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,21 +1,14 @@
 ---
-title: NewSGman┃疫情新闻全球速报（2月1日）
+title: 五月花简报（02/15/2022）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014247/)
+`mayflowertranslate` [轉載自GNews](https://gnews.org/zh-hans/2014454/)
 
-撰稿：东京樱花团/NewSGman
+编辑：波士顿五月花—-冲天一怒
 
-**加拿大总理特鲁多宣布感染新冠病毒️**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/A65BD08E-6196-42F3-873F-E05CBBCA27B4.jpeg)
 
-特鲁多已完全接种了冠状病毒疫苗，并于本月早些时候接受了疫苗加强注射针。
+*发布：思澈*
 
-特鲁多却在31日宣布感染中共新冠病毒，他的两个孩子亦感染病毒，然而他仍在呼吁加拿大人再接种无效疫苗
-
-盖特链接：https://gettr.com/post/prrdj5fdf4
-
-编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
 
 
  
