--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,17 +1,21 @@
 ---
-title: 樱花FM┃德国总理在制裁俄罗斯问题上倾向美国
+title: 樱花FM┃按照中共的防疫清零政策冬奥会开幕式参加者都需要隔离
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014005/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014219/)
 
 音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/hdnHSOUcQfynk1TXLnyydEwEXKL_Lvxwt0ag4RZb9a4hON7NTw1nlq_qfWUw5jW-bUfe3jXTwx-NM3QP3fJbcDZJTOjH_XBYCIzJn9TeG09ODUkyoQFhCGS4dTseCBDQP7agcoeJ)
-在1月7日访问华盛顿特区后，德国总理肖尔茨在与美国总统拜登举行的联合新闻发布会上警告说，如果俄罗斯入侵乌克兰，他将实施 “强有力的、意义深远的制裁”，并表示在制裁俄罗斯问题上将与美国 “一致行动”。
+![](https://lh6.googleusercontent.com/wwl8TOBZ1T1-PSMPaFoJRhvDmvHYO9zLRlns8pK3NexYVd9chSyt0YPqc7U5dI0zDaeoZEq6SsUG2ny816NvbIQBTAbatnHihv4wI1ahIfikn-y3WuQfuhGJ0RNeJ7lY_TrOcEcQ)
+2月8日Q电视新闻消息：出席了北京冬奥会开幕式的巴布亚新几内亚总理马拉佩被确诊感染中共病毒(新冠病毒Covid-19)。
 
-德国拒绝向乌克兰出口武器，至今没有对俄罗斯实施制裁，这让美国对它是否是一个可靠的盟友产生过怀疑。
+根据中共国外交部的消息，马拉佩于本月3日抵达北京，随后的PCR测试结果呈阳性，接受了检查和治疗。
 
-当被问及德国是否是一个可靠的合作伙伴时，拜登说：”德国是可信赖的盟友，美国和德国之间的信任是牢固可靠的。
+马拉佩出席了4日的开幕式，但随后与中共国总理李克强的会晤是通过网络在线进行的。
 
-文字版原文：[德国总理在制裁俄罗斯问题上倾向美国](https://gnews.org/zh-hans/1977398/)
+中共国外交部强调，来自巴布亚新几内亚的访问团在北京逗留期间遵守了疫情防控管理规定。因此，不会带来影响。
+
+这说明北京冬奥会会场内，明明白白的进去了感染者。那么，按照中共国迄今为止对武汉、西安等地居民实施的“一人感染全楼隔离”的清零政策，是不是包括习近平在内的所有参加了冬奥开幕式的人，都是密切接触者，都该隔离呢？
+
+文字版原文：[按照中共的防疫清零政策冬奥会开幕式参加者都需要隔离](https://gnews.org/zh-hans/1975678/)
 
 *编辑：东京樱花团/asket
 发布：东京樱花团/平安卿卿*
