--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,23 +1,31 @@
 ---
-title: 樱花FM┃三笠宮瑤子公主染疫 日本皇室首例中共病毒确诊
+title: USTR发布年度报告聚焦中共国非市场政策
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014509/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014639/)
 
-音频：东京樱花团/战友520
-![](https://lh6.googleusercontent.com/IBpux8JUdJPeTZjz83lSa6mGMrDCplOrJvxlb4bIOC3ZbDsegXpTyU14dbnK244WFZpqYYcds_bUavJdBcn3_Vuxywv0WxJijdLAgLUev1DM5MtMiMMasYCSnyTsH-Qd81qpNvkQ)
-瑤子公主（38岁）在7日出三笠宮瑤子公主殿下被证实感染了中共（新冠）病毒，于1月8日晚被送入皇室医院，这是日本皇室首例确诊。
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-266.jpg)
+[图片源](https://www.newsweekjapan.jp/headlines/world/2021/09/345779.php)
 
-现喉咙痛，8日下午，皇家医院派医生到公主的赤坂住所探诊，并将标本带回进行PCR检测，确诊染疫。
+16日，美国贸易代表办公室（USTR）发布了关于中共国遵守世界贸易组织（WTO）规则状况的年度报告。指出针对中共国的“政府主导的非市场政策及做法”，美国亟待实施新的战略并急需修订相关法规。
 
-虽然瑤子公主除了喉咙痛之外没有其他症状，但是为了慎重起见，8日晚7点半前住进了皇室医院观察治疗。近几日与她有过接触的姐姐虽无任何症状也将接受检查。瑤子公主独自生活，感染的途径无从查明。
+报告指出，特朗普执政期间签署的美中第一阶段贸易协议，未能从根本上解决美方对中共国产业政策及大规模金融资源扶持政策的担忧。
 
-这是第一次在皇室中确认感染中共病毒，日本皇室表示，将继续采取彻底的措施防止感染，接受专家的建议。
+贸易代表戴琪在一份声明中指出，中共国种种行为违背其在加入世贸组织时作出的承诺。一直以来并未支持世贸组织以及世贸组织规则基石的市场原则。相反，在经济贸易方面正在扩大其政府主导的非市场政策。
 
-文字版原文：[三笠宮瑤子公主染疫 日本皇室首例中共病毒确诊](https://gnews.org/zh-hans/1975643/)
+报告指出，中共国正在实施不公平的政策及做法，且已超出几十年前美国制定的许多贸易法律法规。并指出，目前相应法规急需修正，以确保为美国工人和企业提供更公平的竞争环境。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+报告中明确指明，中方没有遵守第一阶段协议中的承诺，包括未做到对猪肉和牛肉中使用的促肥剂（莱克多巴胺）进行风险评估。
+
+信息源：
+
+[ＵＳＴＲ、中国巡る通商報告　非市場的政策に対抗する戦略求める](https://news.yahoo.co.jp/articles/0ac0098abddae0915ab77c21dd1dd24fcd90e7ce)
+
+编辑：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
