--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,18 +1,25 @@
 ---
-title: 欧盟转向将逐渐抛弃疫苗护照
+title: 莫斯科称演习结束并从克里米亚撤军
 ---
-`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014593/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014670/)
 
-加拿大温哥华扬帆农场    平民正道
+撰稿：东京樱花团/上善若水
 
-据《德国之声》2月13日报道，欧盟经济专员保罗当天指出，疫苗强制接种政策已成为过去时，目前所有相关的强制措施都将不会在欧盟议会中得到大多数成员的支持。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/莫斯科称演习结束并从克里米亚撤军.png)（图片来源于本文链接）
 
-报道称，由于疫情的危害程度正趋于缓和，整个欧盟因“新冠病毒”感染而死亡和住院的人数也都普遍下降。因此，欧盟高层官员认为各国政府再无理由强推疫苗护照及强制性防疫政策。并表示，欧盟正计划在近期内放宽大部分卫生限制，这已是大势所趋。
+俄罗斯周三表示，已完成在克里米亚的军事演习，并正在撤军。但观察家和西方国家仍对此表示怀疑。俄罗斯杜马本周二通过决议，呼吁普京承认乌克兰东部分离主义地区顿涅茨克和卢甘斯克为独立国家。俄罗斯国防部在周三的一份声明中说：“南方军区的部队在完成了对战术演习后，正在向其永久部署点移动。”俄罗斯国家电视台播放的画面还显示，包括坦克和大炮在内的军事装备从2014年以来被俄罗斯占领的克里米亚半岛过桥进入俄罗斯本土。本周二，莫斯科声称已将驻扎在乌克兰边境附近的数量不详的士兵送回了他们的基地。但观察家和西方领导人仍对俄罗斯的说法持怀疑态度，并警告说俄罗斯仍可能入侵乌克兰。美国总统拜登周二表示，美国的情报部门还需要核实俄罗斯撤军的说法。
 
-* * *
+英国防长华莱士周三上午再次对俄罗斯说法表示怀疑。他向泰晤士报电台表示，“我们目前还没有看到任何有关撤军的证据。”北约秘书长斯托尔滕贝格在周三的新闻发布会上警告说，“俄罗斯保留了全面入侵乌克兰的能力”。他也对俄罗斯发出的矛盾信号表示怀疑：“我们看到的是俄罗斯在与乌克兰的边界上有非常强大的军事存在，但我们也看到莫斯科发出的给外交一个机会的信号。”斯托尔滕贝格还指出，在乌克兰边境附近的俄罗斯军队数量“继续增加”，而在过去，俄罗斯将大量部队和重型装备运入某地区，然后撤出士兵，但不撤出装备，这样就留下快速返回的选项。欧委会主席冯德莱恩周三也指责莫斯科发出了“相互矛盾的信号”。她说：尽管莫斯科宣布了这一消息，但“北约还没有看到任何俄罗斯削减部队的迹象”。她补充说：“我们昨天看到了希望……但这些表态必须落实到行动上。”
 
-编辑： 平民正道    发布：平民正道
+2月15日，俄罗斯国家杜马通过一份决议草案，呼吁俄总统普京承认顿涅茨克和卢甘斯克为独立国家。顿涅茨克和卢甘斯克位于乌克兰东部。2014年5月两地民间武装宣布独立，分别成立“顿涅茨克人民共和国”（DPR）和“卢甘斯克人民共和国”（LPR）。DPR和LPR并未控制顿涅茨克州和卢甘斯克州的全部领土，也未得到国际承认。对上述决议草案，欧盟外交与安全政策高级代表博雷利15日在社交媒体发文，谴责其“明显违反《明斯克协议》”，并称欧盟坚定支持和承认乌克兰在其国际公认边界内的独立、主权和领土完整。
 
+信息来源：
+
+[莫斯科称演习结束并从克里米亚撤军](https://www.dw.com/zh/%E8%8E%AB%E6%96%AF%E7%A7%91%E7%A7%B0%E6%BC%94%E4%B9%A0%E7%BB%93%E6%9D%9F%E5%B9%B6%E4%BB%8E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E6%92%A4%E5%86%9B/a-60798778)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
