--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,23 +1,23 @@
 ---
-title: NewSGman┃郭文贵先生2022新春大直播开场演唱甜蜜蜜
+title: 樱花FM┃从污水中的病毒含量掌控疫情 日本一新公司横空出世
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014424/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014603/)
 
-撰稿：东京樱花团/NewSGman
+音频：东京樱花团/战友520
+![](https://lh6.googleusercontent.com/hsXL9uq-q5W7KeGWc_LNcvNBNS-ji5JInFZCTzcOmA3mL5Et2cU6xftcNYQhoL8siNFTeFykcrXBZm1PSoR5_vaPx2Y3Ve_bmPnl0DHlfCDOJvq6GQtNmoHD01rsL49qy5Ky5NAl)
+盐野义制药与岛津制作所联合成立了一家新公司，主要方向是从污水中调查中共（新冠）病毒，他们将通过测试污水处理厂和医院等设施的污水中中共病毒含量来提供公共健康风险评估。这两家公司希望利用双方在传染病研究和理化技术方面的优势，帮助判断中共病毒是否扩散或是否得到有效遏制。
 
-happy chinese new year 2022
+新公司名为AdvanSentinel，社长古贺正敏表示，没有症状或尚未发病的人所在区域可以作为一个群体进行监测。如果该监测系统能够被纳入基础设施，将有望为未来大流行病的预防发挥积极作用。
 
-祝福全球战友新春甜蜜蜜健康平安
+新公司的目标是在几年后实现年销售额10亿日元，并希望今后不仅针对治疗中共病毒，而且能够在预防治疗其他流行病，如流感和脊髓灰质炎等方面起到重要作用。盐野义制药公司的新冠药物也即将在日本发售。
 
-七哥特别版甜蜜蜜歌声中开启虎年灭共！
+俗话说，商人的嗅觉最敏锐，看来未来很长一段时间，人类很有可能与各种传染性病毒共存了，尤其是一次次打入人体的疫苗还会造成S蛋白脱落，影响深远啊！
 
-盖特链接：https://gettr.com/post/prmblg165d
+文字版原文：[从污水中的病毒含量掌控疫情 日本一新公司横空出世](https://gnews.org/zh-hans/1975480/)
 
-编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
-
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
