--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,26 +1,17 @@
 ---
-title: 俄乌危机持续 美将军示警中共可能趁机生事
+title: 欧盟转向将逐渐抛弃疫苗护照
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2014416/)
+`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014593/)
 
-**撰稿：日本东京方舟农场 Kevin wang**
+加拿大温哥华扬帆农场    平民正道
 
-2月16日，美国太平洋空军司令维巴赫发出警示，在世界各国专注俄乌紧张局势之际，中共可能趁机在亚洲生事。
+据《德国之声》2月13日报道，欧盟经济专员保罗当天指出，疫苗强制接种政策已成为过去时，目前所有相关的强制措施都将不会在欧盟议会中得到大多数成员的支持。
 
-据《中央社》报道，维巴赫16日在新加坡航空展表示，中共国在俄乌危机中与俄国沆瀣一气，目前更要担忧中共会趁机牟利，在中共国看到俄乌的紧张局势后，中共可能会在印度洋或者太平洋地区做些什么。值得注意的是，美国太平洋空军总部位于夏威夷，若太平洋地区爆发冲突，空军司令维巴赫将扮演核心角色。
+报道称，由于疫情的危害程度正趋于缓和，整个欧盟因“新冠病毒”感染而死亡和住院的人数也都普遍下降。因此，欧盟高层官员认为各国政府再无理由强推疫苗护照及强制性防疫政策。并表示，欧盟正计划在近期内放宽大部分卫生限制，这已是大势所趋。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-19.jpeg)（图片来自联合新闻网）
+* * *
 
-据悉，中共连年挑动亚洲地区的紧张气氛，同时稳步控制南海的关键岛礁。中共主张拥有南海几近全局的主权，但台湾、文莱、马来西亚、菲律宾、越南都主张拥有部分主权。美国与其他西方国家虽未在南海声索主权，但他们担心在中共的控制下，这块战略海域的航行自由可能受到侵害。
-
-此外，中共自2021年以来，加强施压台湾，屡次派遣军机侵扰台湾航空识别区（ADIZ）。新中国联邦创始人郭文贵先生在直播中也多次示警世界，称俄乌一旦发生战争，中共会趁机攻打台湾。
-
-参考链接：
-[https://www.cna.com.tw/news/aopl/202202160205.aspx](https://www.cna.com.tw/news/aopl/202202160205.aspx)
-
-素材采编：Kevin wang
-编辑： 青城道姑
-发布：文曦
+编辑： 平民正道    发布：平民正道
 
  
 
