--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,27 @@
 ---
-title: 议员提出严管外佣 将轻症港人送内地
+title: 中日财经爆┃台积电加大日本战略布局  引入新投资提高芯片制程工艺
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014388/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014592/)
 
-作者：东京樱花团   阿恩
+撰稿：东京樱花团/喜马拉雅的微尘
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/议员提出严管外佣-将轻症港人送内地.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/台积电加大日本战略布局-引入新投资提高芯片制程工艺.png)
 
-今日的立法会上有议员提出要严格监管外籍佣工，大力罚款引起寒蝉效应减少外佣的人群聚集，并要求外佣所属国家的驻港机构配合呼吁避免集会，同时要求食卫局和康文署当机立断杜绝外佣聚集，包括立即取消假日的行人专用区、封闭外佣聚集的热门地点，立例禁止于行人路上坐卧或扎营等临时紧急措施。另有议员提出将轻症港人送入内地定点治疗，例如在深圳快速兴建方舱医院，集中隔离，完成治疗后返港。
+台积电日本工厂2月15日（周二）传出了利好的进展。汽车零部件生产商电装(Denso)将对日本合资厂投资3.5亿美元，获得略超10%的股份。
 
-香港的富庶是全球公认的，即使是住公屋的居民也有能力聘请外佣照顾家庭，目前外佣的底薪为四千多港元，包保险、每年来回探亲的机票、享受公众假期等，虽然多年来外佣的薪水没有较多的涨幅，但相比东南亚国家的收入，在香港当外佣还是非常有吸引力的。在香港的大部分是菲律宾佣工，他们遵循自己的传统文化，民族观念很强，每逢假日必定相邀聚会，大多在公园和广场空地围坐分享食物和闲话家常，是香港多元文化的特色之一。不过在中共夺得香港的管制权后，对这些享受自由的外佣甚为不悦，一直有建制议员以防疫为由要求港府取缔外佣的聚会，今日的立法会上建制议员更毫不掩饰地要求港府修改法律，采取严厉的手段重罚和驱赶外佣。中共的走狗们狗眼看人低，视这些服侍港人的外佣为低贱，根本不允许他们拥有平等的人权。
+在引入新[股东](http://data.eastmoney.com/gdfx/)的背景下，台积电也宣布将建设日积电的资本支出从此前的70亿美元提高至86亿美元。增加的投资主要用于新设一条12/16纳米FinFET工艺产线。在此前的建设计划中，日积电仅有22/28纳米芯片生产能力。三家公司同时宣布将日积电的计划产能提高至每月5.5万片12寸晶圆。
 
-港府强制防疫政策导致隔离营和公立医院人满为患，一些病症比较明显的患者因医院床位供应紧张被安置在室外风餐露宿，许多检测为阳性的患者被要求在家中等候，并没有提供有效的药物予以治疗，种种乱象导致香港人心惶惶。港府高官已在深圳与中共官员商讨数日，仍未能确定具体的合作方案。港府似乎无意另觅土地请内地承建新的隔离营，昨日宣布将数个新落成的公屋改做隔离营，酒店和大学宿舍也被纳入其中。今日各媒体均在炮轰港府抗疫不利，大量公立医院外露宿病人的图片被摆在头版，积极渲染香港人的苦难，为中共在千呼万唤中空降拯救做好铺垫。今日有立法会议员提出，将轻症港人送往内地定点隔离治疗，被网民大骂无脑。不过这些议员的提议绝非空穴来风，中共接受香港的轻症患者必然不少是出于仁爱，目前确诊为阳性的患者大部分没有症状，有症状的大部分是轻症，中共本来就有解药，接收大量的轻者患者及时给予药物治疗，很快就能康复，对中共在香港树立勤政爱民的形象十分有帮助。那些被中共挑选过的轻症患者被送入内地治疗，体会内地医疗系统的“关爱和强大”，回港后有助洗脑身边的港人信服中共的管制。
+根据计划，日积电将在2022年内开工，并在2024年末投产。
 
-资料来源：
+对于电装而言，入股日积电并确保更先进本工艺落地本土，有助于确保自动驾驶汽车所需的先进芯片能从本土供应。之前[索尼](http://quote.eastmoney.com/unify/r/106.SONY)提供570亿日元(约合5亿美元)不仅为了获取日积电不到20%的股权，同样也为了确保图像传感器芯片的供应。
 
-[管浩鳴倡患者自願送內地治療　議員促向聚集外傭罰款、取消專用區](https://www.hk01.com/%E6%94%BF%E6%83%85/736210/%E7%AE%A1%E6%B5%A9%E9%B3%B4%E5%80%A1%E6%82%A3%E8%80%85%E8%87%AA%E9%A1%98%E9%80%81%E5%85%A7%E5%9C%B0%E6%B2%BB%E7%99%82-%E8%AD%B0%E5%93%A1%E4%BF%83%E5%90%91%E8%81%9A%E9%9B%86%E5%A4%96%E5%82%AD%E7%BD%B0%E6%AC%BE-%E5%8F%96%E6%B6%88%E5%B0%88%E7%94%A8%E5%8D%80)
+近年，随着全球灭共形势推进，以及美欧与中共在科技和供应链方面的脱钩，台积电也加紧美国和日本工厂的建设，以确保自身利益和全球芯片供应稳定。
 
-*校对：东京樱花团/文小白
+信息来源：
+
+[台积电的好消息和坏消息：日本厂调高工艺制程 美国厂工期延误](https://finance.eastmoney.com/a/202202162277474498.html)
+
+*编辑：东京樱花团/知了知了
 发布：东京樱花团/老黑*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
