--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,11 +1,25 @@
 ---
-title: 诺瓦克·德约科维奇谈他被澳大利亚驱逐的原因
+title: 挑战COVID疫苗授权和错误命名的诉讼已经提交给法庭
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2014268/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014503/)
 
-02/15/2022 诺瓦克·德约科维奇：我被驱逐出澳大利亚并不是因为我没有接种疫苗，也不是因为我违反了任何规则，或者说我的签证申报有误。我被驱逐的原因是移民部长利用他的自由裁量权取消了我的签证，因为他认为我可能在澳大利亚引发反疫苗的情绪，对此我完全不予认同。
+##### 翻译：俏如来
+校对：Lish
+剪辑|字幕：蛮吉
+编辑：守望黎明
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+越来越多的人对新冠疫苗接种政策发起挑战，彼得.麦卡洛博士就是其中的一位。他在阿拉巴马州发起诉讼，指控美国政府在批准新冠疫苗的过程中，没有遵循推广疫苗的基本原则，未进行充分的危害平衡测试。特别是轻率地改变了疫苗的定义，同意辉瑞和莫德纳公司将mRNA这类尚不成熟的转基因疗法用在疫苗当中、实行大规模的人群接种。他认为这是一种完全不负责任、不可接受的违法行为。
+
+视频来源：[A lawsuit has been filed in court challenging the authorization and misbranding of the COVID vaccines](https://twitter.com/vigilantfox/status/1490347332994572293?s=21)
+
+*发布：Mttfly*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
