--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,29 +1,31 @@
 ---
-title: 中日财经爆┃北美最大巧克力企业全面撤离中共国
+title: 意大利发现中共病毒在尸体中可存活41天
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014511/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2014650/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/北美最大巧克力企业全面撤离中共国.png)
+据《大纪元》2月16日报道，意大利科学家在一名乌克兰男子死后对他的尸体进行COVID-19（中共病毒）的筛检，发现该病毒可在尸体上存活41天甚至以上。
 
-近日，好时（中国）天猫旗舰店已终止经营，其京东自营店内多款商品显示无货。内部员工透露，好时已在中国市场线下各地撤柜关店。
+英国《每日镜报》也对这则消息进行了深入报导：这名41岁的乌克兰男子与友人在意大利基替（Chieti）外海游泳时失踪，他的尸体于16个小时后在岩石之间被发现，随后被存放在当地一家医院的停尸间。
 
-天眼查App显示，好时（中国）投资管理有限公司已经于2021年11月进行清算。该公司成立于2001年4月，法定代表人为ROHIT GROVER，注册资本约8.4亿美元，由美国好时国际有限公司（Hershey International LLC）全资持股。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-3-2.jpeg)图为医护人员在进行筛检。（图片来自Pixabay）
 
-此外，ROHIT GROVER还关联有另外两家公司，分别为好时（上海）食品研发有限公司、好时商业（上海）有限公司。值得一提的是，好时（上海）食品研发有限公司已于2021年3月进行清算，好时商业（上海）有限公司已于2021年12月注销。
+依据意大利目前的防疫规定，该名男子的尸体必须进行新冠筛检。尽管他的尸体被防水尸袋包裹而且以摄氏4度的低温保存，但邓南遮大学（D’ Annunzio University）的研究人员在41天内对他的尸体筛检28次，每次都呈现阳性。
 
-好时(HERSHEY’S)，是北美地区最大的巧克力及巧克力类糖果制造商。位于宾夕法尼亚州，是家具有120年历史的老字号公司。2018年12月，世界品牌实验室发布《2018世界品牌500强》榜单，好时排名第399。
+由于该名男子在41天的观察期之后已经下葬，研究人员无法再进行更多筛检，所以科学家可以确定中共病毒可以在尸体内存活多达41天，但感染的风险则有待进一步的研究才能厘清。目前尚无证据显示，尸体会将病毒传染给活人。
 
-好时（中国）的关闭，意味着又一家大型美国企业撤离中共国。
+研究人员在2月9日发表于《医学病例报告杂志》（Journal of Medical Case Reports）的研究报告中表示，这项研究对于病理学家了解什么时候解剖尸体是安全，以及有关病毒能存活多久的资料而言非常重要。
 
-信息来源：
+由此事件，科学家已经知道，中共病毒可以在物体表面留存多达5天的时间，而先前的一项研究显示，游轮乘客在离开客舱17天之后，客舱内仍留有这种病毒。另外，德国科学家还发现这种病毒在病患死后35个小时依然能进行复制。
 
-[好时在中国撤柜闭店，天眼查显示好时中国公司已清算](https://finance.sina.com.cn/jjxw/2022-02-10/doc-ikyakumy5205094.shtml)
+参考链接： 
+[https://www.epochtimes.com/b5/22/2/16/n13580901.htm](https://www.epochtimes.com/b5/22/2/16/n13580901.htm)
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+素材采编：幽蘭自得
+编辑：青城道姑
+发布：文曦
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
