--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,12 +1,23 @@
 ---
-title: 德约科维奇：给自己身体做决定的原则比任何冠军都重要
+title: 港大发布报告称过敏病史者适合接种新冠疫苗
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2014262/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014459/)
 
-02/15/2022 男网世界第一诺瓦克·德约科维奇：给自己身体做决定的原则比任何冠军都重要。我一直都在发声支持人们拥有选择什么可以注入你身体的自由。
+作者：东京樱花团   阿恩
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+![](https://assets.gnews.org/wp-content/uploads/2022/02/港大发布报告称过敏病史者适合接种新冠疫苗.jpg)
 
+养和医院与香港大学李嘉诚医学院最近在《世界过敏组织杂志》发表一项研究，称去年2月至6月接受疫苗过敏安全评估的个案中，近98%有过敏病史的求诊者，经免疫及过敏病科专科医生评估为适合接种新冠疫苗。该研究团队指，新冠疫苗对大部分过敏症状人士安全，市民无需进行不必要的转介而延误接种疫苗，团队还建议删除新冠疫苗过敏人士的指引。
+
+港府借第五波疫情对新冠疫苗的注射发起总攻，近日连三岁的幼童也批准注射。据港府的数据显示， 本港有726万人适合接种疫苗，但仍有161万人未曾注射。据悉大部分人因为疾病和过敏史获得豁免，面对新冠疫苗无效的显示问题，注射的阻力大增，港府唯有实行疫苗通行证强迫市民注射，但不少人宁愿不去受限制的场所也不肯注射，又轮到专家们用迂回的方式配合强制疫苗，近日港大声称发布了研究报告，其研究结果是98%的有过敏历史的人都适合注射新冠疫苗，并要求港府删除新冠疫苗过敏人士的指引。专家此举似乎掐断了这部分港人的后路，但命运是掌握在自己手上的，明知自己身体不适合接种，也知道新冠疫苗无效有毒必遭不测，如何能相信这些丧心病狂的专家，现在除了不去限制场所舍弃享乐外，港人还开创了另一条道路“司法复核”，即使没有公正的判决，百万市民接连向高院递交诉状一起和港府消磨时间。爆料革命郭文贵先生预告新冠疫苗注射将在短期内停止。因此没有注射的香港人一定要坚持，用尽一切办法保护自己和家人。
+
+资料来源：
+
+[疫情消息｜首批「疫苗過敏安全門診」求診者 近98%適合接種疫苗](https://hd.stheadline.com/news/realtime/hk/2309141/%E5%8D%B3%E6%99%82-%E6%B8%AF%E8%81%9E-%E7%96%AB%E6%83%85%E6%B6%88%E6%81%AF-%E9%A6%96%E6%89%B9-%E7%96%AB%E8%8B%97%E9%81%8E%E6%95%8F%E5%AE%89%E5%85%A8%E9%96%80%E8%A8%BA-%E6%B1%82%E8%A8%BA%E8%80%85-%E8%BF%9198-%E9%81%A9%E5%90%88%E6%8E%A5%E7%A8%AE%E7%96%AB%E8%8B%97)
+
+*校对：东京樱花团/文小白
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
