--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,35 +1,23 @@
 ---
-title: 中日财经爆┃监控员工行为！知乎事件折射中共驭民手段
+title: NewSGman┃郭文贵先生2022新春大直播开场演唱甜蜜蜜
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014237/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014424/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
+撰稿：东京樱花团/NewSGman
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/监控员工行为！知乎事件折射中共驭民手段.png)[图片来源](http://www.linksplore.com/215213.html)
+happy chinese new year 2022
 
-近日，网曝社交媒体平台“知乎”安装员工行为感知系统，以全面监控员工网络行为。
+祝福全球战友新春甜蜜蜜健康平安
 
-据悉，行为感知系统由A股上市公司深信服科技股份有限公司开发。企业在安装了行为感知系统后，可以通过监控员工的上网行为获悉其浏览招聘网站、投简历等行为，以此了解员工是否想离职。
+七哥特别版甜蜜蜜歌声中开启虎年灭共！
 
-据深信服一位销售人员证实，该系统不仅可以“判断出具有离职倾向的员工”，还能做到对“员工的网络行为都有记录”，而且是“合法的，很多公司都在用。”
+盖特链接：https://gettr.com/post/prmblg165d
 
-该消息被曝后，随即引发了广泛质疑。
+编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
 
-对此，知乎和新浪等多家互联网知名企业则纷纷回应称，从未安装使用过网上所说的行为感知系统，今后也不会启用类似软件工具。
 
-此前深信服官网罗列出的该监控系统与光大银行深圳分行、新浪以及华东师范大学合作的成功案例，目前已搜索不到，或被删除。此外，在百度搜索、头条搜索中还能搜到“光大银行深圳分行采用深信服上网行为管理方案”等网页标题，但进入网页却没有任何内容，只显示“404”的字样。
-
-企业对员工上网行为的监控，若未事先告知员工并获得其同意，就已经涉嫌侵犯员工的个人隐私权。知乎监控员工网络行为事件，不是个例，而是普遍现实，这其实也是中共以警治国对老百姓进行全面监控这种做法在企业领域的折射。
-
-信息来源：
-
-[知乎被传裁员牵出监控员工系统，开发公司深信服利润大降](https://finance.sina.com.cn/stock/s/2022-02-14/doc-ikyamrna0772872.shtml)
-
-[知乎声明：未使用“行为感知系统”监测员工；携程将推出3+2 工作模式：抖音电商相回应投资极兔并属不实| 雷峰早报| 雷峰网](https://www.leiphone.com/category/zaobao/zS4jaNQ64oCQ5FOq.html)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
