--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,25 +1,26 @@
 ---
-title: 殡葬业的澳籍举报人投下真相炸弹
+title: 俄乌危机持续 美将军示警中共可能趁机生事
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014224/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2014416/)
 
-##### 翻译：Julia Gao
-校对：Lish
-剪辑|字幕：向上James
-编辑：守望黎明
+**撰稿：日本东京方舟农场 Kevin wang**
 
-新冠疫苗的灾难正在各方面显露出来，这位来自澳大利亚殡葬业爆料人的控诉，字字血泪。殡仪馆里的尸体越积越多，死掉的不仅有很多青壮年，还有打过疫苗的婴幼儿。触目惊心的惨象，让见惯了尸体的殡葬工人都承受不了啦！只要疫苗灾难不止，悲剧就还会不断地上演下去。这真的是一场可能会危害整个人类的大危机。
+2月16日，美国太平洋空军司令维巴赫发出警示，在世界各国专注俄乌紧张局势之际，中共可能趁机在亚洲生事。
 
-视频链接：[The Funeral industry’s Aussie whistleblower drops the truth bomb](https://twitter.com/TheJuggernaut88/status/1490137007628062722)
+据《中央社》报道，维巴赫16日在新加坡航空展表示，中共国在俄乌危机中与俄国沆瀣一气，目前更要担忧中共会趁机牟利，在中共国看到俄乌的紧张局势后，中共可能会在印度洋或者太平洋地区做些什么。值得注意的是，美国太平洋空军总部位于夏威夷，若太平洋地区爆发冲突，空军司令维巴赫将扮演核心角色。
 
-*发布：Mttfly*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-19.jpeg)（图片来自联合新闻网）
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+据悉，中共连年挑动亚洲地区的紧张气氛，同时稳步控制南海的关键岛礁。中共主张拥有南海几近全局的主权，但台湾、文莱、马来西亚、菲律宾、越南都主张拥有部分主权。美国与其他西方国家虽未在南海声索主权，但他们担心在中共的控制下，这块战略海域的航行自由可能受到侵害。
+
+此外，中共自2021年以来，加强施压台湾，屡次派遣军机侵扰台湾航空识别区（ADIZ）。新中国联邦创始人郭文贵先生在直播中也多次示警世界，称俄乌一旦发生战争，中共会趁机攻打台湾。
+
+参考链接：
+[https://www.cna.com.tw/news/aopl/202202160205.aspx](https://www.cna.com.tw/news/aopl/202202160205.aspx)
+
+素材采编：Kevin wang
+编辑： 青城道姑
+发布：文曦
 
  
 
