--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,35 +1,25 @@
 ---
-title: 文贵先生将赴日本与中共近距离作战
+title: 秘翻在线：科学吃屎 粪菌胶囊
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2014217/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2014343/)
 
-作者：波士顿五月花 跟随战神
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220216-2-1.jpg)
-刚刚进入虎年，文贵先生就宣布了一个重大决定，2022年将离开美国，到英国和日本去生活。到伦敦是为了UBS的官司，这个官司是与沼泽地的第一仗，也是打开世界沼泽地的第一道大门。
+**撰稿：葛大饼**
 
-文贵先生去日本意义非凡。日本与中共近在咫尺，先生到日本意味着将直面共产党，与中共近距离作战。
+**责编：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/222-2.jpg)图片来源：无癌家园
+根据2022年2月15日网易报道，《新英格兰医学杂志》期刊上发表了一项Ⅲ期临床试验ECOSPOR III的数据，该实验是评估粪便提取物口服药丸SER-109在治疗复发性艰难梭菌感染中的临床疗效以及安全性。
 
-爆料革命经过五年的发展，已经由当初的星星之火到现在的漫山遍野。由文贵先生当初的一人战一国、战一党到现在的万众一心灭恶党。文贵先生到日本标志着爆料革命从战略防守、战略相持过渡到了战略反攻阶段。
+研究结果显示，与安慰剂治疗相比，SER-109口服药丸治疗能将相对风险降低68%。而且SER-109药物中携带的菌群也可有效定植于患者体内，安全性与安慰剂组相近。在我们的人体肠道中，产毒的艰难梭菌如果大量定植会导致腹泻，但是目前市场上的药物并不能除根此病症，于是科学家们研制出了这个新方法：先用抗生素杀死这些菌株，然后空投救援部队，服用粪便提取药物来定植肠菌，修复肠道稳态，抑制艰难梭菌的孢子萌发或复制，预防复发。
 
-如果说中共在世界的最强对手是美国的话，那么在亚洲的最强对手就是日本。日本的经济总量一直在美国之后排名世界第二，中共近年崛起后屈居第三，但是人均水平仍然碾压中共。日本的军事实力更是压倒优势，有5分钟之内清空中共所有军事基地的实力。
+新闻称这项Ⅲ期临床试验不仅为复发性艰难梭菌感染的治疗带来新的希望，也是粪便提取药物正式踏向临床应用的重要一步，如果粪菌移植治疗能够正式获批，那或许也可以为癌症治疗带来新的解答方案。
 
-但是中共的上上下下却普遍不这么认为，动不动以“小日本”相称，言语中和眉目间经常流露出傲慢与不屑。记得安倍晋三担任日本首相期间，习近平会见安倍首相时面沉似水，码着一张脸，从电视画面上看全程死气沉沉，像是参加葬礼。而安倍首相面带微笑、不卑不亢，给人留下深刻的印象。印证了一句话，别人尊重你不是因为你优秀，是因为别人优秀。
+值得一提的是在2019年的临床试验中，两名免疫功能低下的参与者在接受FMT后出现新感染，其中一人死亡。这使得人们不得不重新审视FMT在临床治疗中存在的严重或危及生命的潜在感染风险，比如血流感染和耐药菌传播等。
 
-文贵先生到日本标着日本已经和新中国联邦站在了一起，成了灭共的重要帮手。文贵先生的安全牵挂着战友们的心，牵挂着所有灭共者的心。用文贵先生自己的话说，没有国家级的保护，安全就不会有任何保障。文贵先生能到日本去，能够得到日本的保护本身就表明了日本政府的态度。日本抛弃了几十年来与中共的绥靖政策，站在了14亿中国人民一边。有日本这样一位强力的帮手，灭共进程必将加快。
+尤其是在中共新冠病毒大流行期间，FDA于2020年提出新的警告，并更新了粪便供体筛查要求。研发SER-109粪菌胶囊的公司Seres Therapeutics则表示，预计于今年年中完成向FDA申请获批。
 
-新中国联邦在日本已经建立了三个基地，此次先生亲赴日本将布更大的灭共之局。不仅是日本，包括韩国、印度、越南、新加坡、台湾等等的亚洲国家都将是灭共的支持者和出力者。
+治疗癌症我们有青蒿素，未来还有干细胞移植，偏偏要研究如何吃屎，突然有种王岐山要让中国老百姓吃草，FDA要让大家吃屎的感觉。中共病毒疫苗灾难爆发，以后输血都要小心，不要说吃粪菌胶囊了！
 
-文贵先生到日本等于就在中共的眼皮底下，中共老杂毛会如坐针毡，恨之入骨又奈何不得，这份胆识与气魄就将他们吓得半死。更重要的是，墙内亿万战友近距离聆听文贵先生的声音，对士气和信心是极大的鼓舞和提升。会掀起国内灭共的滔天浪潮，并加速中共的内部分裂和厮杀，加速以共灭共的进程。
-
-唯一让人稍感不安的还是文贵先生的安全，毕竟中共以魔鬼著称，手里还握有核武器。诽谤、造谣、抹黑、谋杀、暗杀等等手段中共会无所不用其极，更有甚者会“明杀”，公然发射导弹。令人欣慰的是世界第一强国美国同意文贵先生赴日，并全程负责先生的安全保卫，当然是国家级的，而且是美国国家级的。如果中共胆敢对文贵先生不利，无异于对美国开战，这一点老杂毛们吓死也不敢。
-
-* * *
-
-*编辑：文合*
-
-*封面：霹雳鼠年*
-
-*发布：吐纳*
+**[新闻来源](https://www.163.com/dy/article/H08N4VGA051182D7.html)**
 
  
 
