--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,19 +1,22 @@
 ---
-title: 樱花FM┃局面失控 渥太华宣布进入紧急状态
+title: 英国官方实验室证实疫苗内含氧化石墨烯
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014510/)
+`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014646/)
 
-音频：东京樱花团/战友520
-![](https://lh4.googleusercontent.com/Nn81iQgMf70SRS_DBaesd9hQ3pn255sTKLTK0c5jmCctLEa9mXsvzjfIz-9Cz15tr68RO9ZL7DgmcRtq7Ch7aeBwfY4QxdrdJa06oi2XkLvhFLYwCNVR0vg-VK2qPHND1fHgWuaC)
-加拿大首都渥太华反对新冠抗疫措施大规模示威活动已延续一周，市长沃森宣布进入紧急状态以控制局势，保障市民及首都安全。他强调，此举反映出，示威活动已对当地居民安全构成“严重危险和威胁”。沃森称，局势有可能“完全失控”，渥太华需要“其它司法手段和政府层面的支持”。
+加拿大温哥华扬帆农场    平民正道
 
-此间，千百辆货车继续封锁渥太华市中心的道路，货车司机从上月下旬起在全国范围发动取名为“自由车队”的抗议活动，最初是要求当局取消对从美运货的加拿大卡车司机返回时须提交接种疫苗证明的规定，但现在抗议对象已扩大至特鲁多政府的抗疫政策。警方再度呼吁抗议者离开市中心，并已拘留多人。当局称，对近 100 起案件展开了调查，其中涉及散步仇恨言论。另外，警方已开出数百份罚单，包括危险驾驶和噪音污染。沃森市长称卡车司机“摁喇叭、鸣警笛、放鞭炮，把示威当派对活动”。
+据英国媒体《内幕消息》2月13日报道，英国官方实验室已证实，现有的“新冠病毒”疫苗中的确含[氧化石墨烯]成份。
 
-文字版原文：[局面失控 渥太华宣布进入紧急状态](https://gnews.org/zh-hans/1975657/)
+报道称，此次送检疫苗包括[辉瑞]，[莫德納]和[阿斯利康]三家制药厂的产品。其中，生产商未申报的疫苗内含物是本次实验室检测的重点对象。分析结果显示，尽管所有送检样本中都存在石墨烯，并且普遍采用脂质纳米颗粒作为药物输送机制，但这些碳复合材料、石墨烯化合物和氧化铁等物质都是在疫苗成分列表上所没有注明的。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+据悉，石墨烯纳米材料可以穿透人体的天然保护屏障，进而损害中枢神经系统。而石墨烯氧化物则不仅损害人体器官，破坏血液健康，引发癌症，而且还可导致基因功能发生衰变。但各国政府和生产药商却从未告知民众其疫苗中含有这些致命物质。
+
+目前，该调查报告已提交英国警方刑事部门，以期当局尽快采取进一步调查和追责行动。
+
+* * *
+
+编辑： 平民正道    发布：平民正道
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
