--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,43 +1,41 @@
 ---
-title: 02/16/2022 国际财经快讯：IMF表示哥伦比亚中央银行必须在上半年提高利率以控制通货膨胀；俄罗斯入侵乌克兰的担忧缓解，亚洲股市反弹
+title: 美参议员推议案，要求在美上市公司披露是否有中共组织
 ---
-`秘密翻译组金融团队` [轉載自GNews](https://gnews.org/zh-hans/2013333/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2013425/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220216-1.jpg)[图片来源](https://dzm0ugdauank9.cloudfront.net/wp-content/uploads/2022/02/2022-02-15T232414Z_1_LYNXMPEI1E15H_RTROPTP_0_COLOMBIA-ECONOMY-RESERVES_1.jpg)
-**1.IMF表示哥伦比亚中央银行必须在上半年提高利率以控制通货膨胀**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GettyImages-1359227357-700x4201-1.jpg)【图片】2021年12月15日，在华盛顿国会山的罗素参议院办公大楼，田纳西州共和党参议员玛莎·布莱克本(Marsha Blackburn)参加参议院商业、科学和运输委员会关于航空业监督的听证会。
+在美国国会议员为阻止中共对其企业和经济活动的影响而采取的最新举措中，田纳西州共和党参议员玛莎·布莱克本(Marsha Blackburn)和佛罗里达州共和党参议员马可·卢比奥(Marco Rubio)提出了3598号《禁止中国共产党行使诡计通过未登记的政权存在而隐瞒股东与等效方法》，简称为《禁止中国共产党出乎当事方意料法》(No Chinese Communist SURPRISE Parties Act)(S.3598)。
 
-[波哥大（路透社）–国际货币基金组织（IMF）周二表示，哥伦比亚中央银行将不得不在今年上半年提前加息，以控制通货膨胀并维护其来之不易的信誉。政府的DANE统计机构周二早些时候报告说，由于娱乐业、零售业和制造业飙升，这个安第斯国家去年的经济增长了10.6%，超过了预期。然而，国际货币基金组织哥伦比亚任务负责人Hamid Faruqee说，供应链问题带来的压力意味着哥伦比亚中央银行需要在今年上半年迅速采取行动，以锚定通胀预期并防范通胀上行风险。”Faruqee在一次虚拟新闻发布会上说：”控制通货膨胀……对哥伦比亚的中央银行构成了挑战，我们在其他国家也看到了这种挑战，包括美国。](https://www.oann.com/colombias-central-bank-must-raise-rates-in-first-half-to-control-inflation-imf/)
+如果成为法律，这项新法案将责成美国证券交易委员会(SEC)要求在美国上市的公司披露在其活动或公司结构中是否存在任何与中共有关的组织。上市公司也必须披露在中国共产党或其他外国实体可能发挥作用的公司治理层面上所做的任何信托责任和决定。
 
-**2.澳大利亚Liontown公司与特斯拉签署5年锂供应协议**
+中共国法律要求在拥有三名或更多中共党员的私营公司中设立党支部。据国营媒体报道，截至2016年，约有7.5万家外国企业建立了党支部，占在华约10.6万家外国企业的70%以上。
 
-[2月16日（路透社）–澳大利亚Liontown Resources（LTR.AX）周三表示，它与特斯拉（TSLA.O）签署了一项为期五年的协议，向这家电动汽车制造商供应锂精矿，使这家锂矿商的股价上涨近20%。特斯拉将在2024年开始的第一年购买10万干公吨（DMT）的精矿，并在随后几年增加到每年15万干公吨。在过去的几年里，锂的价格已经飙升，随着汽车制造商向电动汽车倾斜，供应商争相满足需求。价格比2021年初高出约8倍。Liontown将从其位于西澳大利亚的旗舰项目Kathleen Valley Lithium供应锂，该项目预计将在2025年开始商业生产。对特斯拉的供应将占到该项目年产能的三分之一左右。](https://www.reuters.com/business/australias-liontown-signs-5-year-lithium-supply-deal-with-tesla-2022-02-15/)
+该法案的提案人对以下事实表示担忧：在中共国的公司越来越受到中国共产党的影响和支配，而且鉴于跨境商业和金融活动日益普及，这些公司很容易在美国交易所上市的企业中获得或扩大立足点。
 
-**3.Coinbase将让墨西哥的加密货币接收者以当地货币兑现**
+卢比奥在2月14日的一份声明中说：“在美国上市的公司不应该充当中共的工具，美国投资者有权知道是否有这种情况。我的法案为北京通过加深其对美国金融市场的影响来颠覆美国的又一次尝试提供了一个常识性的解决方案。”
 
-[2月15日（路透社）–Coinbase Global（COIN.O）周二表示，它正在启动一项试点计划，允许墨西哥的加密货币接收者以比索兑现资金，此举旨在撼动7000亿美元的全球汇款市场。比特币等加密货币被视为人们向海外家人和朋友汇款的重要方式，因为加密货币具有无国界性，而且比传统货币转账的中间商更少。加密货币交易所周二在一篇博文中说，墨西哥的加密货币接收者现在可以在他们的Coinbase应用程序上生成一个兑换代码，可以用来在墨西哥全国37000家零售和便利店接收现金。Coinbase表示，这项服务将在3月31日前免费提供，之后将向客户收取 “名义费用，但仍比传统国际支付方式便宜25-50%”。](https://www.reuters.com/business/finance/coinbase-let-crypto-recipients-mexico-cash-out-local-currency-2022-02-15/)
+该法案将要求所有在美国交易所上市的公司，包括国内和国外的发行人，必须在其年度报告中进行三项披露。公司必须披露其董事会是否对股东负有信托责任，或可能因与冲突的控制人交易有关而受到审查；披露其在报告所涉年度是否成立或维持了中共组织；并披露其业务中是否存在任何此类组织，如果存在，该党组织的活动的确切性质是什么。布莱克本还谴责中共对美国境内看似合法的商业交易的影响。
 
-**4.俄罗斯入侵乌克兰的担忧缓解，亚洲股市反弹**
+“共产主义中国继续对美国公司施加控制，迫使它们在其队伍中发展共产党组织。美国投资者有权知道他们辛苦赚来的钱是否在支持由中共控制的公司。”她在同一声明中表示。
 
-[东京，2月16日（路透社）–亚洲股市周三反弹，因为在莫斯科表示将一些部队从演习中返回基地后，对俄罗斯本周入侵乌克兰的担忧消散了，给投资者带来了一定的安慰。世界大国之间在乌克兰局势上的紧张关系，已经发展成为几十年来东西方关系中最深刻的危机之一，一直是投资者关注的焦点。MSCI最广泛的日本以外的亚太股票指数(.MIAPJ0000PUS)在周三的区域早盘交易中大涨0.9%，追赶周二美国和欧洲股市的涨势。”IG驻墨尔本的市场分析师Kyle Rodda说：”如果我们继续看到外交手段发挥作用的迹象，以及紧张局势的缓和，我认为我们将看到一种反转交易。](https://www.reuters.com/markets/europe/global-markets-wrapup-1-pix-2022-02-16/)
+**简评：**
 
-**5.迪士尼任命高管监督元宇宙战略**
+在美上市的中共国公司受中国共产党领导，通过党支部来指导其决策已经成为一个被西方世界认清的现实。这次法案的提出，明确指示美国证券交易委员会要求在美国交易所上市的公司确认其运营中是否有中国共产党的组织。该法案还将要求任何公司详细说明中共组织对其公司治理决策的参与情况，并披露公司是否负有任何信托责任，包括外国信托责任。
 
-[2月15日（路透社）–根据路透社看到的迪斯尼首席执行官Bob Chapek周二发给员工的电子邮件，迪斯尼公司（DIS.N）已任命一名高管负责监督其元宇宙战略。媒体和娱乐发行集团的高管Mike White被任命为下一代故事和消费者体验的高级副总裁，他将帮助确定消费者如何体验迪士尼即将到来的元空间。他将与迪士尼的创意团队一起工作。”查普克在给员工的电子邮件中写道：”近100年来，我们公司通过利用技术将故事以更深入、更有影响力的方式带入生活，定义并重新定义了娱乐业，”他补充说：”今天，我们有机会将这些宇宙连接起来，为观众体验和参与我们的故事创造一个全新的模式。](https://www.reuters.com/business/media-telecom/exclusive-disney-names-executive-oversee-metaverse-strategy-memo-2022-02-15/)
+我们很高兴看到，该法案是在对中共在美本土金融活动影响的高度关注下提出的。美国和世界的投资者有权知道，他们的血汗钱是否被用来支持受到中共控制的公司，被用来传播社会主义等邪恶目的。美国为首的西方社会的一系列立法有助于帮助民众了解中国共产党对世界经济的恶意影响和最终达成消灭共产党是人类正义需要的共识。
 
-**6.CNN结束对Cuomo问题的调查，执行总裁Gollust将离任**
+链接：[https://www.theepochtimes.com/senators-introduce-bill-to-require-disclosure-of-ccp-involvement-in-publicly-listed-firms\_4279125.html](https://www.theepochtimes.com/senators-introduce-bill-to-require-disclosure-of-ccp-involvement-in-publicly-listed-firms_4279125.html)
 
-[2月15日（路透社）–华纳传媒首席执行官Jason Kilar在给员工的一份备忘录中说，在一项内部调查发现她和其他人违反政策后，CNN高管Allison Gollust已经从公司辞职，路透社星期二看到了这份备忘录。她的离职是网络对克里斯-库莫的行为进行调查后的最新举措，克里斯-库莫是CNN黄金时段的主播，因涉嫌协助被指控性行为不当的哥哥、前纽约州长安德鲁-库莫而于12月被解雇。CNN总裁杰夫-扎克本月早些时候辞职，告诉员工他没有披露与一名同事的自愿关系。CNN主播布莱恩-斯特尔特(Brian Stelter)当时说，这段关系是与该网络的首席营销官戈勒斯特(Gollust)的关系。基拉尔在给员工的备忘录中写道：”由第三方律师事务所执行，并由一名前联邦法官领导，调查是全面和确定的，”从9月持续到上周末。](https://www.reuters.com/world/us/cnn-ends-probe-into-cuomo-issues-exec-gollust-depart-2022-02-16/)
+* * *
 
-**7.Airbnb第一季度收入强劲，原因是旅游需求和延长住宿时间**
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-[2月15日（路透社）–Airbnb Inc（ABNB.O）周二预测第一季度营收将好于预期，此前这家短期房屋租赁公司公布了强劲的季度业绩，原因是国内旅游人数增加，客人以较高的价格停留时间更长。虽然这家总部位于旧金山的公司最初受到了大流行病的冲击，但其业务出现了反弹，因为人们在离家较近的地方旅行，他们在那里停留的时间更长，以便进行远程工作。此后，这一趋势一直在持续，第四季度的 “非城市总夜数 “预订量比2019年增长了约45%。”在这个新的旅行类别中出现了这种整体加速，即人们对办公室的束缚减少了，所以他们现在可以住在任何地方，”首席执行官Brian Chesky在与分析师的电话会议上说。](https://www.reuters.com/business/airbnb-sees-strong-first-quarter-revenue-travel-demand-longer-stays-2022-02-15/)
 
-**8.摩根大通呼吁监管部门快速解决加密货币对冲问题**
+编辑：【英国伦敦喜庄园编辑部】
 
-[伦敦，2月15日（路透社）–美国银行摩根大通（JPM.N）的一位高管周二表示，迫切需要制定新的规则，让银行在代表希望进入快速发展的市场的大客户处理加密资产时有确定性。包括比特币在内的2.7万亿美元的加密资产领域基本上没有受到监管，但目前还没有关于银行应该预留多少资本以覆盖该领域活动的定制规则。这让国际银行陷入困境，而监管机构则落后于形势。对冲基金和投资基金等大型机构对加密货币越来越感兴趣，并希望银行作为其中介机构。摩根大通企业和投资银行的监管事务主管Debbie Toennies说，一些非常大的玩家要求它对冲他们在加密资产上的风险。](https://www.reuters.com/technology/jpmorgan-calls-regulatory-quick-fix-crypto-hedging-2022-02-15/)
-
-By 【秘密翻译组-金融法律组】
-作者：千年等一回
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
