--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,48 +1,21 @@
 ---
-title: 文·贵天成——文贵先生谈“蓝、金、黄”计划（九）
+title: 众多人士批评美国联邦机构追踪寻求疫苗宗教豁免人群
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2013014/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2013071/)
 
-#### **整理：**BENJ1
-**编辑：**隔壁老章
+#### 翻译/撰稿：zzballack
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/fengmian0216.jpg)图片来源：雅典娜设计组（614）
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-3-5.jpg)图片来源：布雷特巴特新闻网
+据《真正美国之声》（Real America’s Voice）2月15日报道，美国有55个联邦机构颁布了修订规则，以追踪那些寻求豁免的联邦雇员或申请人。有些仅限于新冠疫苗豁免，有些则追踪所有豁免，包括那些寻求不在安息日（Shabbat）或星期日工作的人。很多人对此做法提出批评，认为这是对有信仰的人的歧视。
 
+有报道说，美国政府正在建立一个数据库，记录那些申请豁免的人。非营利组织自由律师会（Liberty Counsel）的主席马修·斯塔韦 (Mathew Staver)上个月在接受采访时将其比作纳粹德国用来追踪犹太人的一个数据库：“这个数据库的唯一可能目的是找出和歧视有信仰的人，以服务于非法或者不合理目的。我们不能允许这种情况发生，我们不能允许一个联邦数据库按照人们的宗教或医疗状况进行分类。我想不出这类政府名单能带来什么好处？”
 
-**郭文贵先生2017****年9****月13****日直播**
+美国议员也纷纷采取行动反对联邦政府的宗教豁免追踪系统。南卡罗来纳州的众议员拉尔夫·诺曼 (Ralph Norman)提出了《宗教自由高于强制令法案》（Religious Freedom Over Mandates Act）。该法案将“禁止将联邦资金用于任何有关新冠疫苗接种要求的宗教豁免记录系统”。
 
-现在海外的各种民运组织里，有大量被蓝金黄的人，让他们自己暴露出来，最终他们一定会被海外的法律和正义人士，彻彻底底揭穿，受到他们应有的惩罚，这也正是我们走向喜马拉雅的必由之路。
+20名共和党议员写信给总统拜登，要求联邦政府不要针对或跟踪那些提出宗教豁免申请的人。信中写道：“你们政府不能利用联邦政府权力来追踪那些寻求疫苗宗教豁免的联邦雇员。从第一天起，你们就对那些在生活中把信仰放在首位的美国人表现出一贯的蔑视态度，将以宗教为由拒绝接种疫苗的美国人排除在外，这是不可原谅的，必须撤回。大多数通知没有解释机构计划存储数据多长时间、为什么需要在联邦机构之间分享数据，或者为什么机构在决定批准或拒绝雇员的宗教便利请求后，需要保留数据。你们政府没有为这些侵入性数据库提供合理解释，这些数据库只会被用来针对那些因为宗教信仰而拒绝接种疫苗的美国人。”
 
-盗国贼的这些行为需要用钱，也会走审批程序，以国家安全、海外维稳的名义进行申请，获取大外宣、蓝金黄项目的资金，同时一定说是习主席同意的。这些党内的所谓程序，终有一天历史会清算。
-
-我希望大家一起努力，团结海外的华人，形成强大的力量，让全世界政府不为中国的市场而向中共弯腰低头，让中共不能用市场做武器威胁全人类、威胁我们不准回国、蓝金黄我们。我们只要团结在一起，百分之百可以赢! 如果需要文贵支持，我会倾其所能，其他做不到的，请大家原谅。
-
-**郭文贵先生2017****年9****月24****日**
-
-中共盗国贼拥有一个重要的国内贸易、商业市场，这个市场是以中国百姓的贫穷为代价换取的，盗国贼把市场作为强大的武器，实行了他们早就策划的蓝金黄计划，使美国和国际金融界、新闻界的精英们，一个个臣服于他们，协助甚至参与盗国贼的盗国计划。
-
-中共在海外实施蓝金黄计划，建立海外的情报机构，通过纽约所谓的华侨梁冠军，还有姓郑的福建帮福清帮主席，以及多个被红通的人，像谢建升、郑介谱，骚扰诬陷文贵。 我真惊诧孙立军如此的狂妄，他把共产党的组织、孟建柱以及中央领导不放眼里，原因我终于明白了，是因为他经历了南普陀会议之类的计划后，对中共党内人员相互构陷、对最高领导人家人的蓝金黄等手段，都习以为常了，这使得他蔑视所有的中共最高领导人，他认为党内无人不贪，没有人不杀人，甚至可以按需杀人，把老百姓视为猪狗，所以他贪的时候肆无忌惮。
-
-资料来源：郭先生GTV和盖特直播视频
-
-往期回顾：
-[文·贵天成——文贵先生谈“蓝、金、黄”计划（一）](https://gnews.org/zh-hans/2008275/)
-[文·贵天成——文贵先生谈“蓝、金、黄”计划（二）](https://gnews.org/zh-hans/2008300/)
-[文·贵天成——文贵先生谈“蓝、金、黄”计划（三）](https://gnews.org/zh-hans/2008496/)
-[文•贵天成——文贵先生谈“蓝、金、黄”计划（四）](https://gnews.org/zh-hans/2008314/)
-[文•贵天成——文贵先生谈“蓝、金、黄”计划（五）](https://gnews.org/zh-hans/2008332/)
-[文•贵天成——文贵先生谈“蓝、金、黄”计划（六）](https://gnews.org/zh-hans/2008361/)
-[文•贵天成——文贵先生谈“蓝、金、黄”计划（七）](https://gnews.org/zh-hans/2008344/)
-[文•贵天成——文贵先生谈“蓝、金、黄”计划（八）](https://gnews.org/zh-hans/2012933/)
-
-发布：Frank2021
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+新闻来源：[Criticism mounts as 55 federal agencies track COVID vaccine religious exemption requests](https://americasvoice.news/justthenews/criticism-mounts-federal-policies-tracking-covid-vaccine-religious/)
 
  
 
