--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,21 +1,21 @@
 ---
-title: 港大发布报告称过敏病史者适合接种新冠疫苗
+title: 认知隔离
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014459/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014620/)
 
-作者：东京樱花团   阿恩
+撰稿：东京樱花团/加一颗稻草
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/港大发布报告称过敏病史者适合接种新冠疫苗.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/认知隔离.png)[图片来源](http://m.nyckidsclub.com/channel/expert/article/39717.html)
 
-养和医院与香港大学李嘉诚医学院最近在《世界过敏组织杂志》发表一项研究，称去年2月至6月接受疫苗过敏安全评估的个案中，近98%有过敏病史的求诊者，经免疫及过敏病科专科医生评估为适合接种新冠疫苗。该研究团队指，新冠疫苗对大部分过敏症状人士安全，市民无需进行不必要的转介而延误接种疫苗，团队还建议删除新冠疫苗过敏人士的指引。
+大家都会遇到过对别人表达事情很困难的情况，或者很难理解别人的观点。普通人会认为是文化层次不同导致的上述问题。在古代，识字的人会被尊敬。是因为那时候识字的人少，他们通过读书和同层次的人交往获得了平民无法获得的信息，从而有着比普通人更高的认知水平。这样就造成了最古老的认知隔离。
 
-港府借第五波疫情对新冠疫苗的注射发起总攻，近日连三岁的幼童也批准注射。据港府的数据显示， 本港有726万人适合接种疫苗，但仍有161万人未曾注射。据悉大部分人因为疾病和过敏史获得豁免，面对新冠疫苗无效的显示问题，注射的阻力大增，港府唯有实行疫苗通行证强迫市民注射，但不少人宁愿不去受限制的场所也不肯注射，又轮到专家们用迂回的方式配合强制疫苗，近日港大声称发布了研究报告，其研究结果是98%的有过敏历史的人都适合注射新冠疫苗，并要求港府删除新冠疫苗过敏人士的指引。专家此举似乎掐断了这部分港人的后路，但命运是掌握在自己手上的，明知自己身体不适合接种，也知道新冠疫苗无效有毒必遭不测，如何能相信这些丧心病狂的专家，现在除了不去限制场所舍弃享乐外，港人还开创了另一条道路“司法复核”，即使没有公正的判决，百万市民接连向高院递交诉状一起和港府消磨时间。爆料革命郭文贵先生预告新冠疫苗注射将在短期内停止。因此没有注射的香港人一定要坚持，用尽一切办法保护自己和家人。
+在现代社会，由于各个行业分工更加精细，而形成了各种专业术语，使得在行业外的人望而却步。所以这种隔离变得更加复杂多样。根据上面的陈述我提出标题“认知隔离”。
 
-资料来源：
+这种现象是现代发展的必然。尤其是在科技领域的存在。但在有些领域这种现象却是人为的。在政治和经济领域尤其明显。他们创造出各种晦涩难懂的词汇，制定出行业内隐晦的规则。使得普通人理解困难，从而制造出各种陷阱，达到隐藏自己目标的目的。实施这样欺骗行为的人称自己是“精英阶层”。
 
-[疫情消息｜首批「疫苗過敏安全門診」求診者 近98%適合接種疫苗](https://hd.stheadline.com/news/realtime/hk/2309141/%E5%8D%B3%E6%99%82-%E6%B8%AF%E8%81%9E-%E7%96%AB%E6%83%85%E6%B6%88%E6%81%AF-%E9%A6%96%E6%89%B9-%E7%96%AB%E8%8B%97%E9%81%8E%E6%95%8F%E5%AE%89%E5%85%A8%E9%96%80%E8%A8%BA-%E6%B1%82%E8%A8%BA%E8%80%85-%E8%BF%9198-%E9%81%A9%E5%90%88%E6%8E%A5%E7%A8%AE%E7%96%AB%E8%8B%97)
+每个人面对谎言的行为体现了个体的认知水平。通常人们认为相信谎言的人是愚蠢的。所以人们竞相学习一些无意义知识用以防范各种各样的欺骗，使自己看起来聪明一些。这是一个恶性循环。也是谎言的市场。毕竟越复杂的环境变数(漏洞)越多。同时也出现了精英阶层利用这种认知不平衡，对普通人的“狩猎”现象。 认知隔离是造成文化分层次的原因，文化层次也会使得认知隔离更加严重。 在这方面现有的宗教对认知的启发有一定的作用，但是却缺乏针对性。对于人性贪婪的本能，人们没有面对的勇气是认知缺陷的根本原因。
 
-*校对：东京樱花团/文小白
+*编辑：东京樱花团/知了知了
 发布：东京樱花团/老黑*
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
