--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,36 +1,19 @@
 ---
-title: 郭文贵先生2月15日盖特概要
+title: 完全接种者感染艾滋病毒的风险大增
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014455/)
+`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014610/)
 
-作者/整理：顺其自然
-编辑：小红帽
+加拿大温哥华扬帆农场    平民正道
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/1-165.png)图片来源：雅典娜农场设计组（614）
+据英国媒体《每日内幕》2月12日报道：[英国卫生安全局]和[苏格兰公共卫生部]近期联合公布的官方数据显示，完全接种“新冠病毒”疫苗的老年人和体弱群体将更有可能感染该病毒及患上艾滋病。
 
+报道称，官方数据清晰表明，相比那些未接种疫苗者，已接种人群更有可能因感染新冠病毒而患病住院甚至死亡。此外，mRNA疫苗将诱导“获得性免疫缺陷综合症”，并可使年轻的接种者在短短几周内就出现类似的自身免疫系统疾病如艾滋病症状等 。
 
-在美国时间2月15日，郭文贵先生发了个盖特小视频。在小视频中，郭先生主要讲了：
+评论指出，各项医疗数据和现实病例都逐渐证实了[新中国联邦]一直以来关于中共病毒及其疫苗均为生物武器的论点。同时也向世人揭露了中共政权长期勾结西方邪恶沼泽地势力，在全球范围内谋财害命的残酷真相。
 
-1）全世界都在等待着俄罗斯，乌克兰的行动。这个世界上就在这个时候没人知道共产党要对台湾干啥。着急，但是人微言轻啊。谁听啊？愿台湾同胞，务必小心。在这儿告诉大家一定要小心。习近平消失了八天憋的全是坏事儿啊。习消失八九天了，到现在还没出来，估计今天晚上或明天上午就该露面了。坏事就开始了。
+* * *
 
-2）世界经济到啥样了，太可怕了。呆在山里待着没感觉呀。你在世界上的高层待着，你就会太有感觉了。我们不希望世界乱，但世界不乱，共产党就不会被消灭。共产党很疯狂，很嚣张。
-
-3）你看看现在国内成啥样了？冬奥会都开出国际大笑话儿了，丢人可耻。非公平竞争，全是黑招。人也造假，户口也造假，护照也造假，成绩也造假，雪也造假。哪有竞争？根本没有竞争，全是政治诈骗。奥林匹克裁判，主办机构都腐败了，还有什么公平可言呢？在没有雪的北京山上，用化学物质造出雪，对大自然是巨大的伤害。
-
-4）只要共产党不灭，没有一个人会好，只要共产党灭了，啥都好。而且共产党马上就会被灭掉，这一点儿都不用担心。刚刚20个小时左右，这个世界的某银行内部，已经提醒所有的他们的股东们，如果是俄罗斯开战，世界金融可能大崩塌，他们银行就可能宣布破产。
-
-5）你干活，别人给你东西。你给别人东西，别人帮你干活。这就是个人类的文明，这叫生产价值。中间切了个政府，切了个银行，切了基金，切了交易所，他都是中间商。人类最重要的文明是物价交换，完全不需要给政府拿走50%税，完全不需要经过银行，这是基本的问题。关键是我把钱存了，放在中间商，他赔了或者他破产了，谁负责？政府负责吗？不负责。银行负责吗？不负责。只要把东西和钱，我的生产（价值），我干的活等价核准成金也好，银也好，什么货币也好，只要对方接受它就是最好的，成本越少越好。关键是它不被兑水，它不会被消失。但银行破产的话，你钱就没了，没了就没了。存在银行的钱，它破产了，是可以不还的。
-
-6）丁关根说，大外宣存在，就是共产党执政的稳定器，就是让你出去的人，听了更愚蠢的话，还回到圈里边来。这叫会拐弯的子弹。
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+编辑： 平民正道    发布：平民正道
 
  
 
