--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,25 +1,41 @@
 ---
-title: 莫斯科称演习结束并从克里米亚撤军
+title: 有声&#124;加拿大疫情检验和疫苗强制政策骤现松动趋势
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014670/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2014872/)
 
-撰稿：东京樱花团/上善若水
+配音：香草山农场 – 纳米
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-40-1-11.png)
+近日以来，加拿大局部地区的疫情检验和疫苗强制政策突现松动趋势。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide4-8.jpeg)
+2月14日，安省省长福特宣布，大多数疫情限制措施自2月17日开始解除。3月1日将取消所有场所的疫苗证明要求，并取消室内设施容量限制。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/莫斯科称演习结束并从克里米亚撤军.png)（图片来源于本文链接）
+这些限制措施包括：到月底前，社交聚会将增加到室内50人，室外100人；餐厅、健身房、会议、室内宗教活动等，取消容量限制；电影院、音乐会等场地开放50%；超市、药房等场所只要能保持2米距离，容量不受限制。从下月起，取消疫苗护照及所有限制。
 
-俄罗斯周三表示，已完成在克里米亚的军事演习，并正在撤军。但观察家和西方国家仍对此表示怀疑。俄罗斯杜马本周二通过决议，呼吁普京承认乌克兰东部分离主义地区顿涅茨克和卢甘斯克为独立国家。俄罗斯国防部在周三的一份声明中说：“南方军区的部队在完成了对战术演习后，正在向其永久部署点移动。”俄罗斯国家电视台播放的画面还显示，包括坦克和大炮在内的军事装备从2014年以来被俄罗斯占领的克里米亚半岛过桥进入俄罗斯本土。本周二，莫斯科声称已将驻扎在乌克兰边境附近的数量不详的士兵送回了他们的基地。但观察家和西方领导人仍对俄罗斯的说法持怀疑态度，并警告说俄罗斯仍可能入侵乌克兰。美国总统拜登周二表示，美国的情报部门还需要核实俄罗斯撤军的说法。
+福特特别强调，提前重开计划，并非因为温莎的边境封锁，以及渥太华的抗议，而是基于疫情各项指标的持续改善。
 
-英国防长华莱士周三上午再次对俄罗斯说法表示怀疑。他向泰晤士报电台表示，“我们目前还没有看到任何有关撤军的证据。”北约秘书长斯托尔滕贝格在周三的新闻发布会上警告说，“俄罗斯保留了全面入侵乌克兰的能力”。他也对俄罗斯发出的矛盾信号表示怀疑：“我们看到的是俄罗斯在与乌克兰的边界上有非常强大的军事存在，但我们也看到莫斯科发出的给外交一个机会的信号。”斯托尔滕贝格还指出，在乌克兰边境附近的俄罗斯军队数量“继续增加”，而在过去，俄罗斯将大量部队和重型装备运入某地区，然后撤出士兵，但不撤出装备，这样就留下快速返回的选项。欧委会主席冯德莱恩周三也指责莫斯科发出了“相互矛盾的信号”。她说：尽管莫斯科宣布了这一消息，但“北约还没有看到任何俄罗斯削减部队的迹象”。她补充说：“我们昨天看到了希望……但这些表态必须落实到行动上。”
+此外，据2月11日《路透社》消息，加拿大卫生部长周五表示，因为奥密克戎变种病毒爆发的最糟糕阶段已经过去，加拿大正在审查其与疫情相关的边境限制措施，并可能会在下周宣布政策变化。
 
-2月15日，俄罗斯国家杜马通过一份决议草案，呼吁俄总统普京承认顿涅茨克和卢甘斯克为独立国家。顿涅茨克和卢甘斯克位于乌克兰东部。2014年5月两地民间武装宣布独立，分别成立“顿涅茨克人民共和国”（DPR）和“卢甘斯克人民共和国”（LPR）。DPR和LPR并未控制顿涅茨克州和卢甘斯克州的全部领土，也未得到国际承认。对上述决议草案，欧盟外交与安全政策高级代表博雷利15日在社交媒体发文，谴责其“明显违反《明斯克协议》”，并称欧盟坚定支持和承认乌克兰在其国际公认边界内的独立、主权和领土完整。
+据加拿大广播公司早先的报道，联邦政府即将取消其要求境外旅行的加拿大人，入境后必须接受强制性中共病毒PCR检测的要求。至发稿时，加拿大政府仍要求所有入境旅客在抵达后72小时内提供PCR检测呈阴性的证据。
 
-信息来源：
+文字版原文：[加拿大疫情检验和疫苗强制政策骤现松动趋势](https://gnews.org/zh-hans/2009635/)
 
-[莫斯科称演习结束并从克里米亚撤军](https://www.dw.com/zh/%E8%8E%AB%E6%96%AF%E7%A7%91%E7%A7%B0%E6%BC%94%E4%B9%A0%E7%BB%93%E6%9D%9F%E5%B9%B6%E4%BB%8E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E6%92%A4%E5%86%9B/a-60798778)
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
