--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,23 +1,37 @@
 ---
-title: 樱花FM┃从污水中的病毒含量掌控疫情 日本一新公司横空出世
+title: 中日财经爆┃吉利收购魅族造手机，能否破局智能汽车生态？
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014603/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014739/)
 
-音频：东京樱花团/战友520
-![](https://lh6.googleusercontent.com/hsXL9uq-q5W7KeGWc_LNcvNBNS-ji5JInFZCTzcOmA3mL5Et2cU6xftcNYQhoL8siNFTeFykcrXBZm1PSoR5_vaPx2Y3Ve_bmPnl0DHlfCDOJvq6GQtNmoHD01rsL49qy5Ky5NAl)
-盐野义制药与岛津制作所联合成立了一家新公司，主要方向是从污水中调查中共（新冠）病毒，他们将通过测试污水处理厂和医院等设施的污水中中共病毒含量来提供公共健康风险评估。这两家公司希望利用双方在传染病研究和理化技术方面的优势，帮助判断中共病毒是否扩散或是否得到有效遏制。
+撰稿：东京樱花团/喜马拉雅的微尘
 
-新公司名为AdvanSentinel，社长古贺正敏表示，没有症状或尚未发病的人所在区域可以作为一个群体进行监测。如果该监测系统能够被纳入基础设施，将有望为未来大流行病的预防发挥积极作用。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/吉利收购魅族造手机，能否破局智能汽车生态.png)
 
-新公司的目标是在几年后实现年销售额10亿日元，并希望今后不仅针对治疗中共病毒，而且能够在预防治疗其他流行病，如流感和脊髓灰质炎等方面起到重要作用。盐野义制药公司的新冠药物也即将在日本发售。
+[图片来源](https://techau.com.au/reminder-teslas-mobile-app-has-an-incredible-list-of-features-years-ahead-of-the-competition/)
 
-俗话说，商人的嗅觉最敏锐，看来未来很长一段时间，人类很有可能与各种传染性病毒共存了，尤其是一次次打入人体的疫苗还会造成S蛋白脱落，影响深远啊！
+近日，网传吉利将收购魅族以进军手机领域。
 
-文字版原文：[从污水中的病毒含量掌控疫情 日本一新公司横空出世](https://gnews.org/zh-hans/1975480/)
+据悉，目前该项收购正处于尽职调查阶段。尽管双方对媒体的求证都态度暧昧，有媒体从知情人处确认了信息属实。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+对于吉利为什么要造手机，李书福表示，打造生态圈，为了车机一体化，为了建设软件能力，为了让智能汽车更有竞争力。
+
+对于在传统汽车领域远远落后的中共车企，近年来把希望寄托在电动汽车、新能源汽车，甚至是智能汽车。对汽车智能化大趋势，手机作为智能入口，对于车机协同、万物互联意义十分重大。
+
+而特斯拉的发展路径又是中共车企对标和模仿的重要对象。特斯拉创始人马斯克此前就多次在公开场合提及要造手机。虽然特斯拉的手机还没影子，但特斯拉软硬兼施的商业生态已经初见端倪。
+
+近日，据海外媒体报道，特斯拉可能正在开发类似苹果App Store一样的应用程序商店，打造一个特有的车内生态系统并让客户享受各式各样的软件服务。
+
+显然吉利已经意识到，智能汽车就是未来的移动终端，手机是这个智能化生态的核心。
+
+对吉利这样的传统车企来说，收购魅族确实是制造手机的一条捷径，但是对于没有自己移动操作系统的中共国而言，造出与汽车互联的手机是否就真的掌握了智能汽车生态核心呢？
+
+信息来源：
+
+[吉利造手机，会是下一个格力吗？](https://finance.sina.com.cn/stock/s/2022-02-15/doc-ikyakumy6115017.shtml)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
