--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,17 +1,30 @@
 ---
-title: 欧盟转向将逐渐抛弃疫苗护照
+title: 樱花灭共诗——遇盲人歌手张磊回乡转站淄博相送有赠
 ---
-`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014593/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014738/)
 
-加拿大温哥华扬帆农场    平民正道
+撰稿：东京樱花团/小小杜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-69.jpg)
+困顿谁知得，
 
-据《德国之声》2月13日报道，欧盟经济专员保罗当天指出，疫苗强制接种政策已成为过去时，目前所有相关的强制措施都将不会在欧盟议会中得到大多数成员的支持。
+归乡万里身。
 
-报道称，由于疫情的危害程度正趋于缓和，整个欧盟因“新冠病毒”感染而死亡和住院的人数也都普遍下降。因此，欧盟高层官员认为各国政府再无理由强推疫苗护照及强制性防疫政策。并表示，欧盟正计划在近期内放宽大部分卫生限制，这已是大势所趋。
+鸣车将送客，
 
-* * *
+细雨欲留人。
 
-编辑： 平民正道    发布：平民正道
+陋俗多寻路，
+
+贤能不问津。
+
+琴声无识者，
+
+一任掩灰尘。
+
+校对：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
 
  
 
