--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,25 +1,21 @@
 ---
-title: 中日财经爆┃台积电加大日本战略布局  引入新投资提高芯片制程工艺
+title: 莫斯科称演习结束并从克里米亚撤军
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014592/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014670/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
+撰稿：东京樱花团/上善若水
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/台积电加大日本战略布局-引入新投资提高芯片制程工艺.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/莫斯科称演习结束并从克里米亚撤军.png)（图片来源于本文链接）
 
-台积电日本工厂2月15日（周二）传出了利好的进展。汽车零部件生产商电装(Denso)将对日本合资厂投资3.5亿美元，获得略超10%的股份。
+俄罗斯周三表示，已完成在克里米亚的军事演习，并正在撤军。但观察家和西方国家仍对此表示怀疑。俄罗斯杜马本周二通过决议，呼吁普京承认乌克兰东部分离主义地区顿涅茨克和卢甘斯克为独立国家。俄罗斯国防部在周三的一份声明中说：“南方军区的部队在完成了对战术演习后，正在向其永久部署点移动。”俄罗斯国家电视台播放的画面还显示，包括坦克和大炮在内的军事装备从2014年以来被俄罗斯占领的克里米亚半岛过桥进入俄罗斯本土。本周二，莫斯科声称已将驻扎在乌克兰边境附近的数量不详的士兵送回了他们的基地。但观察家和西方领导人仍对俄罗斯的说法持怀疑态度，并警告说俄罗斯仍可能入侵乌克兰。美国总统拜登周二表示，美国的情报部门还需要核实俄罗斯撤军的说法。
 
-在引入新[股东](http://data.eastmoney.com/gdfx/)的背景下，台积电也宣布将建设日积电的资本支出从此前的70亿美元提高至86亿美元。增加的投资主要用于新设一条12/16纳米FinFET工艺产线。在此前的建设计划中，日积电仅有22/28纳米芯片生产能力。三家公司同时宣布将日积电的计划产能提高至每月5.5万片12寸晶圆。
+英国防长华莱士周三上午再次对俄罗斯说法表示怀疑。他向泰晤士报电台表示，“我们目前还没有看到任何有关撤军的证据。”北约秘书长斯托尔滕贝格在周三的新闻发布会上警告说，“俄罗斯保留了全面入侵乌克兰的能力”。他也对俄罗斯发出的矛盾信号表示怀疑：“我们看到的是俄罗斯在与乌克兰的边界上有非常强大的军事存在，但我们也看到莫斯科发出的给外交一个机会的信号。”斯托尔滕贝格还指出，在乌克兰边境附近的俄罗斯军队数量“继续增加”，而在过去，俄罗斯将大量部队和重型装备运入某地区，然后撤出士兵，但不撤出装备，这样就留下快速返回的选项。欧委会主席冯德莱恩周三也指责莫斯科发出了“相互矛盾的信号”。她说：尽管莫斯科宣布了这一消息，但“北约还没有看到任何俄罗斯削减部队的迹象”。她补充说：“我们昨天看到了希望……但这些表态必须落实到行动上。”
 
-根据计划，日积电将在2022年内开工，并在2024年末投产。
-
-对于电装而言，入股日积电并确保更先进本工艺落地本土，有助于确保自动驾驶汽车所需的先进芯片能从本土供应。之前[索尼](http://quote.eastmoney.com/unify/r/106.SONY)提供570亿日元(约合5亿美元)不仅为了获取日积电不到20%的股权，同样也为了确保图像传感器芯片的供应。
-
-近年，随着全球灭共形势推进，以及美欧与中共在科技和供应链方面的脱钩，台积电也加紧美国和日本工厂的建设，以确保自身利益和全球芯片供应稳定。
+2月15日，俄罗斯国家杜马通过一份决议草案，呼吁俄总统普京承认顿涅茨克和卢甘斯克为独立国家。顿涅茨克和卢甘斯克位于乌克兰东部。2014年5月两地民间武装宣布独立，分别成立“顿涅茨克人民共和国”（DPR）和“卢甘斯克人民共和国”（LPR）。DPR和LPR并未控制顿涅茨克州和卢甘斯克州的全部领土，也未得到国际承认。对上述决议草案，欧盟外交与安全政策高级代表博雷利15日在社交媒体发文，谴责其“明显违反《明斯克协议》”，并称欧盟坚定支持和承认乌克兰在其国际公认边界内的独立、主权和领土完整。
 
 信息来源：
 
-[台积电的好消息和坏消息：日本厂调高工艺制程 美国厂工期延误](https://finance.eastmoney.com/a/202202162277474498.html)
+[莫斯科称演习结束并从克里米亚撤军](https://www.dw.com/zh/%E8%8E%AB%E6%96%AF%E7%A7%91%E7%A7%B0%E6%BC%94%E4%B9%A0%E7%BB%93%E6%9D%9F%E5%B9%B6%E4%BB%8E%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E6%92%A4%E5%86%9B/a-60798778)
 
 *编辑：东京樱花团/知了知了
 发布：东京樱花团/老黑*
