--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,23 +1,31 @@
 ---
-title: 樱花FM┃彭帅被中共胁迫配合冬奥表演 其安全仍令人担忧
+title: 意大利发现中共病毒在尸体中可存活41天
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014573/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2014650/)
 
-音频：东京樱花团/战友520
-![](https://lh5.googleusercontent.com/ORalobN-5Vt3L8l8jwWTLM6QRahn3yyFfQCZNzfVdsr1gVVLTD5COZYgh6-WbnuzlQhHjcz5cHOWoxIz4l-D--3qkHdMClRVFpvNXS9dAzr0jOL_l-FefxqSx8aDN_qifb3p0m_O)
-国际奥委会发言人马克·亚当斯(Mark Adam)星期一在北京举行的记者会上说，巴赫主席和其他国际奥委会的代表星期六与彭帅见了面，并分享了参加奥运会的经历。
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-亚当斯说，彭帅表示会在未来几天观看多场冬奥会赛事，并答应会与国际奥委会官员保持接触。记者们问亚当斯，彭帅是否能自由讲话，这位国际奥委会发言人说，国际奥委会不能对此作出评判。
+据《大纪元》2月16日报道，意大利科学家在一名乌克兰男子死后对他的尸体进行COVID-19（中共病毒）的筛检，发现该病毒可在尸体上存活41天甚至以上。
 
-彭帅是在中共官员的陪同下，接受外媒采访并宣布退休。说明彭帅一直没有人身自由，一直在被监控下生活着。不知道冬奥会结束后。她是否会依然健康地活着。
+英国《每日镜报》也对这则消息进行了深入报导：这名41岁的乌克兰男子与友人在意大利基替（Chieti）外海游泳时失踪，他的尸体于16个小时后在岩石之间被发现，随后被存放在当地一家医院的停尸间。
 
-在中国生活的人民，都是属于党的，看党的需要，党需要你牺牲的时候，你就必须献身没有选择。没有做人的基本人权。百年中共就是中国人民的百年灾难！
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-3-2.jpeg)图为医护人员在进行筛检。（图片来自Pixabay）
 
-文字版原文：[彭帅被中共胁迫配合冬奥表演 其安全仍令人担忧](https://gnews.org/zh-hans/1975551/)
+依据意大利目前的防疫规定，该名男子的尸体必须进行新冠筛检。尽管他的尸体被防水尸袋包裹而且以摄氏4度的低温保存，但邓南遮大学（D’ Annunzio University）的研究人员在41天内对他的尸体筛检28次，每次都呈现阳性。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+由于该名男子在41天的观察期之后已经下葬，研究人员无法再进行更多筛检，所以科学家可以确定中共病毒可以在尸体内存活多达41天，但感染的风险则有待进一步的研究才能厘清。目前尚无证据显示，尸体会将病毒传染给活人。
+
+研究人员在2月9日发表于《医学病例报告杂志》（Journal of Medical Case Reports）的研究报告中表示，这项研究对于病理学家了解什么时候解剖尸体是安全，以及有关病毒能存活多久的资料而言非常重要。
+
+由此事件，科学家已经知道，中共病毒可以在物体表面留存多达5天的时间，而先前的一项研究显示，游轮乘客在离开客舱17天之后，客舱内仍留有这种病毒。另外，德国科学家还发现这种病毒在病患死后35个小时依然能进行复制。
+
+参考链接： 
+[https://www.epochtimes.com/b5/22/2/16/n13580901.htm](https://www.epochtimes.com/b5/22/2/16/n13580901.htm)
+
+素材采编：幽蘭自得
+编辑：青城道姑
+发布：文曦
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
