--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,23 +1,20 @@
 ---
-title: 樱花FM┃三笠宮瑤子公主染疫 日本皇室首例中共病毒确诊
+title: 中共国产病毒测试棉棒导致健康危机
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014509/)
+`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014621/)
 
-音频：东京樱花团/战友520
-![](https://lh6.googleusercontent.com/IBpux8JUdJPeTZjz83lSa6mGMrDCplOrJvxlb4bIOC3ZbDsegXpTyU14dbnK244WFZpqYYcds_bUavJdBcn3_Vuxywv0WxJijdLAgLUev1DM5MtMiMMasYCSnyTsH-Qd81qpNvkQ)
-瑤子公主（38岁）在7日出三笠宮瑤子公主殿下被证实感染了中共（新冠）病毒，于1月8日晚被送入皇室医院，这是日本皇室首例确诊。
+加拿大温哥华扬帆农场    平民正道
 
-现喉咙痛，8日下午，皇家医院派医生到公主的赤坂住所探诊，并将标本带回进行PCR检测，确诊染疫。
+据英国媒体【每日内幕】2月14日报道，西班牙一位急诊医生近日公开呼吁，应立即停止使用现有的病毒测试棉棒，因为它会对人体健康造成巨大伤害。
 
-虽然瑤子公主除了喉咙痛之外没有其他症状，但是为了慎重起见，8日晚7点半前住进了皇室医院观察治疗。近几日与她有过接触的姐姐虽无任何症状也将接受检查。瑤子公主独自生活，感染的途径无从查明。
+报道称，这种产自中共国的测试棉棒，其主要材料是含有“水凝胶”物质的空心尼龙纤维，并含有大量环氧乙烷等有毒物质，会迅速造成咽喉底部溃疡等严重疾病。
 
-这是第一次在皇室中确认感染中共病毒，日本皇室表示，将继续采取彻底的措施防止感染，接受专家的建议。
+据悉，欧盟已严禁在食品生产和医疗保健过程中使用含[环氧乙烷]的物品。而使用来自中共国的病毒测试棉签进行强制擦拭，将导致人体直接吸[收环氧乙烷]，并将造成5至10年后患癌症机率的剧增。
 
-文字版原文：[三笠宮瑤子公主染疫 日本皇室首例中共病毒确诊](https://gnews.org/zh-hans/1975643/)
+* * *
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+编辑： 平民正道    发布：平民正道
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
