--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,16 +1,16 @@
 ---
-title: 挑战COVID疫苗授权和错误命名的诉讼已经提交给法庭
+title: 麦卡洛医生谈华盛顿的大型抗议疫苗强制系列活动
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014503/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014609/)
 
-##### 翻译：俏如来
-校对：Lish
-剪辑|字幕：蛮吉
+##### 翻译：ATX1230
+校对：枳实
+剪辑|字幕：小强
 编辑：守望黎明
 
-越来越多的人对新冠疫苗接种政策发起挑战，彼得.麦卡洛博士就是其中的一位。他在阿拉巴马州发起诉讼，指控美国政府在批准新冠疫苗的过程中，没有遵循推广疫苗的基本原则，未进行充分的危害平衡测试。特别是轻率地改变了疫苗的定义，同意辉瑞和莫德纳公司将mRNA这类尚不成熟的转基因疗法用在疫苗当中、实行大规模的人群接种。他认为这是一种完全不负责任、不可接受的违法行为。
+文贵先生早在1月30日的大直播中，就评价说：由美国众多医学界和科学界人士签署的、在林肯纪念堂抗议强制疫苗活动上发表的演讲，具有史诗般的意义。现在，美国的有识之士也开始认识到，这是美国医学和科学界大觉醒的标志。而这种觉醒，对于人们改变对疫苗的认知，阻止强制疫苗政策，进而拯救无数无辜的生命、彻底终结疫苗灾害的继续发展，具有重大的意义。
 
-视频来源：[A lawsuit has been filed in court challenging the authorization and misbranding of the COVID vaccines](https://twitter.com/vigilantfox/status/1490347332994572293?s=21)
+视频来源：[January was a month of -scientific reawakening- in America on the pandemic response and everyone is reassessing their situation.](https://twitter.com/p_mcculloughmd/status/1488495381705113602?s=21)
 
 *发布：Mttfly*
 
