--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,21 +1,39 @@
 ---
-title: 樱花FM┃德国总理在制裁俄罗斯问题上倾向美国
+title: NewSGman┃NewS Gman给大家拜年啦
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014005/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014198/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/hdnHSOUcQfynk1TXLnyydEwEXKL_Lvxwt0ag4RZb9a4hON7NTw1nlq_qfWUw5jW-bUfe3jXTwx-NM3QP3fJbcDZJTOjH_XBYCIzJn9TeG09ODUkyoQFhCGS4dTseCBDQP7agcoeJ)
-在1月7日访问华盛顿特区后，德国总理肖尔茨在与美国总统拜登举行的联合新闻发布会上警告说，如果俄罗斯入侵乌克兰，他将实施 “强有力的、意义深远的制裁”，并表示在制裁俄罗斯问题上将与美国 “一致行动”。
+撰稿：东京樱花团/NewSGman
 
-德国拒绝向乌克兰出口武器，至今没有对俄罗斯实施制裁，这让美国对它是否是一个可靠的盟友产生过怀疑。
+NewS Gman给大家拜年啦
 
-当被问及德国是否是一个可靠的合作伙伴时，拜登说：”德国是可信赖的盟友，美国和德国之间的信任是牢固可靠的。
+祝大家虎年吉祥
 
-文字版原文：[德国总理在制裁俄罗斯问题上倾向美国](https://gnews.org/zh-hans/1977398/)
+日本樱花团祝福全球战友虎虎生威火力全开灭共
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+新的一年全力以赴与郭文贵先生一起共建新中国联邦！
+
+传播真相！开启新时代 ！
+
+新人类 新世纪 超越想象之未来
+
+关注我们获取新中国联邦最新信息
+
+紧跟郭文贵先生灭共进程
+
+NewS Gman=New Sakura Group man
+
+欢迎新年加入日本东京樱花团成为新中国联邦人
+
+请点击链接**🔗**[https://discord.gg/NNWCeV8SNY](https://discord.gg/NNWCeV8SNY)
+
+盖特链接：https://gettr.com/post/prrdj5fdf4
+
+编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
