--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,20 +1,21 @@
 ---
-title: 中共国产病毒测试棉棒导致健康危机
+title: 樱花FM┃日本《自卫队法》修正案获批，意指共台开战可营救台湾人民
 ---
-`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014621/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014775/)
 
-加拿大温哥华扬帆农场    平民正道
+音频：东京樱花团/战友520
+![](https://lh3.googleusercontent.com/FpAMPEmy0yZfV6wDSekRgHvrnlY-RnEWcowMUjHqtA708BqaUMa44tGnFAccyrTgcn1b8Vod2f0q1H5AJcCwHOvbLkhaxYb9YgJTmxYiL-PXKEnNmLRBgsMiPe9Ntm5x_MaV69Sw)
+据JIJI.COM媒体报道，日本政府8月8日批准了一项自卫队法修正案草案，允许自卫队飞机在外国发生灾难、骚乱或其他紧急情况时仅运送外国国民。并表示还将修改确保运输安全的具体要件和要求。
 
-据英国媒体【每日内幕】2月14日报道，西班牙一位急诊医生近日公开呼吁，应立即停止使用现有的病毒测试棉棒，因为它会对人体健康造成巨大伤害。
+防卫大臣岸信夫在关于《自卫队修正案》的新闻发布会上强调，拟议的修正案，在未来的各种海外紧急情况下，能够更迅速和灵活地进行运输。并举例去年8月塔利班在阿富汗夺取政权时，政府向该地区派遣了自卫队飞机，但只有一名日本人撤离，而且大多数申请者是在日本大使馆工作的阿富汗人，但因自卫队法的盲点，而无法执行更人道的救助。
 
-报道称，这种产自中共国的测试棉棒，其主要材料是含有“水凝胶”物质的空心尼龙纤维，并含有大量环氧乙烷等有毒物质，会迅速造成咽喉底部溃疡等严重疾病。
+从日本首相岸田文雄对与台湾相近的与那国岛进行的模拟难民接收训练，到积极修改自卫队修正案，不难看出是对中共如侵犯台湾所作的一系列准备。
 
-据悉，欧盟已严禁在食品生产和医疗保健过程中使用含[环氧乙烷]的物品。而使用来自中共国的病毒测试棉签进行强制擦拭，将导致人体直接吸[收环氧乙烷]，并将造成5至10年后患癌症机率的剧增。
+文字版原文：[日本《自卫队法》修正案获批，意指共台开战可营救台湾人民](https://gnews.org/zh-hans/1974555/)
 
-* * *
-
-编辑： 平民正道    发布：平民正道
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
