--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,19 +1,25 @@
 ---
-title: 完全接种者感染艾滋病毒的风险大增
+title: 消防员1989年从柏林墙逃离到2022年的堪培拉
 ---
-`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014610/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2014748/)
 
-加拿大温哥华扬帆农场    平民正道
+##### 翻译：George Yang
+校对：Lish
+剪辑|字幕：小强
+编辑：慕纱公子
 
-据英国媒体《每日内幕》2月12日报道：[英国卫生安全局]和[苏格兰公共卫生部]近期联合公布的官方数据显示，完全接种“新冠病毒”疫苗的老年人和体弱群体将更有可能感染该病毒及患上艾滋病。
+视频中的女士是一位昆士兰的消防志愿者，她是曾脱离自前极权国家东德来到的澳洲。她渴望自由。她说从两年前开始，澳大利亚变得和前东德一样了。她指出，澳洲政府施行的相关强制措施是错误的。由此，她呼吁更多的人来参加这个关乎个人自由的抗议活动。她强调，“当我们形成了强大的团队时，我们才能与暴政抗衡。只有团结一致才能更强大”。
 
-报道称，官方数据清晰表明，相比那些未接种疫苗者，已接种人群更有可能因感染新冠病毒而患病住院甚至死亡。此外，mRNA疫苗将诱导“获得性免疫缺陷综合症”，并可使年轻的接种者在短短几周内就出现类似的自身免疫系统疾病如艾滋病症状等 。
+视频来源：[Fire Fighter escaped Berlin wall 1989 to end up in Canberra 2022](https://www.youtube.com/watch?v=SnP9Tae5wWY)
 
-评论指出，各项医疗数据和现实病例都逐渐证实了[新中国联邦]一直以来关于中共病毒及其疫苗均为生物武器的论点。同时也向世人揭露了中共政权长期勾结西方邪恶沼泽地势力，在全球范围内谋财害命的残酷真相。
+*发布：Mttfly*
 
-* * *
-
-编辑： 平民正道    发布：平民正道
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
