--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,29 +1,31 @@
 ---
-title: 中日财经爆┃北美最大巧克力企业全面撤离中共国
+title: USTR发布年度报告聚焦中共国非市场政策
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014511/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014639/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-266.jpg)
+[图片源](https://www.newsweekjapan.jp/headlines/world/2021/09/345779.php)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/北美最大巧克力企业全面撤离中共国.png)
+16日，美国贸易代表办公室（USTR）发布了关于中共国遵守世界贸易组织（WTO）规则状况的年度报告。指出针对中共国的“政府主导的非市场政策及做法”，美国亟待实施新的战略并急需修订相关法规。
 
-近日，好时（中国）天猫旗舰店已终止经营，其京东自营店内多款商品显示无货。内部员工透露，好时已在中国市场线下各地撤柜关店。
+报告指出，特朗普执政期间签署的美中第一阶段贸易协议，未能从根本上解决美方对中共国产业政策及大规模金融资源扶持政策的担忧。
 
-天眼查App显示，好时（中国）投资管理有限公司已经于2021年11月进行清算。该公司成立于2001年4月，法定代表人为ROHIT GROVER，注册资本约8.4亿美元，由美国好时国际有限公司（Hershey International LLC）全资持股。
+贸易代表戴琪在一份声明中指出，中共国种种行为违背其在加入世贸组织时作出的承诺。一直以来并未支持世贸组织以及世贸组织规则基石的市场原则。相反，在经济贸易方面正在扩大其政府主导的非市场政策。
 
-此外，ROHIT GROVER还关联有另外两家公司，分别为好时（上海）食品研发有限公司、好时商业（上海）有限公司。值得一提的是，好时（上海）食品研发有限公司已于2021年3月进行清算，好时商业（上海）有限公司已于2021年12月注销。
+报告指出，中共国正在实施不公平的政策及做法，且已超出几十年前美国制定的许多贸易法律法规。并指出，目前相应法规急需修正，以确保为美国工人和企业提供更公平的竞争环境。
 
-好时(HERSHEY’S)，是北美地区最大的巧克力及巧克力类糖果制造商。位于宾夕法尼亚州，是家具有120年历史的老字号公司。2018年12月，世界品牌实验室发布《2018世界品牌500强》榜单，好时排名第399。
+报告中明确指明，中方没有遵守第一阶段协议中的承诺，包括未做到对猪肉和牛肉中使用的促肥剂（莱克多巴胺）进行风险评估。
 
-好时（中国）的关闭，意味着又一家大型美国企业撤离中共国。
+信息源：
 
-信息来源：
+[ＵＳＴＲ、中国巡る通商報告　非市場的政策に対抗する戦略求める](https://news.yahoo.co.jp/articles/0ac0098abddae0915ab77c21dd1dd24fcd90e7ce)
 
-[好时在中国撤柜闭店，天眼查显示好时中国公司已清算](https://finance.sina.com.cn/jjxw/2022-02-10/doc-ikyakumy5205094.shtml)
+编辑：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
