--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,31 +1,27 @@
 ---
-title: 意大利发现中共病毒在尸体中可存活41天
+title: 樱花FM┃美日强化合作关系 应对中共军事威胁
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2014650/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014865/)
 
-**撰稿：日本东京方舟农场  幽蘭自得**
+音频：东京樱花团/战友520
+![](https://lh5.googleusercontent.com/K5HeQb2hCoZ05PefL85DI9eyjK3qffM9f_LryFU2zzKbRQ-YvFUiKJe_SGMza3__5_iLvtJXisszwuLIaWN06VODNE6H8Rd-qwpelwxwnh3HpQ-QLc00Sr0xysqeZsX5o6BVtUsh)
+近期美日两国在军事和外交上强化合作关系, 共同应对中共国在亚太地区的军事威胁。
 
-据《大纪元》2月16日报道，意大利科学家在一名乌克兰男子死后对他的尸体进行COVID-19（中共病毒）的筛检，发现该病毒可在尸体上存活41天甚至以上。
+2月7日，日本防卫大臣岸信夫与美国新任驻日大使拉姆・伊曼纽尔举行了首次会谈。会上，双方就中共国试图单方面改变现状以及北朝鲜接连发射导弹等问题共同表达了关切。
 
-英国《每日镜报》也对这则消息进行了深入报导：这名41岁的乌克兰男子与友人在意大利基替（Chieti）外海游泳时失踪，他的尸体于16个小时后在岩石之间被发现，随后被存放在当地一家医院的停尸间。
+岸信夫指出：“在亚洲，中共国试图单方面改变现状并和俄罗斯联合彰显威慑力，再加上北朝鲜接连发射导弹，诸多问题让安全形势不容乐观。而在欧洲，乌克兰正面临前所未有的紧张局势。”
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-3-2.jpeg)图为医护人员在进行筛检。（图片来自Pixabay）
+伊曼纽尔回应说：“中共国试图单方面改变现状一事是我们共同的课题。俄罗斯目前在乌克兰的企图以及北朝鲜的导弹试验，都在破坏基于规则建立的体系，损害其他国家的主权。”双方就日美密切合作达成共识。
 
-依据意大利目前的防疫规定，该名男子的尸体必须进行新冠筛检。尽管他的尸体被防水尸袋包裹而且以摄氏4度的低温保存，但邓南遮大学（D’ Annunzio University）的研究人员在41天内对他的尸体筛检28次，每次都呈现阳性。
+美军本月3日至7日动员超过1万名兵力，在冲绳的宫古海峡附近等处进行联合训练，日本自卫队也参加。美军陆战队准将艾里森（Kyle Ellison）表示，美日合作关系因此强化。
 
-由于该名男子在41天的观察期之后已经下葬，研究人员无法再进行更多筛检，所以科学家可以确定中共病毒可以在尸体内存活多达41天，但感染的风险则有待进一步的研究才能厘清。目前尚无证据显示，尸体会将病毒传染给活人。
+海军少将恩格道尔说，这是向同盟国家发出讯息，显示“我们有能力维持自由开放的印度太平洋地区。”
 
-研究人员在2月9日发表于《医学病例报告杂志》（Journal of Medical Case Reports）的研究报告中表示，这项研究对于病理学家了解什么时候解剖尸体是安全，以及有关病毒能存活多久的资料而言非常重要。
+文字版原文：[美日强化合作关系 应对中共军事威胁](https://gnews.org/zh-hans/1974180/)
 
-由此事件，科学家已经知道，中共病毒可以在物体表面留存多达5天的时间，而先前的一项研究显示，游轮乘客在离开客舱17天之后，客舱内仍留有这种病毒。另外，德国科学家还发现这种病毒在病患死后35个小时依然能进行复制。
-
-参考链接： 
-[https://www.epochtimes.com/b5/22/2/16/n13580901.htm](https://www.epochtimes.com/b5/22/2/16/n13580901.htm)
-
-素材采编：幽蘭自得
-编辑：青城道姑
-发布：文曦
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
