--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,23 +1,23 @@
 ---
-title: 港大发布报告称过敏病史者适合接种新冠疫苗
+title: 樱花FM┃从污水中的病毒含量掌控疫情 日本一新公司横空出世
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014459/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014603/)
 
-作者：东京樱花团   阿恩
+音频：东京樱花团/战友520
+![](https://lh6.googleusercontent.com/hsXL9uq-q5W7KeGWc_LNcvNBNS-ji5JInFZCTzcOmA3mL5Et2cU6xftcNYQhoL8siNFTeFykcrXBZm1PSoR5_vaPx2Y3Ve_bmPnl0DHlfCDOJvq6GQtNmoHD01rsL49qy5Ky5NAl)
+盐野义制药与岛津制作所联合成立了一家新公司，主要方向是从污水中调查中共（新冠）病毒，他们将通过测试污水处理厂和医院等设施的污水中中共病毒含量来提供公共健康风险评估。这两家公司希望利用双方在传染病研究和理化技术方面的优势，帮助判断中共病毒是否扩散或是否得到有效遏制。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/港大发布报告称过敏病史者适合接种新冠疫苗.jpg)
+新公司名为AdvanSentinel，社长古贺正敏表示，没有症状或尚未发病的人所在区域可以作为一个群体进行监测。如果该监测系统能够被纳入基础设施，将有望为未来大流行病的预防发挥积极作用。
 
-养和医院与香港大学李嘉诚医学院最近在《世界过敏组织杂志》发表一项研究，称去年2月至6月接受疫苗过敏安全评估的个案中，近98%有过敏病史的求诊者，经免疫及过敏病科专科医生评估为适合接种新冠疫苗。该研究团队指，新冠疫苗对大部分过敏症状人士安全，市民无需进行不必要的转介而延误接种疫苗，团队还建议删除新冠疫苗过敏人士的指引。
+新公司的目标是在几年后实现年销售额10亿日元，并希望今后不仅针对治疗中共病毒，而且能够在预防治疗其他流行病，如流感和脊髓灰质炎等方面起到重要作用。盐野义制药公司的新冠药物也即将在日本发售。
 
-港府借第五波疫情对新冠疫苗的注射发起总攻，近日连三岁的幼童也批准注射。据港府的数据显示， 本港有726万人适合接种疫苗，但仍有161万人未曾注射。据悉大部分人因为疾病和过敏史获得豁免，面对新冠疫苗无效的显示问题，注射的阻力大增，港府唯有实行疫苗通行证强迫市民注射，但不少人宁愿不去受限制的场所也不肯注射，又轮到专家们用迂回的方式配合强制疫苗，近日港大声称发布了研究报告，其研究结果是98%的有过敏历史的人都适合注射新冠疫苗，并要求港府删除新冠疫苗过敏人士的指引。专家此举似乎掐断了这部分港人的后路，但命运是掌握在自己手上的，明知自己身体不适合接种，也知道新冠疫苗无效有毒必遭不测，如何能相信这些丧心病狂的专家，现在除了不去限制场所舍弃享乐外，港人还开创了另一条道路“司法复核”，即使没有公正的判决，百万市民接连向高院递交诉状一起和港府消磨时间。爆料革命郭文贵先生预告新冠疫苗注射将在短期内停止。因此没有注射的香港人一定要坚持，用尽一切办法保护自己和家人。
+俗话说，商人的嗅觉最敏锐，看来未来很长一段时间，人类很有可能与各种传染性病毒共存了，尤其是一次次打入人体的疫苗还会造成S蛋白脱落，影响深远啊！
 
-资料来源：
+文字版原文：[从污水中的病毒含量掌控疫情 日本一新公司横空出世](https://gnews.org/zh-hans/1975480/)
 
-[疫情消息｜首批「疫苗過敏安全門診」求診者 近98%適合接種疫苗](https://hd.stheadline.com/news/realtime/hk/2309141/%E5%8D%B3%E6%99%82-%E6%B8%AF%E8%81%9E-%E7%96%AB%E6%83%85%E6%B6%88%E6%81%AF-%E9%A6%96%E6%89%B9-%E7%96%AB%E8%8B%97%E9%81%8E%E6%95%8F%E5%AE%89%E5%85%A8%E9%96%80%E8%A8%BA-%E6%B1%82%E8%A8%BA%E8%80%85-%E8%BF%9198-%E9%81%A9%E5%90%88%E6%8E%A5%E7%A8%AE%E7%96%AB%E8%8B%97)
-
-*校对：东京樱花团/文小白
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
