--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,15 +1,44 @@
 ---
-title: 五月花简报（02/15/2022）
+title: 美国天主教会对疫苗豁免存在分歧
 ---
-`mayflowertranslate` [轉載自GNews](https://gnews.org/zh-hans/2014454/)
+`topnews` [轉載自GNews](https://gnews.org/zh-hans/2014551/)
 
-编辑：波士顿五月花—-冲天一怒
+作者：Rebecca (一切心皆不可得！)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screenshot-2022-02-16-212350-1.jpg)
+图片来自网络
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/A65BD08E-6196-42F3-873F-E05CBBCA27B4.jpeg)
+美国天主教会内部存在分歧——尽管教皇弗朗西斯已经明确表示支持接种疫苗。同时一些主教禁止他们的神父协助信众寻求疫苗豁免，但仍有其他主教和神父已经为那些声称出于天主教理由反对接种疫苗的人提供了模板信函。
 
-*发布：思澈*
+俄亥俄州不伦瑞克市圣安布罗斯天主教教区的鲍勃·斯特克牧师通过电子邮件表示：“我们收到了很多请求，并帮助很多人处理了他们的信件/请求。”
+
+“接种疫苗不是一项普遍的义务，一个人必须服从他或她自己知情和上帝赋予的良心的判断，”斯特克提供的一封信中说。“如果天主教徒在良心上做出知情和确定的判断，认为他或她不应该接种疫苗，那么天主教会承认该人……有权拒绝接种疫苗。”
+
+国家天主教生物伦理中心（ National Catholic Bioethics Center）也是如此，这是一个智囊团，董事会中有著名的主教。
+
+该中心的模板信说，个别天主教徒可能会解释教会教义，得出结论认为他们接受任何与堕胎有关的医疗产品是错误的。
+
+该中心的伦理学家兼教育主任 Tad Pacholczyk 牧师指出，梵蒂冈规定疫苗“必须是自愿的”。他在一份声明中说，教会“强烈鼓励保障良心权利”，批评雇主要求采取“一刀切”的做法。
+
+他说：“这些决定完全掌握在患者个人手中，他们可以比任何联邦机构、政治家或雇主更有意义地评估他或她的实地情况。”“对强制疫苗的良心豁免需要不仅对天主教徒，而且对所有人都开放。”
+
+据报道，今年1月，梵蒂冈城教皇弗朗西斯的两名高级官员尽管都已接种了三剂中共病毒（Covid-19）疫苗，但是，中共病毒检测依然呈阳性。
+
+消息传出后，天主教徒立即在社交媒体上表达了对这种情况的看法。具有讽刺意味的是当时“梵蒂冈强硬接种中共病毒疫苗的措施”——解雇了城邦内拒绝接种中共病毒疫苗的人。去年9月，教皇方济各对那些反对“接种实验性、带有堕胎成分的中共病毒疫苗”的人大发雷霆说，在红衣主教团中甚至也有一些反对接种中共病毒疫苗的人。包括雷蒙德-伯克主教，他直言不讳地指出接种中共病毒疫苗的不道德性，根据真实的天主教教义，坚持认为信徒必须尽可能避免与堕胎有关的药物。
+
+疫苗灾难让所有人认真思考强制疫苗的荒谬和无耻，教会同样也在反思。
+
+备注：
+
+- 疫苗：是指新冠疫苗
+- 中共病毒：是指新冠病毒Covid-19
+- Covid疫苗本身就是随时爆发的病毒
+- 我们不反疫苗，只针对假疫苗
+- 我们不反科学，只针对反人类
 
 
+新闻来源链接：[Top ranking Vatican cardinal, archbishop test positive for COVID even after getting booster shot](https://www.lifesitenews.com/news/top-ranking-vatican-cardinal-archbishop-test-positive-for-covid-even-after-getting-booster-shot/?utm_source=top_news&amp;utm_campaign=usa)
+
+*上传排版：Hong*
 
  
 
