--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,58 +1,15 @@
 ---
-title: 今日说币：上天给新中国联邦人元宵节最好的礼物
+title: 当务之急：中共≠中国人
 ---
-`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2014432/)
+`MilesGuoLivePPT` [轉載自GNews](https://gnews.org/zh-hans/2014533/)
 
-**整理：小亮**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/33-1.png)
-郭先生在2月15号的盖特上说：上天给新中国联邦人元宵节最好的礼物：重磅！美国财政部确认，加密矿工和钱包运营商不受美国国税局报告规则的约束，并制定了适当的法规。 随着美国财政部计划让加密矿工和其他“附属方”免受纳税申报规则的影响，美国加密货币行业即将取得重大法律胜利。
+文贵大直播20220216
 
-评：这意味着Hpay作为一款钱包在美国的使用将无需交税和受到法律的保护，由于美国作为世界的金融和经济的领导者，同时也是世界上最大的数字货币用户人数和资产持有者，相信美国的法规政策将很快被其它发达国家所效仿。Hpay在世界将越来越多的国家和人将使用。
+撰稿：Poplar（盘古）Lakeman（文仁）（77功成）
 
-**世界的经济脉络只在3条线上**
-
-1，科技文明发展，就是创意，是世界第一经济生产力；
-
-2，流通性越快越厉害，人类97.8%是在陆地上住的，只要你在陆地上住着，你不可能有任何交通工具代替货车；
-
-3，人与人之间的货币流通，不会再被人卡脖子了，HPAY就牛在这儿。HPAY就这样做到了
-
-郭先生在直播中说过：战友之间的看病，HDO的交往、Hpay用得越多越好。发现战友真的不是一般的傻，没有人了解Hpay。鼓励大家打赏节目，Hpay就要在战友之间流通。Hpay适合各个领域。有人打赏喜币，包括孩子帮助了别人，你可以给孩子几个币的奖励。
-
-你把100块钱给了银行，银行留下3%。97%记了个数据它又借给了另外一家银行，在银行的报表上你存100块钱，这钱就属于银行的了。银行答应你说你可能把钱取回去，但法律规定银行破产一分不用还你。没倒闭前，银行只给你3%的备用金，其它都不是你的，都在帐表是它的钱。它给了另外一家银行，另外银行又变成了它的钱，就这么一次次累加，这就叫银行资产。这都是假的，这就叫数据。每八年来一次破产，这些钱都不用还了。银行根据所有你的存款，印出大量的钞票，这就叫流动性，就是让你继续劳动。你越辛苦，他赚钱，最后（钱）就落到几个人手里，全人类就给几个人打工。最辛苦的人一定不是最幸福的人。金钱，银行是人类上最大的骗局。
-
-比特币本来很伟大，但它没办法，因为它去中心化，被人家利用洗钱、犯罪，（被）所谓真正的合法的流氓沼泽地把它干掉。
-
-那只剩下喜币呀，如果不相信不要用喜币。战友们有没有卖币套现你们自己去问。那个市场是不是百分百地真实，你可以看得出来。唯一世界上没有操纵价格的就是喜币。
-
-金融市场会爆跌爆涨，虚拟货币最大赢家是Hpay,喜币，还用想吗!你有种别买。
-
-现在卖币的人，你后悔早着呢！看到很多战友傻乎乎的场外60、65、70卖了，你哭的那天很快就会到来，要超过三个月，你就骂我。你不知道在发生什么，此时此刻在发生什么！
-
-我没有决定权、我没有控制权但我有绝对影响他们。我所有的这些关系和积累的信用、知识，他们信我的。
-
-三个条件：国家主权认可，大额投资，HPAY全面使用。世界所有经济在崩塌的时候，喜联储、HPAY，喜币，躺平币，使用即金钱。
-
-国内的战友们，一定要记住，只要你使用盖特、 GTV、Gnews、HCN就是金钱。
-
-看看世界经济这个德性的时候，只有咱们独好。盖特只会赚钱不会赔钱，GTV是控股公司只能是越来越值钱，每一秒钟，天天睡觉它都在挣钱。GTV拥有的盖特、喜联储所有这些股票。G|CLUBS你有什么损失？你未来只赚不赔。GFashion 、Gnews你有什么输的，都只会增加。
-
-- 据《华尔街日报》报道，美国证券交易委员会正在调查 Binance.US 的两家交易子公司，想了解 CZ（赵长鹏） 的参与性质，以及这些关系是否已适当地向客户披露，公开调查并不一定表明有不当行为。币安的创始人兼首席执行官赵长鹏去年年底控制了这两家公司。正在接受调查的两家公司是 Sigma Chain AG 和 Merit Peak Ltd，也是 Binance.US 的做市商。关于 Merit Peak 的信息很少公开，但 Sigma Chain AG 位于瑞士楚格，CZ 担任总裁至 2019 年 9 月。其现任总裁是陈光英。
-- 2/14 前美联储堪萨斯市总裁Thomas Hoenig确认说：“美联储凭空创造出6-7万亿美元（包括存款和货币），直接注入经济。中央银行，只是另一种形式的政府负债。美元是建立在信心和大众幻觉基础上的法币骗局，没有任何东西包括黄金来支撑。”
-- 持续增长的市场：【美国持有加密货币的公民比例达到24%，首次超过储蓄账户持有比例】2 月 16 日，Morning Consult 发布的一份关于美国消费者支付和储蓄现状的研究报告中称在一次面向 2200 名美国成年公民进行调查问卷显示，24% 的受访者表示持有加密货币，高于 23% 的储蓄账户持有比例。 ​
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/44-1.jpg)
-- 据 Decrypt 报道，在许多缉获中，政府会将资金退还给受害者。但在这种情况下，结果是不确定的，因为该案的受害者是一家名为 Bitfinex 的离岸加密货币交易所。
-
-
-一位律师表示：“美国政府可以拒绝归还，理由是这笔钱本身就是犯罪所得……法律界普遍对 BitFinex 和 Tether 持怀疑态度”。佛罗里达州的加密货币律师 David Silver 指出，Bitfinex 未能实施 KYC 要求，意味着更难确定谁是受害者。“验证账户持有人将非常有趣。如果我不得不冒险猜测，我认为政府会想要控制资金的分配，这样它就可以识别每个人并征税。”
-
-此外，甚至有人认为，客户可能会要求 Bitfinex 收回 7200 万美元（当时支付的），然后其他人按比例收回他们的比特币。
-
-司法部本周早些时候表示，它将建立与回收的比特币相关的索赔程序，但没有提供有关如何或何时发生的更多细节。
-
-- 2月12日 CryptoPunk 5822 以8000个ETH的价格出售，约合2370万美元，为CryptoPunk系列历史最高成交价格，购买者为 deepak.eth。
-
+美工：健身建心（英喜）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片1-20.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片2-22.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片3-20.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片4-20.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片5-20.png)![](https://assets.gnews.org/wp-content/uploads/2022/02/幻灯片6-19.png)
+*发布：Theodosia*
 
  
 
