--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,23 +1,39 @@
 ---
-title: NewSGman┃郭文贵先生2022新春大直播开场演唱甜蜜蜜
+title: 樱花FM┃北京冬奥：美国顶级华裔选手谷爱凌和陈内森分别代表正义与邪恶
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014424/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014508/)
 
-撰稿：东京樱花团/NewSGman
+音频：东京樱花团/战友520
+![](https://lh5.googleusercontent.com/zejLElR24UfeBeeJW_HXCJmZIHSdXsiaAx2GVb9G9UGt6P5WhBteH646mzn8GQMarCTIA0AXkcqZX0REqbHPQJR3Ufmfdy9F-hSwGlSbu8SlYAvEbp4iikWgNNF1pd24qxvydFy6)
+**北京纳粹运动会将正道主义与邪恶全球化的人心演绎的无与伦比，在中国共产党的逻辑里，长着华裔面孔的美国运动员，无论你多优秀，无论你走到哪里，你要么披上血旗代表中共国，要么被消失或成为他们眼中的叛徒。**
 
-happy chinese new year 2022
+据美国新闻（USA TODAY）8日消息称，“仅次于陈内森的全美第二名男子花样滑冰运动员文森·周（Vincent Zhou）在周日的例行筛查测试中检测出中共病毒（Covid-19）呈阳性。”这位 21 岁的选手代表美国参加团体比赛，并计划于周二参加短节目单人比赛。”但现在他将无法参加比赛，周说：  “我已经记不清今天哭了多少次了，”“至少有一次是快乐的眼泪，那是我发现自己成为奥运会银牌得主的时候，我认为这很好地总结了积极的一面。”
 
-祝福全球战友新春甜蜜蜜健康平安
+目前尚不清楚中共国奥运闭环系统内如何确定所有人的阳性和阴性检测，中共病毒检测的政治意图很明显，特别是对外交抵制国运动员不公正对待，在中国共产党逻辑里，长着华裔面孔的美国运动员无论你多优秀，无论你走到哪里，你要么披上血旗代表中共国，要么被消失或成为他们眼中的“叛徒”，而陈内森和周文森等华裔运动员已经在中共国社交媒体上被侮辱。
 
-七哥特别版甜蜜蜜歌声中开启虎年灭共！
+陈内森去年10月在他母亲家乡微博平台上发布了他将代表美国队出征2022北京冬奥会的帖子后吸引了 152 个不温不火的点赞。与此同时，另一名华裔美国人周文森在其他微博上发布“支持队友对中国人权记录的批评”的帖子被视为“侮辱中国”。
 
-盖特链接：https://gettr.com/post/prmblg165d
+有关陈内森和周文森的冬奥会消息在中共国北京奥运官网和任何媒体上都无法搜索到，不一样的感觉是另一名出色的美国华裔运动员谷爱凌的消息却在中国搜索引擎上成为热搜，因为谷爱凌这次冬奥会比赛是披上血旗代表中共国出征——获得金牌。她在脸书上写道，“我为我的血统感到自豪，也为我的美国成长经历感到自豪，”谷继续说道，“在 2022 年北京冬奥会期间，有机会帮助激励我母亲出生地的数百万年轻人，这是一个千载难逢的机会，可以帮助推广我热爱的这项运动。”殊不知，谷爱凌是在激励中共国反人类政权，而不是激励中共国年轻人的拼搏梦，世界著名网球明星彭帅的遭遇就是最好的例子。
 
-编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+- ***延展阅读：***[***彭帅在中国奥委会安排下否认性侵指控并宣布退休***](https://www.axios.com/peng-shuai-ioc-meeting-beijing-olympic-games-228d8cc8-e270-4dff-af91-1f0270cf232b.html)
 
 
+这种对比说明了当代美国顶级华裔运动员在他们祖先的土地上比赛时所面临的格局发生了惊人的转变，以前的美籍华裔体育明星，例如网球的张伟霆和花样滑冰的关晓彤，仅仅因为是华裔，就在中国几乎享有英雄般的地位地位。陈先生和周先生不仅不会像偶像一样被崇拜，而且还被称为叛徒或恶棍，悲哀的是，他们要在北京这样残酷的政治环境中竞争。这不是谷爱凌所说的那样——激励中国的年轻人，而是在为北京——中共反人类政权背书。因为北京正在以“双奥之城”为荣。这正是见证中国共产党行将退出历史舞台的意义所在，从2008的改革开放运到2022的政局动荡。
+
+陈内森已是一位地道的美国人，他说，“我为我的血统感到自豪，我为我的文化感到自豪，我为自己是亚裔美国人而自豪。”可见，陈是一位自信而热爱故国的美国人，正因为如此，陈和周均对北京的人权提出批评。可喜的是两人在周一结束的多日团体赛中共同获得银牌，但遗憾的是星期天晚上陈先生的中共病毒检测呈阳性，这使他在奥运会上的其他表演处于危险之中。
+
+- ***延展阅读：***[***福克斯 – Eileen Gu 的赞助商展示了“美国腐败和软弱的公司***](https://www.foxnews.com/media/eileen-gu-ski-us-china-corruption-citizenship)***”***
+
+
+被美国体育媒体称为“四王”的陈内森在北京冬奥不负众望，在队友倒下之时，他依旧以无与伦比的113.97分成绩夺得金牌，获得了第一名，超越了他在美国花样滑冰锦标赛的成绩。他 的得分让他完美地获得了遥遥无期的奥运金牌。同样是第一，谷爱凌的命运和陈内森的命运将由此改写，谷作为美国人代表了美国邪恶丑陋的一面支持着北京，将臭名昭著；而陈展示了美国的强大且无与伦比的尊贵。
+
+值得一提的是，谷爱玲还是一名模特，曾与中国银行、中国移动和 Beats by Dre 达成了丰厚的品牌合作交易；她是斯坦福大学的学生，尽管她一生大部分时间都代表美国，但在 2019年她决定代表中国参加北京冬季奥运会。一些华裔美国人对谷爱凌最直言不讳的批评。谷代表中共国，间接纵容了中共对西部维吾尔族等少数民族的持续迫害、2019 年至 2020 年香港的民主抗议活动，以及三届奥运选手和网球明星彭帅的神秘拘留——前中共领导人张高丽对其性侵指控。
+
+文字版原文：[北京冬奥：美国顶级华裔选手谷爱凌和陈内森分别代表正义与邪恶](https://gnews.org/zh-hans/1975438/)
+
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
