--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,27 +1,21 @@
 ---
-title: 俄乌危机持续 美将军示警中共可能趁机生事
+title: 樱花FM┃港府防疫令扩至私人处所 撇清劳资纠纷
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/2014416/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014507/)
 
-**撰稿：日本东京方舟农场 Kevin wang**
+音频：东京樱花团/战友520
+![](https://lh6.googleusercontent.com/XFVe6hoF9zU4wV4_kJsXqMbeKaaXQsWnDgCMit57nyQc1ym7YofUsK9k4RlXTGLoQMbpU_TTEvzfhh-JREPUcNWLB1Vjv6s4Qob14smTrDENA_MZlCBdFGb-86yOk8xEHUQU4XkI)
+林郑月娥今日（8日）宣布最新防疫措施，限聚令收紧至2人，适用于私人处所，禁止两个家庭以上在私人地方进行跨家庭聚会。港府将修订《雇佣条例》，若雇员不愿接种疫苗而无法上班被解雇属合理解雇。雇员因被围封或须隔离而缺勤，雇主不得解雇雇员。林郑称，此修订可减少劳资争拗。
 
-2月16日，美国太平洋空军司令维巴赫发出警示，在世界各国专注俄乌紧张局势之际，中共可能趁机在亚洲生事。
+新冠变种病毒Omicron蔓延全港，港府应专家们的强烈要求公布更严格的防疫禁令，只允许2人聚集，连市民的家也受监管。这种荒诞无人性的禁令在中共国是习以为常的，港府推出这样的禁令，足以证明民主自由已彻底在这片土地上消失。港府无休止的禁令导致百业萧条，尤其是封楼强检和强制隔离囚禁港人的防疫措施，导致许多人失去工作，收入大幅减少，雇主和雇员之间的矛盾重生，引发众多劳资纠纷，港府高官早前曾表示爱莫能助，今日港府却宣布将修订《雇佣条例》以减少劳资纠纷，但字里行间清晰地透露出港府刻意将暴政纳入现行的法规中，强制注射新冠疫苗在《雇佣条例》中将合法化，雇主可依法解雇反对疫苗的雇员；强制检测和强制隔离也合法化，雇主须依法承担雇员被防疫暴政造成的损失。港府偷梁换柱的手段与中共如出一辙，在此时修改《雇佣条例》，意味着疫情将长期持续下去，港府可依法免除暴力防疫所产生的责任。
 
-据《中央社》报道，维巴赫16日在新加坡航空展表示，中共国在俄乌危机中与俄国沆瀣一气，目前更要担忧中共会趁机牟利，在中共国看到俄乌的紧张局势后，中共可能会在印度洋或者太平洋地区做些什么。值得注意的是，美国太平洋空军总部位于夏威夷，若太平洋地区爆发冲突，空军司令维巴赫将扮演核心角色。
+大部分港人都明白今日所遭受的一切是港府过度防疫中共病毒所引起的，效仿西方民主国家与病毒共存的方法才是出路，但中共正是要利用病毒将香港推回奴隶社会，每日都为吃穿忧虑的港人如何有气力再去争取民主和自由。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片-1-19.jpeg)（图片来自联合新闻网）
+文字版原文：[港府防疫令扩至私人处所 撇清劳资纠纷](https://gnews.org/zh-hans/1974737/)
 
-据悉，中共连年挑动亚洲地区的紧张气氛，同时稳步控制南海的关键岛礁。中共主张拥有南海几近全局的主权，但台湾、文莱、马来西亚、菲律宾、越南都主张拥有部分主权。美国与其他西方国家虽未在南海声索主权，但他们担心在中共的控制下，这块战略海域的航行自由可能受到侵害。
-
-此外，中共自2021年以来，加强施压台湾，屡次派遣军机侵扰台湾航空识别区（ADIZ）。新中国联邦创始人郭文贵先生在直播中也多次示警世界，称俄乌一旦发生战争，中共会趁机攻打台湾。
-
-参考链接：
-[https://www.cna.com.tw/news/aopl/202202160205.aspx](https://www.cna.com.tw/news/aopl/202202160205.aspx)
-
-素材采编：Kevin wang
-编辑： 青城道姑
-发布：文曦
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
