--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,22 +1,25 @@
 ---
-title: 英国官方实验室证实疫苗内含氧化石墨烯
+title: 樱花FM┃美国批准对台湾一亿美元军售
 ---
-`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/2014646/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014826/)
 
-加拿大温哥华扬帆农场    平民正道
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/nn04NK2dkw8qGSS-GsG1bb0K5x70y2nJZjOhLK1omJ0EgkOjpLgOsRwsr3KiX_rDjkbE7_E01JlstcI_lCZoJ_kN7i_J5A1ahcgT3ueD3EiBTDkFupxceWisHig1QZsR5vT0Hz0g)
+美国国防部周一(2月7日)表示，美国已经批准向台湾出售价值或达1亿美元的设备和服务，以“维持、维护和改进”台湾爱国者导弹防御系统,台湾外交部对此表示“高度欢迎”。
 
-据英国媒体《内幕消息》2月13日报道，英国官方实验室已证实，现有的“新冠病毒”疫苗中的确含[氧化石墨烯]成份。
+国防安全合作局在一份声明中说，对爱国者防御系统的升级将“有助于改善受援方的安全，并协助维护该地区的政治稳定、军事平衡、经济和发展”。
 
-报道称，此次送检疫苗包括[辉瑞]，[莫德納]和[阿斯利康]三家制药厂的产品。其中，生产商未申报的疫苗内含物是本次实验室检测的重点对象。分析结果显示，尽管所有送检样本中都存在石墨烯，并且普遍采用脂质纳米颗粒作为药物输送机制，但这些碳复合材料、石墨烯化合物和氧化铁等物质都是在疫苗成分列表上所没有注明的。
+国防安全合作局说：“这项军售计划通过支持受援方继续努力使其武装部队现代化并保持可靠的防御能力，符合美国的国家、经济和安全利益。”
 
-据悉，石墨烯纳米材料可以穿透人体的天然保护屏障，进而损害中枢神经系统。而石墨烯氧化物则不仅损害人体器官，破坏血液健康，引发癌症，而且还可导致基因功能发生衰变。但各国政府和生产药商却从未告知民众其疫苗中含有这些致命物质。
+台湾外交部在一份声明中称，面对中共国持续的军事扩张和挑衅行为，台湾将以坚实国防维护国家安全，并持续深化台美紧密安全伙伴关系。
 
-目前，该调查报告已提交英国警方刑事部门，以期当局尽快采取进一步调查和追责行动。
+台湾国防部表示，该案可望在1个月后正式生效。
 
-* * *
+文字版原文：[美国批准对台湾一亿美元军售](https://gnews.org/zh-hans/1974148/)
 
-编辑： 平民正道    发布：平民正道
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
