--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,25 +1,26 @@
 ---
-title: 樱花FM┃按照中共的防疫清零政策冬奥会开幕式参加者都需要隔离
+title: 秘翻在线：科学吃屎 粪菌胶囊
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2014219/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2014343/)
 
-音频：东京樱花团/战友520
-![](https://lh6.googleusercontent.com/wwl8TOBZ1T1-PSMPaFoJRhvDmvHYO9zLRlns8pK3NexYVd9chSyt0YPqc7U5dI0zDaeoZEq6SsUG2ny816NvbIQBTAbatnHihv4wI1ahIfikn-y3WuQfuhGJ0RNeJ7lY_TrOcEcQ)
-2月8日Q电视新闻消息：出席了北京冬奥会开幕式的巴布亚新几内亚总理马拉佩被确诊感染中共病毒(新冠病毒Covid-19)。
+**撰稿：葛大饼**
 
-根据中共国外交部的消息，马拉佩于本月3日抵达北京，随后的PCR测试结果呈阳性，接受了检查和治疗。
+**责编：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/222-2.jpg)图片来源：无癌家园
+根据2022年2月15日网易报道，《新英格兰医学杂志》期刊上发表了一项Ⅲ期临床试验ECOSPOR III的数据，该实验是评估粪便提取物口服药丸SER-109在治疗复发性艰难梭菌感染中的临床疗效以及安全性。
 
-马拉佩出席了4日的开幕式，但随后与中共国总理李克强的会晤是通过网络在线进行的。
+研究结果显示，与安慰剂治疗相比，SER-109口服药丸治疗能将相对风险降低68%。而且SER-109药物中携带的菌群也可有效定植于患者体内，安全性与安慰剂组相近。在我们的人体肠道中，产毒的艰难梭菌如果大量定植会导致腹泻，但是目前市场上的药物并不能除根此病症，于是科学家们研制出了这个新方法：先用抗生素杀死这些菌株，然后空投救援部队，服用粪便提取药物来定植肠菌，修复肠道稳态，抑制艰难梭菌的孢子萌发或复制，预防复发。
 
-中共国外交部强调，来自巴布亚新几内亚的访问团在北京逗留期间遵守了疫情防控管理规定。因此，不会带来影响。
+新闻称这项Ⅲ期临床试验不仅为复发性艰难梭菌感染的治疗带来新的希望，也是粪便提取药物正式踏向临床应用的重要一步，如果粪菌移植治疗能够正式获批，那或许也可以为癌症治疗带来新的解答方案。
 
-这说明北京冬奥会会场内，明明白白的进去了感染者。那么，按照中共国迄今为止对武汉、西安等地居民实施的“一人感染全楼隔离”的清零政策，是不是包括习近平在内的所有参加了冬奥开幕式的人，都是密切接触者，都该隔离呢？
+值得一提的是在2019年的临床试验中，两名免疫功能低下的参与者在接受FMT后出现新感染，其中一人死亡。这使得人们不得不重新审视FMT在临床治疗中存在的严重或危及生命的潜在感染风险，比如血流感染和耐药菌传播等。
 
-文字版原文：[按照中共的防疫清零政策冬奥会开幕式参加者都需要隔离](https://gnews.org/zh-hans/1975678/)
+尤其是在中共新冠病毒大流行期间，FDA于2020年提出新的警告，并更新了粪便供体筛查要求。研发SER-109粪菌胶囊的公司Seres Therapeutics则表示，预计于今年年中完成向FDA申请获批。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+治疗癌症我们有青蒿素，未来还有干细胞移植，偏偏要研究如何吃屎，突然有种王岐山要让中国老百姓吃草，FDA要让大家吃屎的感觉。中共病毒疫苗灾难爆发，以后输血都要小心，不要说吃粪菌胶囊了！
+
+**[新闻来源](https://www.163.com/dy/article/H08N4VGA051182D7.html)**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
