--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,23 +1,23 @@
 ---
-title: 有声｜大陆中小银行股权拍卖遇冷 近六成流拍
+title: 有声｜中共国因俩疑似偷渡者发动群众举报 最高悬赏十万
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013568/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2014103/)
 
 **By:秘翻新闻**
 
-***2022-02-16***
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7777777.jpg)
-[大纪元](https://www.epochtimes.com/gb/22/2/15/n13578120.htm)2月15日消息。在大陆互联网拍卖平台，有很多城商行、农商行等的中小银行股在拍卖，但有近六成流拍。
+**2022-02-16**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/555555.jpg)图片源自于:网络
+综合媒体2月15日消息，香港疫情严峻，部份人回内地后确诊。湖南省郴州市15日公布，有两人在2月14日凌晨4点，从香港水路入境到广东省珠海市后，再跨省自驾到湖南，入住酒店后确诊。
 
-据阿里拍卖网2月15日显示，中原银行5000万股挂在网上变卖，同时，还有宁波宁海农村商业银行股份有限公司4077股的股权、曲靖市商业银行股份有限公司2,843,750元股权、泉州农村商业银行股份有限公司内部员工股949,66股等几十家银行股权在拍卖。
+目前内地全面封关，外界质疑这俩人从香港偷渡入境广东。对此，郴州市疫情防控办职员指出，仍在调查原因，或需公安介入，并确认二人是湖南籍人士，非香港居民。
 
-但在当前银行股权拍卖市场中，流拍已成为一个明显现象。据《第一财经》记者统计，自2月以来，共有92笔银行股权被拍卖，其中，流拍的占比近六成。
+消息称，珠海市疫情防控指挥部于15日当天发布指示打击偷渡，组织民兵、渔船堵截，并悬红奖励，每抓获一船，奖励十万元人民币。
 
-光大银行金融市场部分析师周茂华认为，银行股权拍卖出现流拍主要有三方面原因，其中，最主要的还是与银行自身经营状况、前景有关。
+因内地全面封关，香港到内地只能陆路入境深圳或珠海，除非获内地当局豁免，否则从香港入境内地，必须经过严格的“14+7”隔离。
 
-另据《财经》杂志第632期刊发的《一年“消失”20多家银行，4000家中小行路在何方？》一文显示：“2020年以来，已经有20多家中小银行完成或正在经历合并重组。”
+消息称，深圳也有相关悬赏打击偷渡的措施。
 
-(秘翻新闻 二丫 编译报导)
+（ 秘翻新闻StevenZ编辑报道 ）
 
 发布:星星
 
