--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,117 +1,25 @@
 ---
-title: 新书介绍：关于儿童学习的最新科学认知（二）
+title: 肖尔茨会见普京 欢迎俄宣布部分撤军
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2014633/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014776/)
 
-**分享者：兴国**
-[![](https://express.adobe.com/page/GSQk9ndCt1oDT/images/d1ded221-f85e-430b-b351-bb446957c96b.jpg?asset_id=344ea784-e216-49e6-878e-88507ad907aa&amp;img_etag=%223d4282332b06063cd5b0d46613bb6daf%22&amp;size=2560)](https://express.adobe.com/page/GSQk9ndCt1oDT/images/d1ded221-f85e-430b-b351-bb446957c96b.jpg?asset_id=344ea784-e216-49e6-878e-88507ad907aa&amp;img_etag=%223d4282332b06063cd5b0d46613bb6daf%22&amp;size=1024)
-上期我们开始分享Stanislas Dehaene的《我们怎样学习》—— 关于大脑如何学习的科学领域的新书，提到看似人类一出生就已经有基本知识，相当于人类大脑提前预装了这些知识系统，而成长和学习的过程就是不断体验、确认和掌握运用这些规则。
+撰稿：东京樱花团/上善若水
 
-这一讲我们来了解认知科学家是怎样验证婴儿大脑里是否真的已经有很多知识。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/肖尔茨会见普京-欢迎俄宣布部分撤军.png)（图片来源于本文链接）
 
-“婴儿出生，大脑中就已经储备了知识”这个观念是反直觉的。仅仅20年前，很多科学家还认为刚出生的婴儿大脑几乎一片空白、神经元结构与成人不同。
+肖尔茨在莫斯科同普京进行了4个多小时的会谈。俄罗斯电视台对本次会谈的开始进行了实况报导。肖尔茨说，他非常高兴有机会同俄罗斯总统进行交流，“重要的是，国与国之间的关系通过友好协商得到解决”。普京在会后说，对话主要围绕欧洲安全局势以及乌克兰危机。他们二人分别坐在一张长桌的两端，隔着约6米。
 
-但随着科学发展，这个观念已经被颠覆。
+此前，肖尔茨拒绝由俄罗斯方面对他做新冠核酸采样检查，德国驻俄罗斯使馆派来一名女医生在飞机降落后对肖尔茨做了检查，因此，肖尔茨比预计晚出舱40分钟。肖尔茨对俄罗斯宣布从乌克兰边境附近撤回部分军队表示欢迎：“这是一个良好的信号。我们希望接下来会有更多军队撤离。”肖尔茨在与俄罗斯总统普京会谈后还表示，现在“迫切需要”缓和局势。在肖尔茨抵达莫斯科前，克里姆林宫宣布，将从俄乌边境撤回部分军队。国防部发言人科纳申科夫（Igor Konaschenkow）表示，俄罗斯南部和西部军区的部队已经“完成了任务”，即将启程返回其军事基地。此外军事物资也已开始转运，但他没有透露具体的数字。
 
-之所以反直觉是因为我们多数人认为知识就像软件，要通过学习才能“印”在脑中，但是，“印”不是特殊或神秘过程，人体所有器官部件都是以硬件形式实现，知识离不开大脑神经元的连接。既然是硬件，也就应遗传设定。如果人类基因储存了关于身体的所有细节信息，比如手指形状个数，心脏形状、皮肤和眼睛颜色，是否也把大脑事先设定好？
+肖尔茨再一次强调，俄罗斯若对乌克兰采取军事行动将带来严重后果：“我们完全知道到时候该怎么做。我的印象是，其他人也很清楚这一点。”谈及有争议的北溪2号，肖尔茨说：“就管道本身而言，大家都知道是怎么回事。我们有一个确保在欧洲转运天然气的承诺，通过乌克兰、白俄罗斯和波兰，通过北溪1号，所有这些都是按照我们的协议进行的。今后我们也会这样做。”此外肖尔茨对俄罗斯公民社会空间被挤压提出批评，并表示希望德国之声能够继续在俄罗斯进行新闻报道。他还批评了反对派人士纳瓦尔尼被监禁，称这不符合法治国家原则。
 
-事实上，最新的研究证明，婴儿的大脑和成年人大脑几乎是一样的结构。
+信息来源：
 
-Stanislas Dehaene，其妻子以及同事们都是研究婴儿大脑的先锋科学家，也是第一批使用功能性核磁共振扫描婴儿大脑的科学家，他们做了各种实验，得到了惊人的结果。
+[肖尔茨会见普京 欢迎俄宣布部分撤军](https://www.dw.com/zh/%E8%82%96%E5%B0%94%E8%8C%A8%E4%BC%9A%E8%A7%81%E6%99%AE%E4%BA%AC-%E6%AC%A2%E8%BF%8E%E4%BF%84%E5%AE%A3%E5%B8%83%E9%83%A8%E5%88%86%E6%92%A4%E5%86%9B/a-60789566)
 
-实验证明，婴儿出生时，就已自带关于语言，物体、数字甚至“关于人”的“隐性知识（invisible knowledge）”。
-
-婴儿不能说话，不能问，不能进行考试……科学家如何知道呢？科学家有两个方法。
-
-方法一：观察眼睛。人看到怪异的事物时，通常会因意外而注意，盯着多看……婴儿也一样。科学家用仪器精确跟踪婴儿的眼睛，测量其凝视方向，和凝视时间，来判断宝宝对一件事情感到意外的程度。
-
-我们成人感到正常的现象，例如球在地上滚动，婴儿通常看几下就不关注了，也许觉得无聊。但是若给他变个小花样，比如一个小球在屏幕上消失后又突然出现，婴儿就会长时间地盯着看，仿佛很好奇，说明宝宝感到了意外。
-
-婴儿如何判断正常与否？如果宝宝能看出不同寻常，感到意外，是不是说明他知道世界运行的基本知识？
-
-方法二：利用仪器。用功能性核磁共振实时扫描大脑的活动，现在已经很成熟，对人体也无害。比如婴儿出生当天，医生就会测试其听力是否正常：在两边耳朵分别弄出声音，如果他能听到，大脑会有明显相关活动显现。
-[![](https://express.adobe.com/page/GSQk9ndCt1oDT/images/b9190131-8b60-45d9-8a37-d669e750bb02.jpg?asset_id=22e4f8fb-8fa5-49fb-a108-dc5b7af24ff8&amp;img_etag=%226e82fda9d94e4a76d5d57554315b0777%22&amp;size=1024)](https://express.adobe.com/page/GSQk9ndCt1oDT/images/b9190131-8b60-45d9-8a37-d669e750bb02.jpg?asset_id=22e4f8fb-8fa5-49fb-a108-dc5b7af24ff8&amp;img_etag=%226e82fda9d94e4a76d5d57554315b0777%22&amp;size=1024)
-科学家对婴儿是有办法的。这一讲的研究对象都是关于婴儿都在一周岁之前的，甚至是刚出生几个小时的婴儿的现象，在试验中可以看到宝宝们多么聪明。
-
-以下是“婴儿具有知识”的几种实验证明。
-
-一，语言知识。刚出生的婴儿，同样是听陌生人说话，他更喜欢听人说妈妈的语言而不是外语。因为胎儿出生前4个月左右已经能分辨语音，逐渐熟悉了母语或经常听到的语音。相对于别的声音，宝宝对母语中的音节更敏感。日语中 R 和 L 这两个音不分，日本宝宝也就对这两个音的区别不敏感。婴儿几个月大的时候就已经能识别哪些词是常用词：比如对妈妈、宝宝、吃奶这些词，婴儿更敏感。这说明婴儿已经在调整自己的语言模型中的词汇概率。
-
-语言功能是人类的特长。只要环境和时间等条件具备，宝宝可以学习任何语言，也可以同时学习任何几种语言，那种担心小宝宝太小，多种语言会影响它成长的观念，已经是知识盲区。
-
-有科学家曾经领养了一个黑猩猩的宝宝，让它和自己的孩子从小享受同等待遇，同吃同住同玩同学习……结果发现黑猩猩的智力确实是硬伤。不管怎么教，黑猩猩最多能识别几百个单词——而人脑天生就是一部学习语言的机器，但有时间限制，超过一定年龄，语言学习的能力会大大降低。
-
-当使用功能性核磁共振扫描时，成年人大脑里相应的区域，婴儿都有。比如语言，我们大脑里有专门处理语言的区域，而婴儿大脑相关的区域对语言处理的过程跟成年人完全一样。
-
-对婴儿说一句话，语音会先进入听觉区，接着是词法分析区、语法分析区，最后进入语义分析区。这个次序，各个区域从快到慢的处理速度是听觉最快，语义分析最慢，所有这些都跟成年人一样。
-
-婴儿早期还听不懂这句话，但是他的大脑做好了听懂语言的一切准备，只等待出生后对应的生活环境。
-
-二，物理学知识（不是相对论那种高深的物理学，是生活中的物理学）。出生几个月的宝宝已经知道世界由物体组成，而物体需要满足一定的物理学原理：比如没有生命的物体自己不会动，需要外力；物体会在占据一定空间位置，而且每次只占据一个地方，不应同时在两个地方出现；物体不会突然出现或消失等。
-
-比如上面提到的屏幕显示小球滚动，婴儿不以为然，但突然消失时，婴儿就会注意。这本质上是基本物理学知识。
-
-还有更高级的试验。科学家用挡板把一根棍子的中间挡上，只露出两头，这两头同时上下运动，宝宝能猜出来这两头属于同一根棍子。
-
-这时候撤掉挡板，如果果然是一根棍子，宝宝不会感到意外。但如果挡板后面露出来的不是一根、而是两根棍子，即两头并没有连接在一起，宝宝就会感到意外，他会盯着看。
-
-三，数理知识，1+1=2，而不是1，你相信宝宝也知道吗？一个小球滚到纸板后面，另一个小球也滚到后面，然后拿掉纸板，里面如果真有两个小球，宝宝不会觉得意外。但如果撤掉纸板发现只有一个小球，也就是1+1=1，宝宝就会感到意外。
-
-四，概率论知识。宝宝看到一个盒子，里面有3个红球和1个绿球。从盒子里随机拿球，如果拿出来的是红球，宝宝不会意外；如果是绿球，他就会多看一会儿——仿佛他知道拿到绿球的概率比较低！
-
-婴儿甚至会反向推测。拿一个宝宝事先不知道里面有什么球的盒子，如果一次一次拿出来的球，红色比绿色的多很多，他居然能判断出来盒子里应该是红球多。表现在如果打开盒子发现里面绿球多时，他会感到意外。
-
-如果宝宝知道盒子里是红球多，可是每次都拿出来绿球，他就会判断这不是随机拿球，而是你喜欢绿球！
-
-这个试验说明即使几个月大的婴儿也有逻辑思维能力。
-
-五，生物学知识。婴儿知道：没有生命的东西不会主动做动作。如果一个小球本来沿直线滚着，突然自己跳了一下，宝宝就会感到意外。
-
-婴儿对人的理解非常实用，让人惊讶，一个实验人员当着宝宝的面把其他宝宝扔在地上，宝宝就不喜欢这个实验人员——表现为不看他。另一个实验人员把地上的宝宝抱起来，被测试宝宝就很愿意看她。这说明他能看出来谁是好人还是坏人。孩子还能看出来别人是在正常做事情，还是在故意教他什么。
-
-婴儿对人脸的特殊偏好也非常让人惊奇。出生没几小时的宝宝们，对着一张风景照和一张人脸照片，更喜欢看人脸的照片。似乎人脑中有专门用于识别人脸的结构，对人脸无感的孩子有很高自闭症的可能性。
-[![](https://express.adobe.com/page/GSQk9ndCt1oDT/images/273af45a-9926-47bb-b3cd-de7d4232a27c.jpg?asset_id=57f95ae4-fdcd-4d57-9500-57a458f09cfe&amp;img_etag=%22c401a4d33efee03b04ae34dffb448828%22&amp;size=1024)](https://express.adobe.com/page/GSQk9ndCt1oDT/images/273af45a-9926-47bb-b3cd-de7d4232a27c.jpg?asset_id=57f95ae4-fdcd-4d57-9500-57a458f09cfe&amp;img_etag=%22c401a4d33efee03b04ae34dffb448828%22&amp;size=1024)
-这本书还提到一个更离奇的研究 。产前几个月的胎儿，如果被三个光点隔着肚子透射，而这三个光点正好是两点在上、一点在下，很像人脸形状，胎儿就会更注意这些光点；如果反过来，两点在下一点在上，他就没有那么大的兴趣。很难说不是孩子即使还没出生，就已经更喜欢看人脸了……
-
-婴儿大脑的空间感知区域也准备好了，可以绘制地图，知道房间中不同东西的位置。他的视觉、识别人脸的功能，都和成年人是一样的。
-
-是不是很神奇？我们以为处处依赖别人照顾的小婴儿什么都不懂，可他们居然天生拥有这么多的知识。
-
-这些知识是不是婴儿在出生以后的几个月慢慢学会的呢？迪昂认为还是天生的因素更大一些。首先有些能力是出生几个小时就具备。然后就算要学，谁能特意让几个月大的宝宝学习物理和数学知识呢？
-
-婴儿的确一直在学习，他会自己拿东西玩，做各种实验，他对物体的掌控感越来越强 ——但是那些训练更像是让已经有的能力变得更敏锐，而不是从零开始。
-
-但人工智能如果没有人类大脑的这些功能性区域，没有专门的神经网络连接，如何与婴儿相比？
-
-所以 AI 也在朝着这个方向走，有个项目叫“虚拟婴儿计划（Virtual Baby Project）”，像人脑一样，把所有需要先天内置的功能全部内置，各个功能区的神经元都连好，然后再进行数据训练。这就是真正的仿生人脑。
-
-那为何有的孩子聪明，有的孩子不聪明呢？大脑基本蓝图虽然都一样，但共同点基础之上会有微妙的个人差异。大脑中有些差异像指纹一样，双胞胎都不是完全相同的。
-
-刚出生的小孩，科学家扫描他的大脑，能知道他有没有阅读障碍。阅读障碍是先天的，是大脑的硬件问题。有阅读障碍的孩子对文字不敏感，认字非常困难。科学家已经知道有四个基因决定了一个人是否会有阅读障碍，阅读障碍的遗传概率是 50%。后天训练对大脑的影响，会比先天硬件的差异大。人脑有先天的结构，但更有“可塑性”，阅读障碍可以通过训练改变。
-
-如何利用可塑性对大脑进行改造？我们下一讲介绍。
-
-**往期文章：**[新书介绍：关于儿童大脑和学习的科学认知（一）](https://gnews.org/zh-hans/1879804/)
-
-**资料来源：**
-
-*1. 万维钢《我们如何学习》*
-
-*2. Stanislas Dehaene《How We Learn: Why BrainsLearn Better Than Any Machine… for Now》3.Mastering Chess and Shogi by Self-Play with a General ReinforcementLearning Algorithm*
-
-*4.KennethH. Rosen. Discrete Mathematics and its Applications 7th edition*
-
-*5. http://web.chessdailynews.com/the-grandmaster-experiment-4/*
-
-*编辑：【英国伦敦喜庄园编辑部】*
-
-*校对：文明明|审稿：仙女儿-文善| Page：小六月*
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.com/invite/VsNaHaMUsy)
-
-[![](https://express.adobe.com/page/GSQk9ndCt1oDT/images/743201f9-58fc-4293-a06f-95392264cc21.jpg?asset_id=02cb6ee0-4cc9-44e1-8183-c5d8c5bf112e&amp;img_etag=%22fb035768c8cb9d7a5024d2e8b5ca4124%22&amp;size=1024)](https://express.adobe.com/page/GSQk9ndCt1oDT/images/743201f9-58fc-4293-a06f-95392264cc21.jpg?asset_id=02cb6ee0-4cc9-44e1-8183-c5d8c5bf112e&amp;img_etag=%22fb035768c8cb9d7a5024d2e8b5ca4124%22&amp;size=1024)
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
