--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,23 +1,50 @@
 ---
-title: 认知隔离
+title: 樱花数据分析┃英格兰：两针接种者更容易出现感染和死亡
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014620/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2014769/)
 
-撰稿：东京樱花团/加一颗稻草
+撰稿：东京樱花团/TV
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-181.png)
+英格兰政府自今年第三周以来，重心由公布两针接种感染数据，转为了三针接种感染数据。由于全球出现的两针接种者对感染增强的现象，我们对于英格兰数据进行了分析。令人吃惊的是，几乎所有年龄层的两针接种者，在感染，住院，及死亡风险全面大于未接种者。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/认知隔离.png)[图片来源](http://m.nyckidsclub.com/channel/expert/article/39717.html)
+第6周《疫苗监督报告》[1]，公布了第2～5周感染、住院、死亡总人数统计。第3周～第6周的《全国流感及新冠病毒监督报告》[2,3,4,5]公布了第2～5周的疫苗接种率，我们取其平均做为第2～5周疫苗接种率。综合以上数据，我们得到第2～5周各年龄层的疫苗有效率结果。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1587.png)
+制图：chuansang
 
-大家都会遇到过对别人表达事情很困难的情况，或者很难理解别人的观点。普通人会认为是文化层次不同导致的上述问题。在古代，识字的人会被尊敬。是因为那时候识字的人少，他们通过读书和同层次的人交往获得了平民无法获得的信息，从而有着比普通人更高的认知水平。这样就造成了最古老的认知隔离。
+对18岁以上人群，疫苗防感染有效率为负值，两针接种者感染风险为未接种者的2.08～3.02倍。
 
-在现代社会，由于各个行业分工更加精细，而形成了各种专业术语，使得在行业外的人望而却步。所以这种隔离变得更加复杂多样。根据上面的陈述我提出标题“认知隔离”。
+对30岁以上人群，疫苗防住院有效率为负值，两针接种者住院风险为未接种者的1.21～1.72倍。
 
-这种现象是现代发展的必然。尤其是在科技领域的存在。但在有些领域这种现象却是人为的。在政治和经济领域尤其明显。他们创造出各种晦涩难懂的词汇，制定出行业内隐晦的规则。使得普通人理解困难，从而制造出各种陷阱，达到隐藏自己目标的目的。实施这样欺骗行为的人称自己是“精英阶层”。
+对30岁以上人群，疫苗防死亡有效率为负值，两针接种者死亡风险为未接种者的1.05～2.76倍。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1588.png)
+制图：chuansang
 
-每个人面对谎言的行为体现了个体的认知水平。通常人们认为相信谎言的人是愚蠢的。所以人们竞相学习一些无意义知识用以防范各种各样的欺骗，使自己看起来聪明一些。这是一个恶性循环。也是谎言的市场。毕竟越复杂的环境变数(漏洞)越多。同时也出现了精英阶层利用这种认知不平衡，对普通人的“狩猎”现象。 认知隔离是造成文化分层次的原因，文化层次也会使得认知隔离更加严重。 在这方面现有的宗教对认知的启发有一定的作用，但是却缺乏针对性。对于人性贪婪的本能，人们没有面对的勇气是认知缺陷的根本原因。
+两针接种者更易感染，住院，死亡。这与之前苏格兰公布的数据一致。不仅如此，如果仔细观察，我们会发现风险值有随年龄增大而上升趋势，80岁以上接种者死亡风险竟达到了2.76倍！由于高龄者接种最早，这似乎说明接种时间越久，越容易感染、住院及死亡。这可能与长期存在于体内的刺突蛋白对免疫系统的持续伤害有关。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+我们之前的文章[6]已经展示了，三针疫苗防感染有效率已经为负值，即防住院、防死亡不久也将达到两针接种相同结果。那么加强针意义何在？
+
+放眼全世界，真相还在被隐藏之中。这是一场愚蠢的实验？惊天的骗局？还是蓄意的屠杀？？？
+
+数据来源：
+
+[\[1\]疫苗监督报告-第六周](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1054071/vaccine-surveillance-report-week-6.pdf)
+
+[\[2\]全国流感及新冠病毒监督报告 – 第3周](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1048531/Weekly_Flu_and_COVID-19_report_w3.pdf)
+
+[\[3\]全国流感及新冠病毒监督报告 – 第4周](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1050508/Weekly_Flu_and_COVID-19_report_w4.pdf)
+
+[\[4\]全国流感及新冠病毒监督报告 – 第5周](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1052357/Weekly_Flu_and_COVID-19_report_w5.pdf%20)
+
+[\[5\]全国流感及新冠病毒监督报告 – 第6周](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1054000/Weekly_Flu_and_COVID-19_report__w6.pdf%20)
+
+- [樱花数据分析｜英国：大多数三针接种者更易感染奥密克戎毒株](https://gnews.org/zh-hans/1903806/)
+
+
+编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
