--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,34 +1,21 @@
 ---
-title: 有声&#124;美科学家称中共病毒来自武汉病毒研究所
+title: 疾控中心暗示強制口罩令将会于下周终止
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2018126/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018261/)
 
-配音：香草山佛教部 – 李傻
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-2月10日，据盖特消息显示，美国国会众议员斯卡里斯在接受采访时表示，那些支持中共病毒实验室起源的科学家们应该针对病毒溯源问题前往国会作证。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide5-10.jpeg)
-斯卡里斯提到，他在与其他议员调查中共病毒起源时发现，包括福奇的高级顾问在内的许多科学家都认为中共病毒来源于武汉病毒研究所。然而，在他们参与了福奇召开的电话会议后，这些学科家们纷纷转变了态度。同时，大多数与会科学家在其后的时间里陆续获得了数百万美元的联邦拨款。
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-36.jpg)
+图片来源：www.cdc.gov
 
-斯卡里斯强调，美国政府应该就中共病毒起源问题举行国会听证会，而这些改口的科学家们也必须在听证会上接受质询。即使佩洛西议长一直阻挠该听证会的举行，但众议院一定会挖出有关中共病毒来源的真相。
+零对冲网2月16日报道，已经有十多个州包括人口最多的加利福尼亚州已经自行决定加弃在公共场合要求戴口罩的命令，联邦机构直到现在才准备放弃口罩令，美国全国广播电台新闻（NBC)最早报道疾控中心(CDC)计划放弃联邦口罩令，或放松室内口罩的指令，最早可能在下周实行，CDC主任对NBC说：“还没有最后确定，但CDC将考虑一个新的基准，到底是否需要口罩，这将基于严重疾病的程度和社区住院情况而定。”
 
-文字版原文：[美科学家称中共病毒来自武汉病毒研究所](https://gnews.org/zh-hans/2012234/)
+白宫急需CDC提供室内口罩的推荐，但不想因此向CDC施加压力，甚至福奇博士也因近期新冠病例急剧下降而建议放弃口罩令。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+NBC报道后没多久，CDC主任沃任斯基博士说口罩令指南将于二月下旬或三月初改变。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+NBC新闻注意到多数州已经决定”转换策略”，因为新的办法，例如新冠的治疗已经能作用。
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+##### 新闻来源： [Leading From Behind: CDC Hints COVID Mask Mandate Will End ‘Next Week’ Now That States Have Moved First](https://www.zerohedge.com/covid-19/leading-behind-cdc-hints-covid-mask-mandate-will-end-next-week-now-states-have-moved-first)
 
  
 
