--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,27 +1,33 @@
 ---
-title: 大直播后记 : 放下就是拥有
+title: 2月16日大直播后记：喜币开启了人类金融智慧未来
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018090/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018225/)
 
-**整理：**奋斗、枫叶红了
-**编辑：**舞指如歌
-![](https://assets.gnews.org/wp-content/uploads/2022/01/12315456_4-2.png)
-“瓦力瓦力哇，卡拉拉兹卡斯！”日本话就是“我们一定会赢”。今天三个（嘉宾是）台湾农场的战友，然后Alice、Tiger主持人也是台湾农场，今天台湾农场专场直播。我觉得听到Alice说话，还有Alice的眼睛都哭成这个样子，我能想象得到，也能够感同身受。
+整理：Anita、Lucy Liu
+编辑：小红帽
 
-特别是从昨天到今天，战友们给我发信息，真的，七哥最痛苦的就是：我的快乐很难全部都分享给你们，你们能感受到，但是真的是（隔着）这个屏幕。即使人和人在一起，也很难感受那种感同身受。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
 
-我总是这么说，我说人类什么时候能把这个感觉传给对方啊？只要我们双方愿意的话就太好了。你两个人双修，身体黏糊在一起，从冰冷的身体到全身发热，然后全身出一身汗，黏乎乎的两个人就跟狗跑一圈似的，伸着大舌头，然后凉下来，这个俩人都能有感受。但是你说，这个感情的这种苦啊痛啊，怎么能让对方感受到、让更多人感受到呢？这个我觉得是个研究的课题，很多战友给我发的各种信息，就是那种感觉真的是太感动人了。最幸福的莫过于如此了。
 
-我这个人从小到大经历过各种人间的酸甜苦辣，人间冷暖我都尝过。所有的背叛和忠诚是什么样的事情，多苦的日子我都过过。在看守所里边戴过死刑铐八个月，那你想想什么感觉，是吧。吃棉花吃了几个月，你想想什么感觉，这都经历过。这种感觉真的是跟那时候不一样，我们瑞士的一位战友很有钱，她先生是一个当地的瑞士人，他知道这事以后，就找银行要汇款，就往这汇款往那汇款，说总共两次被罚2亿多美元，我们都替你还。还有咱台湾的战友们，家里边有钱的，把股票都卖了，卖的还很便宜，然后要给七哥还钱。还有日本的战友，太多了。还有很多战友就是真的是能感受到，真的连命都能给七哥一样，那肯定是太多太多人了。还有很多问候、捐币，各种都很多。
+喜币就是你越用越值钱，越搁越值钱，这是肯定的。它是有限制的。
 
-那么现在我们遇到了这种事的时候，我们大家都要看清事情的本质。刚才Tiger说的不破不立呀，然后放弃呀，包括昨天很多战友这样说：七哥，我们一定要把18楼拿回来呀。我说放下就是放下；放下才能得到，放下就是拥有。很多人觉得放不下，但是兄弟姐妹，这都很浅薄。
+你想想，任何国家的法币都没限制的印刷，这是多恐怖啊。现在共产党说承认自己干了46万亿人民币的印刷，事实上，100万亿也不拉倒。他用的纸和数据掠夺着你所有的血汗，这多恐怖！喜币让美国政府这回给了这个政策。美国人全面使用喜币，喜币合法流通和HPAY被广泛使用。
 
-*发布：翼族*
+兄弟姐妹们，在全世界有比在美国还安全的地方吗？唯一人类上只有喜币，喜交所让你拥有最顺畅的交易。你想想啊，Paypal是6.9%的手续费，Stripe可以把你的钱在6个月内给你拿走。你说这多吓人。6个月了都能把钱给你赎回呀。HPAY连0.6秒都没有，你付了就是付了,你自己承担责任。你把钱给我，你再也拿不回去了。兑现就不能改变，体现了货币的本质。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+大家看到赵长鹏还有美国美联储的政策,看到现在喜币美好的未来，还有看到这个价格，现在44,15美元。我可以告诉大家，喜币一定超过比特币，而且我告诉你，绝对还没开始呢。它重大的意义在于，开启了人类金融智慧的未来，是超出你们想象的。你们不知道它未来能给你们带来什么？你们真的不懂。
+
+兄弟姐妹们再过上个半年，你今天对喜币的理解都会认为是个笑话。就像一年前，开始推出喜币的时候，欺民贼伪类说，“这就是骗局根本不可能上线，永远不可能，拿钱就跑了。”然后说，“根本不可能上线，又推迟了吧，又晚了吧，就是骗钱嘛。”然后上线时，“你看到没有，三天后全都跌破，跌破0没人买。然后一星期，一星期肯定会跌啊。永远不会涨价。”然后说，“有币，有币没有人兑现。”我们的娜娜酱缺钱了，币卖了，买了设备开始直播。这是真的，能不能兑现？能不能提现？只有你们知道。
+
+资料来源：2022年2月16日郭文贵先生大直播
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
