--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,29 +1,21 @@
 ---
-title: 一位卡车司机表示：特鲁多引发了内战 让加拿大变成了共产主义国家
+title: 渥太华警察局长在自由车队抗议浪潮下辞职
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2018073/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2018146/)
 
-翻译：冰糖葫芦喵
+加拿大温哥华杨帆农场 枫叶快讯
 
-编辑与校对：冰糖葫芦喵、灭共文明
+采编： UCool 优酷       编译撰稿：文明(添草灭共)
+![BREAKING: Ottawa Police Chief resigns](https://imgcache1.thepostmillennial.com/content/images/2022/02/ARTICLE-PHOTO--37--1-1.jpg)图片来源：thepostmillennial.com crypto
+据加拿大自媒体【后千禧年】2月15日报道，在卡车司机集结于渥太华市中心进行抗议活动的第 19 天，该市警察局长[斯洛利]宣布辞职。 报道称，[斯洛利]不久前还曾表示要争取更多警力和资源来结束抗议活动，并且没有任何辞职的计划。虽然未透露原因，但外界普遍认为该局长在全国“自由车队”反疫苗护照的浪潮下，承受着巨大压力。
 
-《布莱巴特新闻网》2月16日报道，**一位在渥太华参加自由车队游行的卡车司机、罗马尼亚裔加拿大人克里斯蒂安（Christian）在接受采访时表示，特鲁多正在加拿大人之间播下仇恨的种子，并将这个国家变成一个共产主义国家。**
+此前，渥太华警方因参与冻结卡车司机的筹款而被各方谴责。对此，“宪法自由司法中心”不仅指出抗议活动没有扰乱秩序，还抨击了警方对和平集会的污名化没有任何事实和证据。但当局以恢复秩序为借口，企图剥夺加拿大人在首都行使《宪章》所规定的自由表达、结社以及和平集会的基本权力。
 
-他补充说，**这里不再是加拿大了。这是一个共产主义国家。特鲁多在分裂人民，憎恨人民。这是一场内战。**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/罗马尼亚卡车司机.jpg)罗马尼亚裔加拿大卡车司机接受布《莱巴特新闻》采访
-克里斯蒂安指出，省级和联邦政府强制实施的**中共病毒疫苗政策**，表面上是为了“公共卫生”和“公共安全”，但实际上这些政策**正在破坏人们的生计，并剥夺他们谋生的权利。**
+校对编辑：硫酸羟氯喹64
 
-这位卡车司机还说，作为应对中共病毒措施而推广的**政府法令已经导致企业倒闭，普通民众个人破产，并导致许多人失去工作。**
+发文：青青
 
-这时克里斯蒂安深思道，当我来到这个国家时，我觉得它很美。加拿大充满了不可思议和许多可爱的人。
-
-采访中，克里斯蒂安说：“我们需要工作，需要最基本的生存保障。但现在因为特鲁多失去了一切。**特鲁多不会让我们生活，不会让我们回到工作岗位，回到家人身边，不会让我们像以前那样生活。”**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/特鲁多内战2.jpg)图片来源：网络。
-**最后他悲叹道:“现在看看我们这个社会，大家彼此憎恨。**我的儿子不能见他的祖父，因为他接种了疫苗，而他的祖父没有接种疫苗，所以他不能回到祖父的家。他很伤心。”
-
-**新闻链接：**
-
-[Romanian-Canadian Trucker: Trudeau Turned Canada to Communist State (breitbart.com)](https://www.breitbart.com/clips/2022/02/16/exclusive-video-romanian-canadian-trucker-trudeau-has-caused-civil-war-turned-canada-communist/)
+原文链接：[https://thepostmillennial.com/breaking-ottawa-police-chief-resigns-source](https://thepostmillennial.com/breaking-ottawa-police-chief-resigns-source)
 
  
 
