--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,75 +1,30 @@
 ---
-title: 全球疫情更新（网球名将再次坚拒强迫“疫苗”）
+title: 2月16日大直播后记：七哥越破产战友越有钱
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018006/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018078/)
 
-#### **整理/编辑：枳实**
+整理：Anita、Lucy Liu
+编辑：小红帽
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/fengmain0217b.jpg)图片：雅典娜农场设计组 精灵蓝
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
 
 
-雅典娜疫情更新（2022年 2月15日）
+有钱的时候买多少名牌，都不重要。第一要去旅游，行万里路，七哥就走过万里路。我到欧洲到德国去，看了希特勒那个二战（的历史）。为啥我老提二战？我感触太深了。人类这么近的历史，为啥不学习呢？你学那个大清朝（历史）有个屁用。二战是我们最好的一面镜子。在二战里边，大家最重要要学到的就是老百姓的无知，都相信希特勒。这不就是刚才战友问的问题吗？然后共产党要打台湾。你疯了打台湾。你的父母还有常识，说共产党一定会最后发动一场战争来让共产党继续活下去。你爸妈不简单。更重要的事情是财富，一旦在战时或大灾难，大病毒来时，如果你没有吃饭的钱，你真得饿死。还有你要有几个朋友，要有几个人。光有钱，在大难大战来时，你没有人是没有用的。新中国联邦都给你安排了有战友，有币，还有情报，还有让你开智。
 
-[往期《雅典娜疫情更新》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
+你看赵长鹏有多坏，他不做KYC的，不管什么钱都来，就是玩假的，这是犯罪。没有做KYC，赵长鹏就把所有人汇钱的信息给共产党。共产党抓了多少人弄了多少人？全世界就喜币喜支付，绝不可能有任何第三方拿走你的信息。谁拿走了，我负一切责任。更重要的，今天个人破产的时候，你想想，七哥但凡有一个币，喜联储和七哥就是犯罪啊！那不是开玩笑的。但是七哥作为一个最智慧的advisor（建议者），创造者，用这种智慧，让这么多人有钱，是一个多么伟大的行为啊。伟大到什么程度？这比共产党说的还伟大。它是爹亲娘亲不如党亲，七哥真是爹亲娘亲没有战友亲。战友们现在都发财了，而且你看44块钱，这是真的，你现在就可以卖呀。是真的真钱呐！关键有Hpay，大家啪啪地钱就转走了。战友们啥都可以干。什么叫交易，你给我你有的，我给你我的，咱俩形成交易。咱俩交易之间为什么需要中间第三方？
 
-**一，全球疫情基本数据**
+银行是世界上最多余的，是所有人财富掠夺的工具。别忘了存在银行的钱，银行破产是不用还的。你要承担责任，而它永远不负责任的。特别是有些苛捐杂税，你像Bunny这小孩儿，他要有个10万美元，8万美元，怎么拿出来？刚才看到了美国政府伟大啊，虚拟货币不在报税表里边儿。这里边儿有大文章啊，兄弟姐妹们。赵长鹏被灭了后，最大受益的就是咱啊！
 
-感染总数：415,405,881（日新增2,048,866人，14天增幅-37%）
+咱喜联储现在已经是全世界的四大交易所了。战友们，你们拥有第四大交易所。如果数字银行再公布，还有如果某国再进行投资，你看看，七哥越破产你们越有钱。关键你们这钱不受第三方监管，第三方掠夺。这是多大的利啊！更重要的是：无国界，无物理界限。
 
-死亡总数：5,836,145（日新增10,301      人，14天增幅 +1%）
+在银行里的钱本来在追寻自由名下，看着看着钱变成了什么，你啥都没有。赵长鹏没有做KYC，（他的钱）现在被全世界（还一定被抓起来的）已经全部被没收，而这个勾兑一定会被刑事定罪。他完了。整个喜联储绝对全部做KYC，百分之百地的保证战友安全，绝不接受第三方在这块抽钱抽佣出卖战友信息，而且喜支付也给你配上了。最重要的事情，这个币是有限制的。币安是什么东西？它没限制，他想干多少干多少，永远不给你解释。
 
-**二，全球“疫苗”毒针统计数据**
+资料来源：2022年2月16日郭文贵先生大直播
 
-“疫苗”毒针注射总数：104亿
+发布：tianzhihuan
 
-完全“接种”：42.8亿人
-
-完全“接种”百分比：54.8%
-
-**三，澳洲疫情和“疫苗”数据**
-
-感染总数：2,939,390（今日新增29,229人）
-
-死亡总数：4,732人（今日新增 63人）
-
-每万人感染人数：1151.6461人
-
-“疫苗”毒针注射总数：52,701,104     （今日新增161,740   针）
-
-完全“接种”：19,401,972人
-
-第二针“接种”百分比：79.3%
-
-16岁以上人口接种至少一剂疫苗的比例：&gt;95%
-
-16岁以上人口接种至少两剂疫苗的比例：94.1%
-
-加强针总数：10,317,497     （日新增：139,440针）
-
-**四，疫情评论**
-
-正如“习太阳”是爆料革命的逆增上缘一样，那些变态推动疫苗强制的政客和一些无良“科学家”们实际上也是反对强制令的民众的某种意义上的盟友。因为他们的极端举动，如同在温水煮青蛙的大锅中忽然加入沸水，反而能唤醒更多民众。比如澳洲维多利亚州长丹尼尔·安德鲁斯就是这样的逆增上缘的家伙。他曾经试图推动对全体维多利亚人强制接种第三针，[昨天他终于认识到这种要求是不切实际的](https://www.news.com.au/national/victoria/news/parents-banned-from-entering-victorian-schools-if-they-arent-triplevaccinated/news-story/aad6cfaf3a8c27bbe2f693c8f0950558)。因为如果这种政策付诸实施，导致的后果将是维多利亚本地人必须接种三针才能获得自由，而外国和外地游客却只需要注射2针就能自由活动。维多利亚州的政府网站上甚至闹出了乌龙，声称家长要接种三针才能进入学校，而家长的三针接种率刚刚超过一半，后果将导致差不多一半的家长都无法进入学校参加他们孩子们的各种活动。这简直相当于倒入沸水直接烫青蛙，安德鲁斯赶紧跑出来澄清，说搞错了，没有这回事。
-
-昨天遇见一位坚决不打这个疫苗的朋友，她当初跟老公说，你要敢去打加强针，我就要离开你。她说她的老公现在也开始意识到不对劲了。我们比较一下上周和本周的澳洲加强针注射每日数据，也能看到从22万左右到降低到了13-14万，下降幅度比较明显。希望更多全球民众能早日觉醒。
-
-这几天另一个新闻就是世界排名第一的网球选手[诺瓦克·德约科维奇最近接受了BBC的访问](https://www.bbc.com/news/world-60354068)，明确表示坚决拒绝被迫接受强制疫苗，愿意为此付出无法参加绝大多数比赛的代价。相信这位有史以来成绩最好的网球手宁愿葬送自己的职业也不愿被迫接种毒针的决定，能够唤醒更多的人。尽管“主流媒体”仍然用相当下作的手法来抹黑他，比如[公然称他为“小丑”](https://www.news.com.au/sport/tennis/government-admits-novak-loophole-is-open-for-a-return-to-australia/news-story/2db0f9cf8196116fd811863cab616677)（joker），而不是最好的网球手（见以下的网页视频截屏）。但这种低级下作的羞辱，对拒绝接受强制疫苗者的人身攻击，最终只能唤醒更多民众，并葬送这些“主流媒体”，因为人们已经发现，如果不对强制说不，那么强制将永无尽头，不仅第三针不够，第五针也不会够，直到人体能耐受的极限为止。今天能够强制这些毫无作用的针剂，将来就可以强制任何毒剂，只要把它们称作“疫苗”就可以强制了，反正疫苗的定义既然都改了，为什么不能继续改呢？
-![](https://assets.gnews.org/wp-content/uploads/2022/02/fengmain0217c.jpg)
-[往期《雅典娜疫情更新](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)[》](https://gnews.org/zh-hans/tag/%E9%9B%85%E5%85%B8%E5%A8%9C%E6%AF%8F%E6%97%A5%E7%96%AB%E6%83%85%E6%9B%B4%E6%96%B0/)
-
-数据来源：
-
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
-[Our world in data](https://ourworldindata.org/coronavirus-data)
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
-[covidlive.com.au](https://covidlive.com.au/)
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
-[Coronavirus World Map](https://www.nytimes.com/interactive/2021/world/covid-cases.html)
-
-发布：Frank2021
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
