--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,22 +1,25 @@
 ---
-title: 疾控中心暗示強制口罩令将会于下周终止
+title: 樱花FM┃澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018261/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018351/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/02/4-36.jpg)
-图片来源：www.cdc.gov
+音频：东京樱花团/战友520
+![](https://lh5.googleusercontent.com/iDRfKrcK_MoadkiYy9XWLDlkw7I2a3lJlr_q9hm1j1CFlj0__T0rVrmu7uwhD417PKNZ_d7NUsK0yz4dcQRp03_Ofkyy8GH3NUY7_yZKx_ef9gaTIKlzuVje1mnFtCzvhJge980-)
+澳大利亚的边境在经过近两年的关闭以阻止中共病毒（新冠病毒Covid-19）的传播后，终于将于2月21日对国际游客开放。但是，游客必须接受双重疫苗接种，否则就有可能像怀疑疫苗接种的网球明星诺瓦克·德约科维奇那样被拒之门外。他在上个月的澳大利亚网球公开赛之前被送回了家。
 
-零对冲网2月16日报道，已经有十多个州包括人口最多的加利福尼亚州已经自行决定加弃在公共场合要求戴口罩的命令，联邦机构直到现在才准备放弃口罩令，美国全国广播电台新闻（NBC)最早报道疾控中心(CDC)计划放弃联邦口罩令，或放松室内口罩的指令，最早可能在下周实行，CDC主任对NBC说：“还没有最后确定，但CDC将考虑一个新的基准，到底是否需要口罩，这将基于严重疾病的程度和社区住院情况而定。”
+“条件是你必须接种两次疫苗才能来澳大利亚。这就是规则，每个人都应该遵守。”总理斯科特-莫里森说，“但如果你接种了双重疫苗，我们期待着欢迎你回到澳大利亚，我知道旅游业将期待着这一点。”
 
-白宫急需CDC提供室内口罩的推荐，但不想因此向CDC施加压力，甚至福奇博士也因近期新冠病例急剧下降而建议放弃口罩令。
+莫里森先生说，做出这个决定是因为澳大利亚现在已经被中共病毒的Omicron变体所蹂躏，这意味着国际旅行者不会构成额外的风险。
 
-NBC报道后没多久，CDC主任沃任斯基博士说口罩令指南将于二月下旬或三月初改变。
+“该变种已经在澳大利亚境内。对于那些即将到来的双重疫苗接种者，他们不会比那些已经在澳大利亚的人带来更大的风险。”
 
-NBC新闻注意到多数州已经决定”转换策略”，因为新的办法，例如新冠的治疗已经能作用。
+而对未接种疫苗的签证持有者需要获得旅行豁免才能入境，并在抵达后接受各州和地区的检疫要求。
 
-##### 新闻来源： [Leading From Behind: CDC Hints COVID Mask Mandate Will End ‘Next Week’ Now That States Have Moved First](https://www.zerohedge.com/covid-19/leading-behind-cdc-hints-covid-mask-mandate-will-end-next-week-now-states-have-moved-first)
+文字版原文：[澳大利亚在经过近两年的边境关闭后 终于将对国际游客开放](https://gnews.org/zh-hans/1968521/)
 
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
