--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,49 +1,34 @@
 ---
-title: 热点回顾：为什么辉瑞疫苗没有在印度上市？
+title: 2月16日大直播后记：2025一定灭共
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018173/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018292/)
 
-翻译：文斗
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-275.jpg)
-**热点回顾：为什么辉瑞疫苗没有在印度上市？**
+整理：清水冷香、Lucy Liu
+编辑：小红帽
 
-2月16日，thegatewaypundit网站发表回顾文章并提出疑问：为什么辉瑞疫苗没有在印度上市？
-
-2021年2月，在印度医药监管机构要求进行当地的安全性和免疫原性研究之后，辉瑞公司撤回了其COVID-19疫苗在印度的紧急使用授权申请。
-
-去年，印度的COVID-19主题专家委员会（SEC）在一次会议上审查了辉瑞公司提交的数据。该委员会没有推荐辉瑞公司的疫苗，原因是国外报告的严重不良事件以及该公司缺乏针对印度人口的安全性和免疫原性研究。
-
-当地试验是印度在有新疫苗时实行的标准程序，以确定其安全性以及在其公民中产生免疫反应。然而，根据印度的规定，在某些情况下可以放弃这种试验。
-
-该决定将影响辉瑞公司COVID-19疫苗的上市，辉瑞疫苗将不能在印度和中国这两个世界上人口最多的国家销售。
-
-与其他公司为外国疫苗在印度进行小规模研究不同，辉瑞公司以其在美国和德国进行的试验获得了其他国家批准为由寻求例外。
-
-辉瑞公司在一份声明中说：“根据会议的审议情况以及我们对监管机构可能需要的额外信息之理解，公司决定此时撤回其申请。”
-
-“辉瑞公司将继续与监管机构接触，并在不久的将来获得更多信息后重新提交其批准申请。”
-
-现在，一年过去了，没有辉瑞重新申请的后续信息。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-73.jpg)
-截至2月16日，该文章上获得了152万次访问，在盖特上有大量评论与转发，表达其对辉瑞隐瞒信息的猜测以及对疫苗安全的质疑。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/6-25.jpg)
-（[https://www.gettr.com/post/puxg0m1ffa](https://www.gettr.com/post/puxg0m1ffa%EF%BC%89) 那么，印度意识到了不利影响，而我们却没有？）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7-22.jpg)
-（[https://www.gettr.com/post/puwqtm8655](https://www.gettr.com/post/puwqtm8655) 辉瑞公司必须公布所有的数据，而且必须是不加处理过的。）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-22.jpg)
-（[https://www.gettr.com/post/puwa9x6d5a](https://www.gettr.com/post/puwa9x6d5a) 基本上就是，印度要求辉瑞公司证明其疫苗的安全性和有效性，而辉瑞公司没有这样做（因为他们当然不能），而是直接撤回了在印度使用其疫苗的申请……那可是世界上人口第二多的国家！！ 他们宁愿承担经济损失，因为他们知道他们无法满足印度使用该产品的要求……
-
-但是，用在美国人身上就可以了）
-
-新闻来源：
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
 
 
+川普是直接斗啊，叽叽喳喳地就来了，给你斗，明斗。拜登是在背后控制那个人啊，悄无声息地就过去了，这绝对是政治高手。这回习太阳（习近平）遇到了我认为国际政治上最厉害的普京（他的“Partner”）。这就吓人了，习太阳无法想象，接下来他将面对的对手。
 
-> [Flashback: Pfizer Withdraws COVID Vaccine Application in India After Regulators Demand Local Safety and Immunogenicity Study](https://www.thegatewaypundit.com/2022/02/pfizer-withdraws-covid-vaccine-application-india-regulators-demand-local-safety-immunogenicity-study/)
+就是在今年年底，欧洲的大选，法国的大选，英国上院下院，整个巴西，特别是美国的中期选举，共和党全部拿出来以后。共和党这几个新人了不得呀。兄弟姐妹们，这都是能人呐，都是天才呀。还有这个混不吝的班农，将成为主角中的主角。你想一想他们（共产党）怎么对付？
 
+现在告诉大家排华事件，排亚裔事件，会越来越严重，非常之可怕。大家一定要小心，个人破产是小事儿，你没命了，你有再多钱，那才是悲剧。人去天堂了，钱还在银行，不就完了嘛，是吧？在海外的华人，在这种情况下，最重要的是你要安全。第二，我们希望中共不打台湾，不打乌克兰，最好也别打台湾。
 
+再一个，我就希望共产党嘎嘣就完蛋。我们希望美国能通过现在的整个病毒溯源，认定共产党在全世界上不能代表中国人，中国人不等同于共产党。把这个做为全世界人民的共同认识。中国人和亚洲人之间也不要有这么多的仇恨和误会。然后，我们就要让全世界知道，病毒是共产党造的，跟中国人没关系。
 
-[https://mosnews.orkmail.com/statistics/link/post20220216\_2317F500D1.repost.html](https://mosnews.orkmail.com/statistics/link/post20220216_2317F500D1.repost.html)
+我们要通过这个来消灭共产党，这非常重要。接下来的事情，今年的变化太大了。水虎年呢，我觉的够习喝的。今明两年共产党再活下去的可能，我觉的很难了。2025年一定灭共。
+
+资料来源：2022年2月16日郭文贵先生大直播
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
