--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,37 +1,19 @@
 ---
-title: 2022.2.16大直播后记：中国人有精神上的防火墙
+title: 一名50多岁的日本人在中共国被拘留
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018149/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2018279/)
 
-**整理：Anita、Lucy Liu
-编辑：Candy**
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1625.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2F1.bp.blogspot.com%2F-Mhka2Dc8PJg%2FYTbOnZidp3I%2FAAAAAAAAELA%2FGwamae97kqEc89ThS84IgdzvCQPqhGPLwCLcBGAsYHQ%2Fs1250%2F07sept2021.jpg&amp;imgrefurl=https%3A%2F%2Fwww.chinaaid.org%2F2021%2F09%2Fccp-police-arre)
+去年12月，一名50多岁的日本男子在中国上海被当局扣留。现在仍在拘留中。他被拘留的原因和情况尚不清楚。中共国自2014年实施《反间谍法》以来，当局对外国人的拘押接连不断。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/直播.png)
+另外，据日本政府官员透露，一名70多岁的日本男子因在中国从事间谍活动被判处12年监禁，这名男子本月7日在北京一家医院因病死去。该男子2015年在北京被拘留，2018年12月在北京市第二中级人民法院被定罪。
 
+信息源：[日本人の５０代男性を中国が拘束、理由や経緯は不明…服役中の７０代男性は北京で病死](text=%E6%97%A5%E6%9C%AC%E4%BA%BA%E3%)
 
-共产党确实很邪恶，也确实很“了不起”，能让十几亿人变成这个样子。把十几亿人、哪怕一亿人变成聪明人都很难，但你要把十几亿人变成都听话的人，那比登天都难，共产党真做到了。14亿中国人就能听它胡说八道，这已经不能用任何语言悲剧来形容了。
-
-你看追寻自由（网名）的脸就长开了，看看大陆人的长相，Bunny，脸没长开，没长开是身边的环境让他没长开。中国是一个有精神上的防火墙的，精神上已经被防火墙了！很多人说防火墙真的没有太大的用，它是推动这件事的罪魁祸首，但是没有互联网以前，中国人没有防火墙、没有互联网，中国人就聪明吗？到了海外的中国人，没有防火墙了，你觉得他就开智了吗？
-
-一个国家一个民族任何一个人，最可怕的跟你身边相处的人，一旦这个人没有受过好的教育，他再没有信仰，这人对你来讲几乎是你的炸弹，都是危险。所有的问题就是没有一个好的教育的社会是很可怕的，就像七哥如果没有经历过清风看守所，我可能就是那个买锁链女或者干卖锁链女，什么事我都可能干得出来。不会是养Snow，我会去吃Snow的那种人。因为你没有被教育，你就是最粗鲁的。然后七哥有了信仰。你要说吃狗七哥简直是心都碎了！一看到锁链女心都碎了！为什么？我有信仰！
-
-你去想想，追寻自由刚才的话给旁边人说，所有不信的人，他是被另外一种洗脑教育了，叫科学迷信，叫科学主义。还有对所有的所谓中立媒体的那种被虐待，连加拿大CBS、英国BBC、美国CNN，澳大利亚的Seven电视台，瞪眼撒谎，全世界媒体撒谎。老百姓被所谓的媒体主义、中立媒体主义、未定义的媒体和严肃媒体彻底的洗脑。所以追寻自由，你说他们不听啊，他成了恶魔恶缘。
-
-我们新中国联邦一上来就干得最了不起的事情，就是唯真不破，大家就是做自己（Be yourself）。说实话，你看到任何事情的结果都是不一样的。最重要的事情，我们的直播。
-
-昨天我一个多年的老友给我发信息，我又笑快晕了：“哎呀七哥，你一播就是几个小时，你也不准备准备，不打草稿？”这几年七哥的直播，爆料革命的直播就是唯真不破，不打草稿，没有任何的事情。
-
-所以说兄弟姐妹们，你们听的看的想问的这些东西，最可怕的一个根本原因就是人被洗脑了，没有教育、没有信仰的基础。中国人有多少郭文贵这样有勇气的人？我不是自我感觉好啊，真不多！在你有生之年看到，不会太多。
-
-***发布：Candy***
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
