--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,21 +1,31 @@
 ---
-title: 渥太华警察局长在自由车队抗议浪潮下辞职
+title: 禁中共高官亲属赴美学习 一周两项制裁中共高官法案
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2018146/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018273/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/5-28.jpg)
+（美国联邦众议员维姬·哈茨勒  资料图片来自网络）
 
-采编： UCool 优酷       编译撰稿：文明(添草灭共)
-![BREAKING: Ottawa Police Chief resigns](https://imgcache1.thepostmillennial.com/content/images/2022/02/ARTICLE-PHOTO--37--1-1.jpg)图片来源：thepostmillennial.com crypto
-据加拿大自媒体【后千禧年】2月15日报道，在卡车司机集结于渥太华市中心进行抗议活动的第 19 天，该市警察局长[斯洛利]宣布辞职。 报道称，[斯洛利]不久前还曾表示要争取更多警力和资源来结束抗议活动，并且没有任何辞职的计划。虽然未透露原因，但外界普遍认为该局长在全国“自由车队”反疫苗护照的浪潮下，承受着巨大压力。
+美国联邦共和党众议员哈茨勒提出了一项“禁止中共高官及其家属进入美国大学学习”的新法案。该法案锁定对象包括习近平和政治局常委等中共最高层成员及其家属。
 
-此前，渥太华警方因参与冻结卡车司机的筹款而被各方谴责。对此，“宪法自由司法中心”不仅指出抗议活动没有扰乱秩序，还抨击了警方对和平集会的污名化没有任何事实和证据。但当局以恢复秩序为借口，企图剥夺加拿大人在首都行使《宪章》所规定的自由表达、结社以及和平集会的基本权力。
+据《大纪元》2月17日报道，共和党籍美国联邦众议员维姬‧哈茨勒（Vicky Hartzler）办公室周三（2月16日）发布新闻稿称，哈茨勒已提交了《保护高等教育免受中共影响法》（Protecting Higher Education from the Chinese Communist Party Act），该法案将禁止中共官员及其家庭成员获得学生或研究签证。法案锁定所有中国共产党全国代表大会成员及其家属。法案还特别解释家属指的是中共官员的配偶、子女、父母、兄弟姐妹或孙辈。
 
-校对编辑：硫酸羟氯喹64
+值得注意的是，法案瞄准的对象包括中共总书记习近平、政治局常委成员、中共中央政治局成员及其家属。
 
-发文：青青
+该新闻稿称，在2020—2021学年，有超过31.7万名来自中共国的国际学生在美国学习，其中包括中共官员的家庭成员。新闻稿还特别指出，“习近平总书记的女儿习明泽此前于2014年在哈佛大学完成了她的本科学位，并于2019年重新报名参加研究生学习。”
 
-原文链接：[https://thepostmillennial.com/breaking-ottawa-police-chief-resigns-source](https://thepostmillennial.com/breaking-ottawa-police-chief-resigns-source)
+哈茨勒本人周三在推特上也宣布了这一法案。她表示，当习近平和中国共产党实施种族灭绝时，他的女儿却在哈佛大学接受了世界级的教育。她说：“美国不应该帮助那些积极致力于破坏我们国家的人，新立法将禁止他们进入美国大学。”
+
+哈茨勒此前曾因打击中共政权而受到中共的制裁。她提出了大量对抗中共的立法，包括《保护美国不受间谍影响法》。这项立法将允许美国国务院拒绝向那些已经对美国实施间谍活动或知识产权盗窃的个人发放签证。
+
+哈茨勒周三提交的这项法案是美国国会议员一个多星期内提出的第二项针对中共高官的法案。2月9日，美国众议院多名资深共和党议员提交了《制裁中共暴政压迫人民之官员法》（Sanctioning Tyrannical and Oppressive People within the Chinese Communist Party Act），简称《制裁中共法》（STOP CCP Act）。议员们在声明中表示，“中国共产党必须为其令人发指和令人不安的人权侵犯行为承担责任。”
+
+《制裁中共法》要求对所有中国共产党全国代表大会成员及其直系亲属进行制裁，制裁对象也同样包括习近平及其家人。该法案将禁止中共的两千多名党员进入美国，并阻止他们的家人入境。这些中共官员及其家人也将被正式禁止涉足美国的金融系统，在美国境内的财产不能进行交易，确保这些党员不能利用其家人绕过制裁。
+
+新闻链接：[https://www.epochtimes.com/gb/22/2/16/n13582372.htm](https://www.epochtimes.com/gb/22/2/16/n13582372.htm)
+
+* * *
 
  
 
