--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,75 +1,25 @@
 ---
-title: 疫苗强制与科学无关，而始终与权力和政治有关
+title: 多数人认为特鲁多不能胜任国家领导职责
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/2018127/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2018263/)
 
-众议员安迪·比格斯：
-它（疫苗强制）与科学无关，而始终与权力和政治有关。
+加拿大温哥华杨帆农场 枫叶快讯
 
-我们必须反对所有用于执行疫苗强制的资金。
-
-【附众议院自由核心小组推文：突发：众议院自由核心小组致函敦促参议院共和党人反对所有用于对美国公民执行疫苗强制的资金】
+采编撰稿： 薇文                校对编辑：硫酸羟氯喹64
 
 
+![](https://static.tnc.news/media/2022/01/website-af-29-696x365.jpg)图片来源：真北方
+据加拿大[真北方]2月16日报道，随着加拿大自由车队反抗强制疫苗政策的和平抗议进入第三周，越来越多的加拿大人对总理特鲁多的处理方式表示不满。
 
-> This was never about the science, it was always about power & politics. 
-> 
-> We must oppose ALL funding towards enforcing vaccine mandates. [https://t.co/2uTjp3KxLo](https://t.co/2uTjp3KxLo)
-> — Rep Andy Biggs (@RepAndyBiggsAZ) [February 16, 2022](https://twitter.com/RepAndyBiggsAZ/status/1494012169318547460?ref_src=twsrc%5Etfw)
+最新民调显示，53%的加拿大人认为特鲁多在面对抗议活动时的拙劣反应，显示其在国家出现危机时表现出的软弱无能。其中有63%的人不会根据该总理处置自由车队事件的方式而再投票给他。
 
+尽管主流媒体一边倒地打压和平抗议运动，但特鲁未能借此提升自己的公众形象。目前仅约30%的加拿大人认可他的表现，而多数人则认为他因激化了社会矛盾而再无资格成为自由党领袖和联邦政府总理，并应该对目前出现的危机负责。
 
+校对编辑：硫酸羟氯喹64
 
-参议员泰得·克鲁兹：
-今天很高兴见到埃内斯·弗里德姆!
-他表现出了巨大的勇气，并为站出来呼吁中国共产党的暴行和种族灭绝付出了个人代价。
-NBA把中共的金钱看得比正义和人权还重，所以没有球队让29岁的他上场。
+发文：青青
 
-
-
-> Great to meet [@EnesFreedom](https://twitter.com/EnesFreedom?ref_src=twsrc%5Etfw) today!
-> 
-> He’s shown enormous courage—and has paid a personal price for—standing up & calling out the atrocities & genocide of the Chinese Communist Party.
-> 
-> The [@nba](https://twitter.com/NBA?ref_src=twsrc%5Etfw) values CCP $$ more than Justice or human rights & so at age 29 no team will let him play. [pic.twitter.com/6UlcYf9EOg](https://t.co/6UlcYf9EOg)
-> — Ted Cruz (@tedcruz) [February 16, 2022](https://twitter.com/tedcruz/status/1494032026420273162?ref_src=twsrc%5Etfw)
-
-
-
-参议员玛莎.布莱克本：
-当我为埃内斯勇敢地与共产主义中国抗争鼓掌时，我没想到他会站得这么高！
-
-感谢您大声疾呼并追究中共的责任，感谢您今天与我们共进午餐，埃内斯 @EnesFreedom。
-
-
-
-> When I applauded Enes for his courage to stand up to Communist China, I didn’t think he’d be standing this tall!
-> 
-> Thank you for speaking up and holding the CCP accountable, and thank you for joining us at lunch today, [@EnesFreedom](https://twitter.com/EnesFreedom?ref_src=twsrc%5Etfw). [pic.twitter.com/OlqowUtc9B](https://t.co/OlqowUtc9B)
-> — Sen. Marsha Blackburn (@MarshaBlackburn) [February 16, 2022](https://twitter.com/MarshaBlackburn/status/1494077108833996810?ref_src=twsrc%5Etfw)
-
-
-
-众议院迈克·麦考尔：
-
-历史将把 2022北京作为耻辱铭记。虽然 #中共 迫切希望人们在奥运期间以积极的眼光看待其政权，但美国人应该将目光转向中共长期践踏人权的历史。这就是北京2022的真实故事。
-【转休斯顿纪事推文：尼基·海利，迈克·麦考尔：当你观看北京奥运时你不会看到的是什么】
-
-
-
-> History will remember [#Beijing2022](https://twitter.com/hashtag/Beijing2022?src=hash&amp;ref_src=twsrc%5Etfw) as a disgrace. While the CCP desperately wants people to see its regime in a positive light during the games, Americans should turn its gaze instead to the CCP’s long history of human rights abuses. That’s the true story of [#Beijing2022](https://twitter.com/hashtag/Beijing2022?src=hash&amp;ref_src=twsrc%5Etfw). [https://t.co/cWm5lw4mfR](https://t.co/cWm5lw4mfR)
-> — Michael McCaul (@RepMcCaul) [February 16, 2022](https://twitter.com/RepMcCaul/status/1494066290834747396?ref_src=twsrc%5Etfw)
-
-
-
-美前国务卿迈克·蓬佩奥：
-我希望你们和我一起祈祷，在东欧和平面临挑战之际，祈祷我们的世界领导人拥有智慧、耐心和力量。
-
-
-
-> I hope you will join me in praying for our world leaders to have wisdom, patience and strength, as this challenge to peace in Eastern Europe unfolds. [https://t.co/QYne2i1Z4b](https://t.co/QYne2i1Z4b)
-> — Mike Pompeo (@mikepompeo) [February 16, 2022](https://twitter.com/mikepompeo/status/1494081371635167240?ref_src=twsrc%5Etfw)
-
-
+原文链接：[Poll finds half of Canadians believe Trudeau “not up for the job”](https://tnc.news/2022/02/15/poll-finds-half-of-canadians-believe-trudeau-not-up-for-the-job/)
 
  
 
