--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,29 +1,29 @@
 ---
-title: 大直播后记：冬眠会是共产党灭亡的开始
+title: 美指责中共国未履行承诺 将促其改变经贸行为
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018125/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2018240/)
 
-整理：奋斗、枫叶红了
-编辑：文泓
+![资料照：美国贸易代表戴琪](https://gdb.voanews.com/35FC463E-0E71-475E-98AD-EFE9D6CC3A46_w1023_r1_s.jpg)资料照：美国贸易代表戴琪
+据美国之音2月16日报道，美国贸易代表办公室16日向国会提交中共国自2001年加入世贸后有关遵守世贸组织规则的年度评估报告。指责中共国没有履行加入世界贸易组织的承诺，没有向外国竞争者开放市场。报告列举了中共国种种不公平的经贸行为，以及中共国未能履行美中第一阶段贸易协议。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/10-20.png)图片来源：墨尔本雅典娜农场设计组
+美国前总统川普2020年1月与中共达成第一阶段贸易协议，对中共国价值3600亿美元的进口产品征收关税，中方承诺增加购买美国的农产品。但中共国未能兑现承诺，只完成了承诺的57%。美方表示要寻找新的战略及更新国内贸易手段，对抗中共国由国家主导的非市场政策和经济行为。
+
+如果用西方遵循的兑现承诺、履行职责等等作为与中共交往的原则，收获的永远是失望。除了偷你的没商量、拿你的不通报，中共说过的话连标点符号都不能信。为了达到目的，中共可以欺骗全世界；为了毁掉契约，中共可以翻脸不认人。答应好的贸易协定没有完成，制定方案，采取措施，打击中共，打疼了中共才会长记性。
+
+新闻参考链接：[https://www.voachinese.com/a/ustr-says-new-trade-tools-needed-to-fight-china-state-led-trade-20220216/6444187.html](https://www.voachinese.com/a/ustr-says-new-trade-tools-needed-to-fight-china-state-led-trade-20220216/6444187.html)
+
+编辑：胖丁
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
-另外一个就看中国的经济。中共国现在整个的银行业有二十几家商行破产，二百多家银行等待破产。房地产行业过去的将近二十多家大企业破产，两万家的小企业破产，再有两千家在等待破产。中共印了将近50万亿人民币，他自己也承认就是印出来的，就是复印复制出来的人民币，用以抢夺人民的财富。导致的中国经济现在通胀通缩严重，而且银行和存户之间的这种存贷关系随时可能暴雷（挤兑）。中共国经济模式实在是太可怕了。
+编辑：【英国伦敦喜庄园编辑部】
 
-更重要的，大家看到一个所谓的北京冬奥会已经开成国际笑话了，现在叫烂尾冬奥会，它咋收场呢？还怎么开闭幕会呢？谁去闭幕会呢？是吧。2008年奥运会有204个国家参加开幕式，然后现在是4个国家，严格讲就两个国家、两个国家元首去了；从法律上来讲就一个国家，就是普京，是正元首，就是普京一个人；阿布扎比王储（是）真正的说话人，但是他还不是法定的总统，他哥（国家元首）还躺着呢，对吧。严格讲国家元首只有一个，这很恐惧的。
-
-那么运动员呢，这是有史以来体验最差的一次奥运会。运动员离开北京，现在开始骂共产党了。然而共产党现在已经开始启动了内宣机器了，大外宣还没开始。内宣机器说，运动员“没有离开，已经想念”，这没上床呢，已经说需要再来一次高潮。这王八蛋不要脸到极致了啊。在这种情况下，大家看到它是没有闭幕式了。而且这个闭幕式将开启共产党的被消灭的终结之战，你走着看。全世界最后会看到共产党，因为冬奥会是它一个象征性的灭亡的开始，运动员永远不会拉倒的，他们在北京受的苦受的屈辱，不会拉倒的，一直到共产党被消灭为止。
-
-资料来源：[2022年2月16日 文贵大直播](https://gettr.com/streaming/puvpmn3ce1)
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
