--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,36 +1,39 @@
 ---
-title: 有声&#124;中共病毒疫苗即将引发世界变局
+title: 中共虚张声势的新型“机器人牦牛”将支持地面部队工作
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2018089/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2018224/)
 
-配音：香草山佛教部 – 李傻
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-在2月11日的大直播中，郭文贵先生再次重申了中共病毒疫苗灾难将导致的严重后果。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-44.jpg)
-郭先生表示，目前，各国的卫生部门和媒体故意把中共病毒所导致的并发症与中共病毒疫苗的副作用混淆，但此举只会给这些浑水摸鱼者添加更多的罪责而已。在不远的将来，世界不仅要溯源中共病毒的真相，亦会严惩强制中共病毒疫苗接种的政府、媒体及大药厂等机构。最终，中共病毒疫苗灾难必将导致世界政治、军事和经济的大变局。
+国防和安全问题作家：KYLE MIZOKAMI
+发布日期：2022年02月16日
+新闻来源：https://www.popularmechanics.com/
+翻译：V 在途中
 
-郭先生也提到，相对的，爆料革命一直在病毒问题上向世界预警，从最初的中共释放生物武器冠状病毒，到后来的中共病毒疫苗灾难。期间，灭共的浪潮也从小声音发展成了大趋势。未来，出于政治的需要，一些持亲共立场的组织必将转变其态度。
+- **根据中共国官方新闻机构的报道，中共推出了一种四足机器牦牛，据称它可以承载与两只真正的牦牛一样多的货物。**
+- **仔细查看视频后，看起来机器牛的能力被夸大了。**
+- **中共似乎想用机器人来支持地面部队，而不仅仅是运送补给——该新闻机构似乎隐瞒了其他一些东西。**
 
-为此，郭先生告诫战友称，大家不必担忧世界当下所呈现出来的某些疯狂现象，这些现状只能加速邪恶力量的灭亡。
 
-文字版原文：[中共病毒疫苗即将引发世界变局](https://gnews.org/zh-hans/2012035/)
+中国工程师正在开发一种大型的四足机器人“牦牛”，据称它能够拖运与两只真正的牦牛一样多的货物。这个未命名的机器人似乎注定要用于军事用途，类似于位于马萨诸塞州沃尔瑟姆的波士顿动力公司在过去十年中推广的机器狗概念，但仔细看视频，可能只是中共的宣传。
 
-音频处理：Tom Li
-发稿：Tom Li
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
-**更多资讯，更多关注**
+该机器人由四个细长的腿和桶形身体支撑，顶部装有一个载货金属架。*中共新闻机构《环球时报》*声称，它最多可以携带 160 公斤（352 磅）的物品，并以每小时 6.21 英里的速度行驶。它援引中共新闻网站*《人民日报*》的话说，该机器人是“世界上最大、最重、最具越野能力的同类机器人”。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+*《环球时报》*说，该机器人“对包括台阶、沟渠和悬崖在内的各种地形，更不用说泥泞的道路、草原、沙漠和雪地，表现出非常强的适应能力。” 这表明，该机器牦牛有一个激光雷达传感器，可以感知下落，如沟渠和悬崖。这也就不足为奇的表明：即使是今天的商用机器人，如[Roborock S5](https://go.redirectingat.com/?id=74968X1525083&amp;url=https%3A%2F%2Fus.roborock.com%2Fpages%2Froborock-s5-max&amp;sref=https%3A%2F%2Fwww.popularmechanics.com%2Fmilitary%2Fweapons%2Fa39026037%2Fchinas-new-robotic-yak%2F&amp;xs=1&amp;xcust=%5Butm_source%7C%5Butm_campaign%7C%5Butm_medium%7C%5Bgclid%7C%5Bmsclkid%7C%5Bfbclid%7C%5Brefdomain%7C%5Bcontent_id%7C3ee58db0-b31d-4daf-9ef3-5ba128e88621%5Bcontent_product_id%7Cf672096c-09a3-4c9a-803a-63507d85fc6e%5Bproduct_retailer_id%7C)，也具有此功能。泥泞的道路、草原、沙漠和雪原都是天生的平坦地形，因为障碍物很少。
 
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2165.png)视频显示，这只机器牛似乎正朝着一条布满岩石的小路前进，但随后又切入了一个新的场景。但这没关系，因为无论如何它显然只是在一条土路上，相机角度使它看起来像是朝着岩石前进。
 
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+精心剪辑的视频表明机器牦牛在障碍物方面存在严重问题，例如岩石和丘陵地形。视频显示，机器牦牛正在穿越沙漠，有人通过遥控器控制它。这一切似乎都令人印象深刻，直到您意识到大部分实际镜头都是机器牦牛在笔直平坦的地形或铺砌的斜坡上行走。
+每次牦牛前往未铺砌的地形，尤其是散布着岩石或未铺砌的斜坡的地形时，视频都会切换到一个新场景。在一个场景中，机器牛似乎正在崎岖的地形上行走，但仔细观察后，我们实际上无法看到机器牛正在行走的地方。
+该视频还试图掩盖机器牦牛的军事背景。视频中散布在机器人前面的横幅模糊不清，这是一件奇怪的事情。然而，在视频的另一点可以看到其中的一部分，并显示了一辆带有坦克状炮塔的轮式车辆。这表明中国军方可能对这种机器耗牛有更多的想法，而不仅仅是运送物资。
 
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+无论这只机器牦牛的命运如何，它至少比五角大楼的机器宠物项目落后十年。 2012 年，海军陆战队和国防高级研究计划局 (DARPA)测试了Four-Legged Robot
+小队支援系统 (LS3)。 LS3 由波士顿动力公司开发，重 800 磅，可运载 400 磅货物，航程 20 英里。 LS3 甚至可以通过语音命令进行控制。
+更好的是，LS3 在应对崎岖地形方面要好得多。在上面的视频中，LS3 可以轻松穿越岩石地形、攀登岩石山丘并直接穿过灌木丛。
+Robo-yak 不会很快布置到任何地方，原因与海军陆战队从未追求 LS3 的原因相同：机器人依靠电池运行，一旦电池耗尽，它需要在一个有充足电力的地方充电几个小时。如果电池技术可以使腿式机器人的运行距离增加三倍，那么不久之后我们就可以在战场上看到它们。与此同时，机器牦牛的工程师们也有足够的时间来解决中共《人民日报》努力掩盖的缺陷。
 
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+新闻来源：[China’s New ‘Robotic Yak’ Will Support Ground Troops, But It’s Not as Capable as It Seems](https://www.popularmechanics.com/military/weapons/a39026037/chinas-new-robotic-yak/)
 
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+审核校对：Barry Jack
+上传排版：V在途中
 
  
 
