--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,34 +1,49 @@
 ---
-title: 2月16日大直播后记：七哥越破产战友越有钱
+title: 热点回顾：为什么辉瑞疫苗没有在印度上市？
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2018078/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018173/)
 
-整理：Anita、Lucy Liu
-编辑：小红帽
+翻译：文斗
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-275.jpg)
+**热点回顾：为什么辉瑞疫苗没有在印度上市？**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/16-7.png)图片来源：雅典娜农场设计组（614）
+2月16日，thegatewaypundit网站发表回顾文章并提出疑问：为什么辉瑞疫苗没有在印度上市？
+
+2021年2月，在印度医药监管机构要求进行当地的安全性和免疫原性研究之后，辉瑞公司撤回了其COVID-19疫苗在印度的紧急使用授权申请。
+
+去年，印度的COVID-19主题专家委员会（SEC）在一次会议上审查了辉瑞公司提交的数据。该委员会没有推荐辉瑞公司的疫苗，原因是国外报告的严重不良事件以及该公司缺乏针对印度人口的安全性和免疫原性研究。
+
+当地试验是印度在有新疫苗时实行的标准程序，以确定其安全性以及在其公民中产生免疫反应。然而，根据印度的规定，在某些情况下可以放弃这种试验。
+
+该决定将影响辉瑞公司COVID-19疫苗的上市，辉瑞疫苗将不能在印度和中国这两个世界上人口最多的国家销售。
+
+与其他公司为外国疫苗在印度进行小规模研究不同，辉瑞公司以其在美国和德国进行的试验获得了其他国家批准为由寻求例外。
+
+辉瑞公司在一份声明中说：“根据会议的审议情况以及我们对监管机构可能需要的额外信息之理解，公司决定此时撤回其申请。”
+
+“辉瑞公司将继续与监管机构接触，并在不久的将来获得更多信息后重新提交其批准申请。”
+
+现在，一年过去了，没有辉瑞重新申请的后续信息。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-73.jpg)
+截至2月16日，该文章上获得了152万次访问，在盖特上有大量评论与转发，表达其对辉瑞隐瞒信息的猜测以及对疫苗安全的质疑。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/6-25.jpg)
+（[https://www.gettr.com/post/puxg0m1ffa](https://www.gettr.com/post/puxg0m1ffa%EF%BC%89) 那么，印度意识到了不利影响，而我们却没有？）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7-22.jpg)
+（[https://www.gettr.com/post/puwqtm8655](https://www.gettr.com/post/puwqtm8655) 辉瑞公司必须公布所有的数据，而且必须是不加处理过的。）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-22.jpg)
+（[https://www.gettr.com/post/puwa9x6d5a](https://www.gettr.com/post/puwa9x6d5a) 基本上就是，印度要求辉瑞公司证明其疫苗的安全性和有效性，而辉瑞公司没有这样做（因为他们当然不能），而是直接撤回了在印度使用其疫苗的申请……那可是世界上人口第二多的国家！！ 他们宁愿承担经济损失，因为他们知道他们无法满足印度使用该产品的要求……
+
+但是，用在美国人身上就可以了）
+
+新闻来源：
 
 
-有钱的时候买多少名牌，都不重要。第一要去旅游，行万里路，七哥就走过万里路。我到欧洲到德国去，看了希特勒那个二战（的历史）。为啥我老提二战？我感触太深了。人类这么近的历史，为啥不学习呢？你学那个大清朝（历史）有个屁用。二战是我们最好的一面镜子。在二战里边，大家最重要要学到的就是老百姓的无知，都相信希特勒。这不就是刚才战友问的问题吗？然后共产党要打台湾。你疯了打台湾。你的父母还有常识，说共产党一定会最后发动一场战争来让共产党继续活下去。你爸妈不简单。更重要的事情是财富，一旦在战时或大灾难，大病毒来时，如果你没有吃饭的钱，你真得饿死。还有你要有几个朋友，要有几个人。光有钱，在大难大战来时，你没有人是没有用的。新中国联邦都给你安排了有战友，有币，还有情报，还有让你开智。
 
-你看赵长鹏有多坏，他不做KYC的，不管什么钱都来，就是玩假的，这是犯罪。没有做KYC，赵长鹏就把所有人汇钱的信息给共产党。共产党抓了多少人弄了多少人？全世界就喜币喜支付，绝不可能有任何第三方拿走你的信息。谁拿走了，我负一切责任。更重要的，今天个人破产的时候，你想想，七哥但凡有一个币，喜联储和七哥就是犯罪啊！那不是开玩笑的。但是七哥作为一个最智慧的advisor（建议者），创造者，用这种智慧，让这么多人有钱，是一个多么伟大的行为啊。伟大到什么程度？这比共产党说的还伟大。它是爹亲娘亲不如党亲，七哥真是爹亲娘亲没有战友亲。战友们现在都发财了，而且你看44块钱，这是真的，你现在就可以卖呀。是真的真钱呐！关键有Hpay，大家啪啪地钱就转走了。战友们啥都可以干。什么叫交易，你给我你有的，我给你我的，咱俩形成交易。咱俩交易之间为什么需要中间第三方？
+> [Flashback: Pfizer Withdraws COVID Vaccine Application in India After Regulators Demand Local Safety and Immunogenicity Study](https://www.thegatewaypundit.com/2022/02/pfizer-withdraws-covid-vaccine-application-india-regulators-demand-local-safety-immunogenicity-study/)
 
-银行是世界上最多余的，是所有人财富掠夺的工具。别忘了存在银行的钱，银行破产是不用还的。你要承担责任，而它永远不负责任的。特别是有些苛捐杂税，你像Bunny这小孩儿，他要有个10万美元，8万美元，怎么拿出来？刚才看到了美国政府伟大啊，虚拟货币不在报税表里边儿。这里边儿有大文章啊，兄弟姐妹们。赵长鹏被灭了后，最大受益的就是咱啊！
 
-咱喜联储现在已经是全世界的四大交易所了。战友们，你们拥有第四大交易所。如果数字银行再公布，还有如果某国再进行投资，你看看，七哥越破产你们越有钱。关键你们这钱不受第三方监管，第三方掠夺。这是多大的利啊！更重要的是：无国界，无物理界限。
 
-在银行里的钱本来在追寻自由名下，看着看着钱变成了什么，你啥都没有。赵长鹏没有做KYC，（他的钱）现在被全世界（还一定被抓起来的）已经全部被没收，而这个勾兑一定会被刑事定罪。他完了。整个喜联储绝对全部做KYC，百分之百地的保证战友安全，绝不接受第三方在这块抽钱抽佣出卖战友信息，而且喜支付也给你配上了。最重要的事情，这个币是有限制的。币安是什么东西？它没限制，他想干多少干多少，永远不给你解释。
-
-资料来源：2022年2月16日郭文贵先生大直播
-
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[https://mosnews.orkmail.com/statistics/link/post20220216\_2317F500D1.repost.html](https://mosnews.orkmail.com/statistics/link/post20220216_2317F500D1.repost.html)
 
  
 
