--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,17 +1,36 @@
 ---
-title: 秘翻在线：又一名日籍男子在上海被中共当局拘捕
+title: 2022.2.16大直播后记：中国人有精神上的防火墙
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018074/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018149/)
 
-撰稿：待命（文暁）
-![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-23.png)（图片源自本文链接）
-2月17日共同社北京消息：当社17日获悉，日本外务省公布：一名50多岁的日本男子去年12月在中共国的上海被中共国当局拘捕。现仍处于被拘留状态，但细节和原因不明。
+**整理：Anita、Lucy Liu
+编辑：Candy**
 
-自2015年前后，有一系列日本国民因涉嫌间谍和其它罪行而被中共过当局拘捕。日本外务省表示，最新的拘捕事件与此前系列事件的性质相同。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/直播.png)
 
-同时，我们了解到，一名70多岁的日本人于2015年6月因间谍罪在北京被拘捕，并于2018年12月被判处12年监禁，本月在北京一家医院因病去世。据报道，该男子曾作为顾问经常往返于日本和中共国之间。
 
-信息源：[上海で50代日本人男性拘束　昨年12月、経緯や理由不明（共同通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/7fb03c7cc42106209845bc71b6f75c353eb15823)
+共产党确实很邪恶，也确实很“了不起”，能让十几亿人变成这个样子。把十几亿人、哪怕一亿人变成聪明人都很难，但你要把十几亿人变成都听话的人，那比登天都难，共产党真做到了。14亿中国人就能听它胡说八道，这已经不能用任何语言悲剧来形容了。
+
+你看追寻自由（网名）的脸就长开了，看看大陆人的长相，Bunny，脸没长开，没长开是身边的环境让他没长开。中国是一个有精神上的防火墙的，精神上已经被防火墙了！很多人说防火墙真的没有太大的用，它是推动这件事的罪魁祸首，但是没有互联网以前，中国人没有防火墙、没有互联网，中国人就聪明吗？到了海外的中国人，没有防火墙了，你觉得他就开智了吗？
+
+一个国家一个民族任何一个人，最可怕的跟你身边相处的人，一旦这个人没有受过好的教育，他再没有信仰，这人对你来讲几乎是你的炸弹，都是危险。所有的问题就是没有一个好的教育的社会是很可怕的，就像七哥如果没有经历过清风看守所，我可能就是那个买锁链女或者干卖锁链女，什么事我都可能干得出来。不会是养Snow，我会去吃Snow的那种人。因为你没有被教育，你就是最粗鲁的。然后七哥有了信仰。你要说吃狗七哥简直是心都碎了！一看到锁链女心都碎了！为什么？我有信仰！
+
+你去想想，追寻自由刚才的话给旁边人说，所有不信的人，他是被另外一种洗脑教育了，叫科学迷信，叫科学主义。还有对所有的所谓中立媒体的那种被虐待，连加拿大CBS、英国BBC、美国CNN，澳大利亚的Seven电视台，瞪眼撒谎，全世界媒体撒谎。老百姓被所谓的媒体主义、中立媒体主义、未定义的媒体和严肃媒体彻底的洗脑。所以追寻自由，你说他们不听啊，他成了恶魔恶缘。
+
+我们新中国联邦一上来就干得最了不起的事情，就是唯真不破，大家就是做自己（Be yourself）。说实话，你看到任何事情的结果都是不一样的。最重要的事情，我们的直播。
+
+昨天我一个多年的老友给我发信息，我又笑快晕了：“哎呀七哥，你一播就是几个小时，你也不准备准备，不打草稿？”这几年七哥的直播，爆料革命的直播就是唯真不破，不打草稿，没有任何的事情。
+
+所以说兄弟姐妹们，你们听的看的想问的这些东西，最可怕的一个根本原因就是人被洗脑了，没有教育、没有信仰的基础。中国人有多少郭文贵这样有勇气的人？我不是自我感觉好啊，真不多！在你有生之年看到，不会太多。
+
+***发布：Candy***
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
