--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,37 +1,34 @@
 ---
-title: 维州将放宽所有新冠限制，包括二维码和人数限制
+title: 有声&#124;美科学家称中共病毒来自武汉病毒研究所
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2018054/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2018126/)
 
-#### 澳洲新闻时事动态，尽在雅典娜【澳洲热点】
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月10日，据盖特消息显示，美国国会众议员斯卡里斯在接受采访时表示，那些支持中共病毒实验室起源的科学家们应该针对病毒溯源问题前往国会作证。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide5-10.jpeg)
+斯卡里斯提到，他在与其他议员调查中共病毒起源时发现，包括福奇的高级顾问在内的许多科学家都认为中共病毒来源于武汉病毒研究所。然而，在他们参与了福奇召开的电话会议后，这些学科家们纷纷转变了态度。同时，大多数与会科学家在其后的时间里陆续获得了数百万美元的联邦拨款。
 
-整理/编辑：小鱼儿
+斯卡里斯强调，美国政府应该就中共病毒起源问题举行国会听证会，而这些改口的科学家们也必须在听证会上接受质询。即使佩洛西议长一直阻挠该听证会的举行，但众议院一定会挖出有关中共病毒来源的真相。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/image-47.png)图片来源：雅典娜设计组
+文字版原文：[美科学家称中共病毒来自武汉病毒研究所](https://gnews.org/zh-hans/2012234/)
 
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-当地时间2月17日，据天空（Skynews）新闻报道，维州州长丹尼尔·安德鲁斯（Daniel Andrews）宣布，维多利亚州的限制将从周五下午 6 点开始放宽。
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-维州将取消酒店和娱乐场所的人数限制，允许重新开放室内舞池。  零售场所、学校、托儿所和幼儿以及许多工作场所，员工的登记要求也将被取消。二维码登记将保留在“已接种疫苗的经济”环境中，例如：娱乐、招待场所。 安德鲁斯说：“如果你去不需要接种疫苗的超市，你就不需要二维码登记。”
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
 
-肉类加工等一些关键行业的监督测试，将不再是强制性的，而是建议性的。医院工作人员的气泡（限制社交圈）也将不再需要，“但那时仍然可以由卫生服务部门自行决定使用。”
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-未完全接种疫苗的海外旅客和机组人员的隔离期，已从 14 天减半至 7 天。
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
 
-他们不需要从维多利亚服务局获得国际入境许可证。
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
 
-另外，维州将于下周宣布，放宽对重返办公室和戴口罩的限制。安德鲁斯先生说：“（卫生部）部长还不能完全做出这些决定，我们只能等着看医院的人数继续下降。”
-
-参考新闻：[Density limits scrapped, dancing back on and changes to QR code check-ins: All the restrictions being eased in Victoria](https://www.skynews.com.au/australia-news/coronavirus/density-limits-scrapped-dancing-back-on-and-changes-to-qr-code-checkins-all-the-restrictions-being-eased-in-victoria/news-story/67d1e737ed1b5eb4b1a8d28bc236ad53)
-
-发布：tianzhihuan
-
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
