--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,29 +1,37 @@
 ---
-title: 中日财经爆┃日本贸易逆差创史上第二高
+title: 有声&#124;中共不灭 世界永无和平
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2018036/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2018105/)
 
-撰稿:东京樱花团/麗子
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月15日，郭文贵先生在盖特视频中谈及，中共北京冬奥会和谷爱玲母女事件将造成海外华人与世界对立的结果。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/4-32.jpg)
+郭先生解释道，作为不承认双重国籍的中共国，美国人谷爱玲却为中共国夺得奥运金牌——这种荒唐事件不仅让中国人丢脸，也让海外华人与世界对立，其危害是深远的。同时，谷爱玲母女事件和北京冬奥会也让全世界看清了中共的真面目。此外，即将到来的中共病毒疫苗灾难正在让各国政府高度紧张，而文明国家的人民也在奋起反抗来自各个政府的疫苗暴政。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中日财经爆┃日本贸易逆差创史上第二高.png)[图片来源](https://www.bank-daiwa.co.jp/column/articles/2020/2020_234.html)
+郭先生也提到，中国人民智慧如海，能冲走一切灾难。因此，但凡中国人被容许说话，墙内就不会有锁链女、杨改兰等悲剧出现。但是，中共妄想领导世界，到处通过“蓝金黄”干涉他国内政，又派出特务单伟健骗走美国乃至全世界的养老基金。
 
-日本财政部公布的1月份贸易统计数据显示，贸易逆差为2.1911万亿日元。创史上第二高水平，也是连续第六个月出现贸易逆差。
+对此，郭先生警告称，只要共产党和共产主义不灭，全世界将永无安宁。
 
-主要原因是受原油、煤炭和液化天然气价格飙升影响，进口额较去年1月增长39.6%，达到创纪录的8.5231万亿日元。
+文字版原文：[中共不灭 世界永无和平](https://gnews.org/zh-hans/2012044/)
 
-另一方面，出口额较去年1月增长9.6%,达到6.3320万亿日元。
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
-摘要: 日本财政部公布的1月份贸易统计数据显示，贸易逆差为2.1911万亿日元。创史上第二高水平，也是连续第六个月出现贸易逆差。
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-关键词:日本 贸易逆差 原油价格  出口额
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
 
-信息源:
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-[1月の貿易収支 2兆円超の貿易赤字 原油・ガス・石炭の高騰が影響](https://news.yahoo.co.jp/articles/ad41a359b2ac5ffb7ce5a0c6441d6ae5a6b16893)
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
