--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,39 +1,29 @@
 ---
-title: 习近平脾肾动刀   天灭中共佑台湾
+title: 大直播后记 : 放下就是拥有
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2018020/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018090/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
+**整理：**奋斗、枫叶红了
+**编辑：**舞指如歌
+![](https://assets.gnews.org/wp-content/uploads/2022/01/12315456_4-2.png)
+“瓦力瓦力哇，卡拉拉兹卡斯！”日本话就是“我们一定会赢”。今天三个（嘉宾是）台湾农场的战友，然后Alice、Tiger主持人也是台湾农场，今天台湾农场专场直播。我觉得听到Alice说话，还有Alice的眼睛都哭成这个样子，我能想象得到，也能够感同身受。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/习近平脾肾动刀-天灭中共佑台湾.png)
+特别是从昨天到今天，战友们给我发信息，真的，七哥最痛苦的就是：我的快乐很难全部都分享给你们，你们能感受到，但是真的是（隔着）这个屏幕。即使人和人在一起，也很难感受那种感同身受。
 
-2022年2月16日，郭文贵先生在大直播中爆料，习近平同时动了脾肾两个手术，这对于灭共和台湾都是利好消息。
+我总是这么说，我说人类什么时候能把这个感觉传给对方啊？只要我们双方愿意的话就太好了。你两个人双修，身体黏糊在一起，从冰冷的身体到全身发热，然后全身出一身汗，黏乎乎的两个人就跟狗跑一圈似的，伸着大舌头，然后凉下来，这个俩人都能有感受。但是你说，这个感情的这种苦啊痛啊，怎么能让对方感受到、让更多人感受到呢？这个我觉得是个研究的课题，很多战友给我发的各种信息，就是那种感觉真的是太感动人了。最幸福的莫过于如此了。
 
-**习太阳脾肾俱坏，光芒黯淡**
+我这个人从小到大经历过各种人间的酸甜苦辣，人间冷暖我都尝过。所有的背叛和忠诚是什么样的事情，多苦的日子我都过过。在看守所里边戴过死刑铐八个月，那你想想什么感觉，是吧。吃棉花吃了几个月，你想想什么感觉，这都经历过。这种感觉真的是跟那时候不一样，我们瑞士的一位战友很有钱，她先生是一个当地的瑞士人，他知道这事以后，就找银行要汇款，就往这汇款往那汇款，说总共两次被罚2亿多美元，我们都替你还。还有咱台湾的战友们，家里边有钱的，把股票都卖了，卖的还很便宜，然后要给七哥还钱。还有日本的战友，太多了。还有很多战友就是真的是能感受到，真的连命都能给七哥一样，那肯定是太多太多人了。还有很多问候、捐币，各种都很多。
 
-** **“习太阳刚刚做了手术，两个手术，一个脾，一个肾，习太阳的光非常黯淡，可能对中国共产党剩下的最后千把天，对台湾是最好的消息，听说手术后，缓过来以后所有对台行动确实要暂缓，死亡面前没有那么疯狂，对台湾是大好消息，习彻底手术”，郭文贵先生透露。
+那么现在我们遇到了这种事的时候，我们大家都要看清事情的本质。刚才Tiger说的不破不立呀，然后放弃呀，包括昨天很多战友这样说：七哥，我们一定要把18楼拿回来呀。我说放下就是放下；放下才能得到，放下就是拥有。很多人觉得放不下，但是兄弟姐妹，这都很浅薄。
 
-**作战室里动手术，大凶之兆**
+*发布：翼族*
 
-关于习近平手术的时间和地点，郭文贵先生进一步透露，“28小时以前，在准备对台作战室的地方做了手术”。
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-**天灭共党佑台湾，中华大幸**
-
-就在此次大直播的前两天，即2月14日、15日，郭文贵先生罕见地连续在盖特视频爆料中共攻台阴谋。
-
-郭文贵先生反复预警，冬奥会开幕式后，习近平近期隐身的八九天，“正在处心积虑的酝酿对台作战计划，就连中南坑的人都不知道他去哪儿了，谎称自己身体不舒服，而且躲在某个地方在疗养”。
-
-孰料人算不如天算，习近平以冬奥会为掩护，计划与俄罗斯联手分头各取台湾和乌克兰，最终其身体无法支撑其疯狂，手术后暂缓攻台计划。郭文贵先生也感叹，“这是天意吧，台湾那么多庙、那么多念经，上帝会保佑台湾！”
-
-台湾避免了战火，同时也给大陆14亿国人避免了战火，实乃中华之大幸！经此一折腾而未遂的习近平与中共，必将加速败亡。
-
-信息来源：
-
-[2022年2月16日文贵大直播：疫苗公司股价变化；看中共的普遍贪腐、以贪反贪、以反贪为名实施政治清理；世界多地反华苗头；冬奥会锁链女后续；太平联盟官司进展； – G|TV](https://gtv.org/video/id=620cf40c432ae869226d8db5)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
