--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,31 +1,36 @@
 ---
-title: 视频&#124; 徐州八孩案
+title: 有声&#124;中共病毒疫苗即将引发世界变局
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2018019/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2018089/)
 
-制作：香草山视频部 – Jesse(文博)
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-1月28日，抖音帐号“徐州一修哥”发布视频，揭露一名牙齿都被拔光了的女子被人用铁链拴在破屋内囚禁，前后生养了八个孩子。该帐号不久遭禁，但视频传遍了海内外，残忍的画面触发民间对中国各级政府严重不作为、致使人口贩卖、拐骗儿童之风不仅没有杜绝，反而猖獗的质疑。更有作家质问，不是有一首颂歌叫“我把党来比母亲”吗？！
-已经是21世纪第二个十年，竟看见一个被铁链拴在在破屋墙上的八个孩子的母亲，
-事发地徐州丰县县委宣传部当日发表紧急声明“辟谣”，称8孩母亲名叫“杨某侠”，1998年8月与丰县还口镇董志民结婚，不存在拐骗行为。官方在声明中似乎有意掩盖了杨姓女子来自何处，给人的感觉是当地人。既然不存在拐骗行为，为何董姓男子铁链拴妇人？官方声明称杨姓女子患精神病，会攻击老人、小孩，其丈夫采用铁链拴住她。
-但此说更无法平息女子被拐卖的嫌疑，杨某侠为何精神失常？为何牙齿脱光？杨某侠到底遭遇了哪些恐怖虐待？如果杨某侠是精神病患者，属于无结婚行为能力者，按中国『民法典』不能结婚，为何官方给办了结婚证，是否有掩盖拐骗嫌疑？
-更有舆论质疑，杨某侠到底什么时间患上精神病？之所以患了精神病，落到目前的惨状，是否是因为董姓男子、不排除其他男子，害怕其逃跑，长期囚禁虐待强奸的结果？女子的身心状态和拴着她的铁链强有力地暗示着某种信息。
-丰县政府1月30日发表第二份声明继续否认杨姓女子有拐卖嫌疑，称杨女1998年在还口镇流浪期间被董家人收留，真实身份和本名不明，原籍待查，当初履行结婚手续并未认真核实身份等等。
-民间舆论紧追不放，当局2月7日深夜发布第三份“初步调查”，称杨某侠牙齿全部脱落是由于严重牙周病导致牙齿脱落，并称，经DNA鉴定，8个孩子确系杨姓女子和董男所生。
-中国人不是在爆发了徐州8孩案才知道世上存在这样可怕的事情，网上有人评论：其实国人是知道人中拐卖的，看看他们无论大中小城市，看到幼儿园学校门口接送孩子的人流，就知道家长有多担心孩子的安全问题，只是他们不想讨论也不敢讨论，不想看到不愿意看到那些残酷的现实，十分钟看不到孩子，大人的心就会崩溃，每个人都不会信任大街上的每一个人，有人质疑，拐卖妇女和儿童现象发展到今天这种地步，制度自信的当权者们为什么能自信到容忍中国深处的黑暗。
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+在2月11日的大直播中，郭文贵先生再次重申了中共病毒疫苗灾难将导致的严重后果。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-44.jpg)
+郭先生表示，目前，各国的卫生部门和媒体故意把中共病毒所导致的并发症与中共病毒疫苗的副作用混淆，但此举只会给这些浑水摸鱼者添加更多的罪责而已。在不远的将来，世界不仅要溯源中共病毒的真相，亦会严惩强制中共病毒疫苗接种的政府、媒体及大药厂等机构。最终，中共病毒疫苗灾难必将导致世界政治、军事和经济的大变局。
 
+郭先生也提到，相对的，爆料革命一直在病毒问题上向世界预警，从最初的中共释放生物武器冠状病毒，到后来的中共病毒疫苗灾难。期间，灭共的浪潮也从小声音发展成了大趋势。未来，出于政治的需要，一些持亲共立场的组织必将转变其态度。
 
+为此，郭先生告诫战友称，大家不必担忧世界当下所呈现出来的某些疯狂现象，这些现状只能加速邪恶力量的灭亡。
 
-发稿：雪梨
+文字版原文：[中共病毒疫苗即将引发世界变局](https://gnews.org/zh-hans/2012035/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
-
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
 **更多资讯，更多关注**
+
 [**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
