--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,19 +1,30 @@
 ---
-title: 一名50多岁的日本人在中共国被拘留
+title: 中共国成为法国总统府调查外国渗透的目标
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2018279/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2018360/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1625.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https%3A%2F%2F1.bp.blogspot.com%2F-Mhka2Dc8PJg%2FYTbOnZidp3I%2FAAAAAAAAELA%2FGwamae97kqEc89ThS84IgdzvCQPqhGPLwCLcBGAsYHQ%2Fs1250%2F07sept2021.jpg&amp;imgrefurl=https%3A%2F%2Fwww.chinaaid.org%2F2021%2F09%2Fccp-police-arre)
-去年12月，一名50多岁的日本男子在中国上海被当局扣留。现在仍在拘留中。他被拘留的原因和情况尚不清楚。中共国自2014年实施《反间谍法》以来，当局对外国人的拘押接连不断。
+![法国总统府又遇麻烦？ 疑似府内强奸案媒体曝光- 国际新闻、加拿大新闻| 蒙城时报](https://s.rfi.fr/media/display/d970fb10-210e-11ec-a711-005056a90284/w:1280/p:16x9/bb7e9135bb8a28d2521ff0689b1557732acb0a16.jpg)法国总统府（资料照）
+据法国国际广播电台2月16日报道，法国财政总监察局（IGF）向政府提交了一份受到法国国防机密保护的文件，”在高等教育和科学研究领域保护知识和技术的挑战 “，聚焦中共国势力对法国高等教育机构的渗透。
 
-另外，据日本政府官员透露，一名70多岁的日本男子因在中国从事间谍活动被判处12年监禁，这名男子本月7日在北京一家医院因病死去。该男子2015年在北京被拘留，2018年12月在北京市第二中级人民法院被定罪。
+这份文件是基于对法国各大学校长的约20次采访，调查显示：中共国是最主要的渗透来源国。与中共国国防密切相关的七大院校成为关注焦点，其中最引人注目的是哈尔滨工业大学（HIT）。与中共国电信巨头华为合作紧密的巴黎电信学院以及法国原子能研究中心也受到调查人员的监督。
 
-信息源：[日本人の５０代男性を中国が拘束、理由や経緯は不明…服役中の７０代男性は北京で病死](text=%E6%97%A5%E6%9C%AC%E4%BA%BA%E3%)
+军民联合、学者访问、扩建分校等等，是中共重要的获取情报和知识产权的间谍手段。华为已经被证实是中共的军工企业。法国是最早被中共渗透的国家之一，海航前董事长王健就是在法国被害身亡。中共在法国的势力如果不被打掉，法国不会安宁。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+链接：[https://www.rfi.fr/cn/中国/20220216-法国总统府下令调查外国渗透-中国再度成为目标](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220216-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%BB%9F%E5%BA%9C%E4%B8%8B%E4%BB%A4%E8%B0%83%E6%9F%A5%E5%A4%96%E5%9B%BD%E6%B8%97%E9%80%8F-%E4%B8%AD%E5%9B%BD%E5%86%8D%E5%BA%A6%E6%88%90%E4%B8%BA%E7%9B%AE%E6%A0%87)
+
+编辑：胖丁
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
