--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,26 +1,13 @@
 ---
-title: 加拿大感病毒感染死亡者多数已完全接种疫苗
+title: 樱花头条｜意总理强制疫苗政策激起民愤，热那亚街头爆发反抗游行
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2017987/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2018065/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+撰稿：东京樱花团/樱花传媒
 
-采编/编译撰稿：  自由法兰西
-
-
-![](https://i0.wp.com/dailyexpose.uk/wp-content/uploads/2022/02/image-279.png?resize=639%2C484&amp;ssl=1)图片来源：dailyexpose.uk
-据英国媒体《每日内幕》2月15日报道，加拿大政府最近公布的官方数据表明，该国近期因“新冠病毒”感染而死亡的人数已超过了此前在未大规模接种疫苗的疫情期间，因相同原因而死亡人数的总合。同时，在新增死亡病例中，大多数都是已完全接种疫苗者。
-
-报道称，以今年1月16日至22日当周数据为例，在每10位住院的病毒感染患者中，完全接种者占7例；而每10起死亡病例中，完全接种者也占7成。此外，加拿大各地在今年1月记录的死亡人数，几乎等同于在疫苗接种尚未普及的疫情时期，感染死亡病例数的总合。
-
-所有事实都证明，当局所谓“新冠病毒”疫苗可以降低95%的住院和死亡率是个彻底的欺世谎言。加拿大目前正处于“因全员接种疫苗后而引起病毒大感染”的灾难之中，而政府却正在试图掩盖这些令人震惊的数据，以逃避即将被全民追责的结局。
-
-校对编辑：硫酸羟氯喹64
-
-发文：青青
-
-新闻来源: [https://dailyexpose.uk/2022/02/15/canada-covid-deaths-70-percent-vaccinated/](https://dailyexpose.uk/2022/02/15/canada-covid-deaths-70-percent-vaccinated/)
-
+*编辑：东京樱花团/唯真不破小蜜蜂
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
