--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,31 +1,20 @@
 ---
-title: 新中国联邦新闻、GTV新闻访谈简报&#124;2022年2月16日晚
+title: 雅典娜时报-第207期
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2017977/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2018045/)
 
-作者：香草山翻译部
+#### 《雅典娜时报》汇聚全球新闻时事
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-GNEW-GTV-MOS-LOGO-1.jpg)
+#### 编辑：精灵蓝
+排版：小蚂蚁614
+![圖片](https://media.discordapp.net/attachments/825592691433668612/943675811733598218/155_5.png?width=812&amp;height=1209)![圖片](https://media.discordapp.net/attachments/825592691433668612/943675812253696021/155_6.png?width=812&amp;height=1209)
+*发布：陶子*
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/text-SC-2-1.png)
-校对：Stay文苑
-
-编辑：Stay文苑
-
-发稿：Stay文苑
-
-新闻：[https://gtv.org/broadcast/watch/620da5f3432ae869226e07c3](https://gtv.org/broadcast/watch/620da5f3432ae869226e07c3)
-访谈：[https://gtv.org/broadcast/watch/620dae96432ae869226e0cc8](https://gtv.org/broadcast/watch/620dae96432ae869226e0cc8)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-calendar-1.png)
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
