--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,30 +1,21 @@
 ---
-title: 美指责中共国未履行承诺 将促其改变经贸行为
+title: 樱花FM┃篮球明星坎特再开炮 北京冬奥网络收视少上届43％
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2018240/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018310/)
 
-![资料照：美国贸易代表戴琪](https://gdb.voanews.com/35FC463E-0E71-475E-98AD-EFE9D6CC3A46_w1023_r1_s.jpg)资料照：美国贸易代表戴琪
-据美国之音2月16日报道，美国贸易代表办公室16日向国会提交中共国自2001年加入世贸后有关遵守世贸组织规则的年度评估报告。指责中共国没有履行加入世界贸易组织的承诺，没有向外国竞争者开放市场。报告列举了中共国种种不公平的经贸行为，以及中共国未能履行美中第一阶段贸易协议。
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/i6xFLsaj8cGP1ZhiEYFEROkWfS5jxlWAurHyN4zW8bSmRFPYkig8Q_r9psnmxP8Uqc8pJqPc9fzGdq9plvcZLUriVftK9-KyFRjmCJo3DqSC4V9XywgMhu9oTSovEf68gsHQjPb8)
+2月7日，篮球明星坎特再度于脸书开炮，指称2022北京冬奥的开幕式仅有16Ｍ（1,600万）人观看，并且全时段直播的观众人数都很少。相较于上一次2018年2月的平昌冬奥有28.3M（2,830万）的观看人数，北京冬奥低了43％。
 
-美国前总统川普2020年1月与中共达成第一阶段贸易协议，对中共国价值3600亿美元的进口产品征收关税，中方承诺增加购买美国的农产品。但中共国未能兑现承诺，只完成了承诺的57%。美方表示要寻找新的战略及更新国内贸易手段，对抗中共国由国家主导的非市场政策和经济行为。
+坎特也直接怒呛北京称，“这就是你们把田径比赛变成替邪恶帝国作政治宣传的结果”（This is what you get for turning athletics into propaganda for an EVIL EMPIRE）。
 
-如果用西方遵循的兑现承诺、履行职责等等作为与中共交往的原则，收获的永远是失望。除了偷你的没商量、拿你的不通报，中共说过的话连标点符号都不能信。为了达到目的，中共可以欺骗全世界；为了毁掉契约，中共可以翻脸不认人。答应好的贸易协定没有完成，制定方案，采取措施，打击中共，打疼了中共才会长记性。
+事实上，坎特这几日都未曾停止在脸书挞伐中共，他持续在贴文中表示“人们要我专注在篮球上，不要搞政治，但我从未搞政治，政治和人权存在著差别”。“我们不能在面对不正义时保持沉默，世界需要清醒起来，认知到中国共产党并不是我们的朋友”。坎特过去曾多次就新疆、彭帅等问题批评中共，日前更杠上中共篮球协会主席的姚明，不仅指姚明封锁自己IG的行为很像小孩，还酸其“身高高心眼小”，喊话姚明“停止当中共的傀儡”。
 
-新闻参考链接：[https://www.voachinese.com/a/ustr-says-new-trade-tools-needed-to-fight-china-state-led-trade-20220216/6444187.html](https://www.voachinese.com/a/ustr-says-new-trade-tools-needed-to-fight-china-state-led-trade-20220216/6444187.html)
+文字版原文：[篮球明星坎特再开炮 北京冬奥网络收视少上届43％](https://gnews.org/zh-hans/1968547/)
 
-编辑：胖丁
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
