--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,44 +1,25 @@
 ---
-title: 俄罗斯真的撤军了？美国北约认为恰恰相反
+title: 樱花FM┃澳防长预警：如不对抗中共 澳将失去未来十年
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2018232/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2018309/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-49.jpg)
-（图片来自网络）
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/vbhNTuHBqPYYoPPH9n8naGp7bm-a5q8bQNmgopGnRqF88Y-vu1aaRgB3SC_3YomJ4QSAq2VU-uEPgUx5qK3ow8XW2AOuXZoIdmgvWBWflY0nEc4GRo9bgwJmudhGa7Y_0BIBclvI)
+澳大利亚国防部长皮特·杜登（Peter Dutton）警告，澳大利亚及其盟国必须在南海议题上挺身抵抗中共国，否则将会“失去未来十年”。
 
-近日，战争乌云笼罩在俄乌边境。美国和北约均预测俄乌大战一触即发，美国总统拜登甚至还给出了明确时间表：2月16日。然而，截至目前，俄罗斯不仅尚未入侵乌克兰，反而声称已开始从边境撤军。那么，俄罗斯真的撤军了吗？
+悉尼晨驱报2月7日头版报导，标题为“杜登表示我们必须挺身面对中共国”。杜登说，美国及其盟国过去一度采取“默许”态度，任由中共国在主权有争议的南海航道上兴建人工岛，以及在珊瑚礁上兴建防卫基地。
 
-据《美国之音》2月17日报道，虽然莫斯科声称正在撤走一些部队，但是美国政府和北约负责人星期三（2月16日）却都表示，俄罗斯实际上正在增兵，并且已基本上包围了乌克兰。
+杜登认为，为了确保中共国不会重覆过去十年将南海军事化的做法，澳大利亚及盟国需要向中共国表明立场；他说，假如任由目前情况发展下去，澳洲及盟国将会“失去下一个十年”。
 
-美国国务卿布林肯在美国广播公司（ABC）《早安美国》（Good Morning America）节目中表示，俄罗斯言行不一。目前不仅并没有看到有意义的撤军，相反，俄军部队继续集结在边界，特别是针对乌克兰发动任何新的侵略所需要的先头部队。
+“四方安全对话”（Quad）外长会议将于本周在墨尔本举行，杜登发言与此有关。悉尼晨驱报表示，预料“四方安全对话”外长会议将会讨论美、日、澳、印四国该如何加强防卫及经济发展合作，以便对抗中共国。
 
-白宫发言人莎琪则对记者表示，相信进攻随时都有可能发生，并且在那之前会有一个编造的借口，俄罗斯方面会以此作为发动入侵的口实。
+报导提到，专家认为，为了协助维护印太地区和平，澳洲未来国防预算势必要增加。澳洲去年国防预算为446亿澳元，占澳洲国内生产毛额（GDP）2.1%；对于澳洲军力是否足以协助维护印太地区和平，已引起防卫专家的担心。
 
-美国国务院发言人普赖斯也指出，目前在乌克兰边界的俄军是更多了而不是更少了。并且更加令人关切的是，俄军正在进入作战位置。普赖斯还表示，美国国务院已就乌克兰事务建立了一个特别工作组，以便在俄罗斯军事威胁乌克兰之际迅速处理事态的发展。
+文字版原文：[澳防长预警：如不对抗中共 澳将失去未来十年](https://gnews.org/zh-hans/1968636/)
 
-位于波兰的通过卫星图像追踪军事动向的独立防务咨询公司“罗尚咨询”（Rochan Consulting）也在一份报告中指出，在莫斯科宣布将一些部队调回原驻地后，却有更多的俄罗斯军用列车抵达了乌克兰附近。没有发现减少兵力的迹象，而事实正好相反。
-
-爱沙尼亚情报主管马兰甚至称，俄罗斯将对乌克兰发动有限进攻，包括导弹轰炸和占领关键地带。
-
-北约秘书长斯托尔滕贝格在与北约30个成员国的国防部长于布鲁塞尔召开会议时表示，虽然从莫斯科传来有关准备好继续外交努力的信号，但到目前为止，并没有在实地看到有任何减缓，相反俄罗斯似乎在继续增兵。
-
-北约已于星期三下令指挥官草拟在北约联盟东南侧组建新战斗群的计划。斯托尔滕贝格表示，局势已经表明，欧洲正面临一场安全危机，并且将可能成为一种新常态。
-
-美国总统拜登星期二在白宫发表简短讲话时警告称，“入侵的可能性仍然明显”。他还表示，莫斯科如果发动入侵将导致“难以置信的人类痛苦”。
-
-虽然美国和北约等国均认为战争已迫在眉睫，但俄罗斯方面却对此看法不屑一顾。俄罗斯驻欧盟大使奇佐夫在面对德国《世界报》（Welt）提问“俄罗斯是否会在星期三发动进攻时”时调侃称：“欧洲很少在星期三爆发战争。”
-
-克里姆林宫发言人佩斯科夫也对记者表示，俄罗斯总统普京甚至就此开玩笑询问“宣布发动战争的具体时间是什么时候”。佩斯科夫表示，普京愿意谈判，并且认为拜登继续外交对话的意愿是一个积极迹象。
-
-美国近期提出了包括“新的军控措施、新的透明措施、新的战略稳定措施”等多项建议，以解决俄罗斯和北约的安全危机。普京在星期二时表示，他已做好了与美国及其北约盟国就导弹部署和在欧洲军演重新谈判的准备。
-
-[https://www.voachinese.com/a/us-nato-russia-boosting-not-de-escalating-ukraine-military-presence-20220216/6444992.html?utm\_source=twitter&utm\_medium=social&utm\_campaign=dlvr.it](https://www.voachinese.com/a/us-nato-russia-boosting-not-de-escalating-ukraine-military-presence-20220216/6444992.html?utm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dlvr.it)
-
-* * *
-
-
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
